@@ -1,36 +1,25 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.ingest.common;
 
-import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.dissect.DissectException;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.Processor;
 import org.elasticsearch.ingest.RandomDocumentPicks;
 import org.elasticsearch.test.ESTestCase;
-import org.hamcrest.CoreMatchers;
 
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.Map;
 
 import static org.elasticsearch.ingest.IngestDocumentMatcher.assertIngestDocument;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 
 /**
@@ -40,9 +29,8 @@ import static org.hamcrest.Matchers.equalTo;
 public class DissectProcessorTests extends ESTestCase {
 
     public void testMatch() {
-        IngestDocument ingestDocument = new IngestDocument("_index", "_id", null, null, null,
-            Collections.singletonMap("message", "foo,bar,baz"));
-        DissectProcessor dissectProcessor = new DissectProcessor("", "message", "%{a},%{b},%{c}", "", true);
+        IngestDocument ingestDocument = new IngestDocument("_index", "_id", 1, null, null, Map.of("message", "foo,bar,baz"));
+        DissectProcessor dissectProcessor = new DissectProcessor("", null, "message", "%{a},%{b},%{c}", "", true);
         dissectProcessor.execute(ingestDocument);
         assertThat(ingestDocument.getFieldValue("a", String.class), equalTo("foo"));
         assertThat(ingestDocument.getFieldValue("b", String.class), equalTo("bar"));
@@ -50,13 +38,16 @@ public class DissectProcessorTests extends ESTestCase {
     }
 
     public void testMatchOverwrite() {
-        IngestDocument ingestDocument = new IngestDocument("_index", "_id", null, null, null,
-            MapBuilder.<String, Object>newMapBuilder()
-                .put("message", "foo,bar,baz")
-                .put("a", "willgetstompped")
-                .map());
+        IngestDocument ingestDocument = new IngestDocument(
+            "_index",
+            "_id",
+            1,
+            null,
+            null,
+            Map.of("message", "foo,bar,baz", "a", "willgetstompped")
+        );
         assertThat(ingestDocument.getFieldValue("a", String.class), equalTo("willgetstompped"));
-        DissectProcessor dissectProcessor = new DissectProcessor("", "message", "%{a},%{b},%{c}", "", true);
+        DissectProcessor dissectProcessor = new DissectProcessor("", null, "message", "%{a},%{b},%{c}", "", true);
         dissectProcessor.execute(ingestDocument);
         assertThat(ingestDocument.getFieldValue("a", String.class), equalTo("foo"));
         assertThat(ingestDocument.getFieldValue("b", String.class), equalTo("bar"));
@@ -64,10 +55,22 @@ public class DissectProcessorTests extends ESTestCase {
     }
 
     public void testAdvancedMatch() {
-        IngestDocument ingestDocument = new IngestDocument("_index", "_id", null, null, null,
-            Collections.singletonMap("message", "foo       bar,,,,,,,baz nope:notagain 😊 🐇 🙃"));
-        DissectProcessor dissectProcessor =
-            new DissectProcessor("", "message", "%{a->} %{*b->},%{&b} %{}:%{?skipme} %{+smile/2} 🐇 %{+smile/1}", "::::", true);
+        IngestDocument ingestDocument = new IngestDocument(
+            "_index",
+            "_id",
+            1,
+            null,
+            null,
+            Map.of("message", "foo       bar,,,,,,,baz nope:notagain 😊 🐇 🙃")
+        );
+        DissectProcessor dissectProcessor = new DissectProcessor(
+            "",
+            null,
+            "message",
+            "%{a->} %{*b->},%{&b} %{}:%{?skipme} %{+smile/2} 🐇 %{+smile/1}",
+            "::::",
+            true
+        );
         dissectProcessor.execute(ingestDocument);
         assertThat(ingestDocument.getFieldValue("a", String.class), equalTo("foo"));
         assertThat(ingestDocument.getFieldValue("bar", String.class), equalTo("baz"));
@@ -77,16 +80,15 @@ public class DissectProcessorTests extends ESTestCase {
     }
 
     public void testMiss() {
-        IngestDocument ingestDocument = new IngestDocument("_index", "_id", null, null, null,
-            Collections.singletonMap("message", "foo:bar,baz"));
-        DissectProcessor dissectProcessor = new DissectProcessor("", "message", "%{a},%{b},%{c}", "", true);
+        IngestDocument ingestDocument = new IngestDocument("_index", "_id", 1, null, null, Map.of("message", "foo:bar,baz"));
+        DissectProcessor dissectProcessor = new DissectProcessor("", null, "message", "%{a},%{b},%{c}", "", true);
         DissectException e = expectThrows(DissectException.class, () -> dissectProcessor.execute(ingestDocument));
-        assertThat(e.getMessage(), CoreMatchers.containsString("Unable to find match for dissect pattern"));
+        assertThat(e.getMessage(), containsString("Unable to find match for dissect pattern"));
     }
 
     public void testNonStringValueWithIgnoreMissing() {
         String fieldName = RandomDocumentPicks.randomFieldName(random());
-        Processor processor = new DissectProcessor("", fieldName, "%{a},%{b},%{c}", "", true);
+        Processor processor = new DissectProcessor("", null, fieldName, "%{a},%{b},%{c}", "", true);
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>());
         ingestDocument.setFieldValue(fieldName, randomInt());
         Exception e = expectThrows(IllegalArgumentException.class, () -> processor.execute(ingestDocument));
@@ -95,9 +97,11 @@ public class DissectProcessorTests extends ESTestCase {
 
     public void testNullValueWithIgnoreMissing() throws Exception {
         String fieldName = RandomDocumentPicks.randomFieldName(random());
-        Processor processor = new DissectProcessor("", fieldName, "%{a},%{b},%{c}", "", true);
-        IngestDocument originalIngestDocument = RandomDocumentPicks
-            .randomIngestDocument(random(), Collections.singletonMap(fieldName, null));
+        Processor processor = new DissectProcessor("", null, fieldName, "%{a},%{b},%{c}", "", true);
+        IngestDocument originalIngestDocument = RandomDocumentPicks.randomIngestDocument(
+            random(),
+            Collections.singletonMap(fieldName, null)
+        );
         IngestDocument ingestDocument = new IngestDocument(originalIngestDocument);
         processor.execute(ingestDocument);
         assertIngestDocument(originalIngestDocument, ingestDocument);
@@ -105,9 +109,11 @@ public class DissectProcessorTests extends ESTestCase {
 
     public void testNullValueWithOutIgnoreMissing() {
         String fieldName = RandomDocumentPicks.randomFieldName(random());
-        Processor processor = new DissectProcessor("", fieldName, "%{a},%{b},%{c}", "", false);
-        IngestDocument originalIngestDocument = RandomDocumentPicks
-            .randomIngestDocument(random(), Collections.singletonMap(fieldName, null));
+        Processor processor = new DissectProcessor("", null, fieldName, "%{a},%{b},%{c}", "", false);
+        IngestDocument originalIngestDocument = RandomDocumentPicks.randomIngestDocument(
+            random(),
+            Collections.singletonMap(fieldName, null)
+        );
         IngestDocument ingestDocument = new IngestDocument(originalIngestDocument);
         expectThrows(IllegalArgumentException.class, () -> processor.execute(ingestDocument));
     }
