@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.ingest.common;
@@ -23,10 +12,12 @@ import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.Processor;
 import org.elasticsearch.ingest.RandomDocumentPicks;
 import org.elasticsearch.ingest.TestTemplateService;
+import org.elasticsearch.script.TemplateScript;
 import org.elasticsearch.test.ESTestCase;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.Matchers.containsString;
@@ -37,8 +28,13 @@ public class RemoveProcessorTests extends ESTestCase {
     public void testRemoveFields() throws Exception {
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random());
         String field = RandomDocumentPicks.randomExistingFieldName(random(), ingestDocument);
-        Processor processor = new RemoveProcessor(randomAlphaOfLength(10),
-            Collections.singletonList(new TestTemplateService.MockTemplateScript.Factory(field)), false);
+        Processor processor = new RemoveProcessor(
+            randomAlphaOfLength(10),
+            null,
+            List.of(new TestTemplateService.MockTemplateScript.Factory(field)),
+            List.of(),
+            false
+        );
         processor.execute(ingestDocument);
         assertThat(ingestDocument.hasField(field), equalTo(false));
     }
@@ -49,11 +45,11 @@ public class RemoveProcessorTests extends ESTestCase {
         Map<String, Object> config = new HashMap<>();
         config.put("field", fieldName);
         String processorTag = randomAlphaOfLength(10);
-        Processor processor = new RemoveProcessor.Factory(TestTemplateService.instance()).create(null, processorTag, config);
+        Processor processor = new RemoveProcessor.Factory(TestTemplateService.instance()).create(null, processorTag, null, config);
         try {
             processor.execute(ingestDocument);
             fail("remove field should have failed");
-        } catch(IllegalArgumentException e) {
+        } catch (IllegalArgumentException e) {
             assertThat(e.getMessage(), containsString("not present as part of path [" + fieldName + "]"));
         }
     }
@@ -65,7 +61,100 @@ public class RemoveProcessorTests extends ESTestCase {
         config.put("field", fieldName);
         config.put("ignore_missing", true);
         String processorTag = randomAlphaOfLength(10);
-        Processor processor = new RemoveProcessor.Factory(TestTemplateService.instance()).create(null, processorTag, config);
+        Processor processor = new RemoveProcessor.Factory(TestTemplateService.instance()).create(null, processorTag, null, config);
         processor.execute(ingestDocument);
     }
+
+    public void testKeepFields() throws Exception {
+        Map<String, Object> address = new HashMap<>();
+        address.put("street", "Ipiranga Street");
+        address.put("number", 123);
+
+        Map<String, Object> source = new HashMap<>();
+        source.put("name", "eric clapton");
+        source.put("age", 55);
+        source.put("address", address);
+
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), source);
+
+        List<TemplateScript.Factory> fieldsToKeep = List.of(
+            new TestTemplateService.MockTemplateScript.Factory("name"),
+            new TestTemplateService.MockTemplateScript.Factory("address.street")
+        );
+
+        Processor processor = new RemoveProcessor(randomAlphaOfLength(10), null, new ArrayList<>(), fieldsToKeep, false);
+        processor.execute(ingestDocument);
+        assertTrue(ingestDocument.hasField("name"));
+        assertTrue(ingestDocument.hasField("address"));
+        assertTrue(ingestDocument.hasField("address.street"));
+        assertFalse(ingestDocument.hasField("age"));
+        assertFalse(ingestDocument.hasField("address.number"));
+        assertTrue(ingestDocument.hasField("_index"));
+        assertTrue(ingestDocument.hasField("_version"));
+        assertTrue(ingestDocument.hasField("_id"));
+        assertTrue(ingestDocument.hasField("_version_type"));
+    }
+
+    public void testShouldKeep(String a, String b) {
+        Map<String, Object> address = new HashMap<>();
+        address.put("street", "Ipiranga Street");
+        address.put("number", 123);
+
+        Map<String, Object> source = new HashMap<>();
+        source.put("name", "eric clapton");
+        source.put("address", address);
+
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), source);
+
+        assertTrue(RemoveProcessor.shouldKeep("name", List.of(new TestTemplateService.MockTemplateScript.Factory("name")), ingestDocument));
+
+        assertTrue(RemoveProcessor.shouldKeep("age", List.of(new TestTemplateService.MockTemplateScript.Factory("age")), ingestDocument));
+
+        assertFalse(RemoveProcessor.shouldKeep("name", List.of(new TestTemplateService.MockTemplateScript.Factory("age")), ingestDocument));
+
+        assertTrue(
+            RemoveProcessor.shouldKeep(
+                "address",
+                List.of(new TestTemplateService.MockTemplateScript.Factory("address.street")),
+                ingestDocument
+            )
+        );
+
+        assertTrue(
+            RemoveProcessor.shouldKeep(
+                "address",
+                List.of(new TestTemplateService.MockTemplateScript.Factory("address.number")),
+                ingestDocument
+            )
+        );
+
+        assertTrue(
+            RemoveProcessor.shouldKeep(
+                "address.street",
+                List.of(new TestTemplateService.MockTemplateScript.Factory("address")),
+                ingestDocument
+            )
+        );
+
+        assertTrue(
+            RemoveProcessor.shouldKeep(
+                "address.number",
+                List.of(new TestTemplateService.MockTemplateScript.Factory("address")),
+                ingestDocument
+            )
+        );
+
+        assertTrue(
+            RemoveProcessor.shouldKeep("address", List.of(new TestTemplateService.MockTemplateScript.Factory("address")), ingestDocument)
+        );
+
+        assertFalse(
+            RemoveProcessor.shouldKeep(
+                "address.street",
+                List.of(new TestTemplateService.MockTemplateScript.Factory("address.number")),
+                ingestDocument
+            )
+        );
+    }
+
 }
