@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.cluster.coordination;
@@ -22,15 +11,14 @@ package org.elasticsearch.cluster.coordination;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.action.ActionListener;
+import org.elasticsearch.action.support.SubscribableListener;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.coordination.ClusterStatePublisher.AckListener;
 import org.elasticsearch.cluster.node.DiscoveryNode;
-import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.transport.TransportException;
-import org.elasticsearch.transport.TransportResponse;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -49,7 +37,7 @@ public abstract class Publication {
     private final LongSupplier currentTimeSupplier;
     private final long startTime;
 
-    private Optional<ApplyCommitRequest> applyCommitRequest; // set when state is committed
+    private Optional<SubscribableListener<ApplyCommitRequest>> applyCommitRequest; // set when state is committed
     private boolean isCompleted; // set when publication is completed
     private boolean cancelled; // set when publication is cancelled
 
@@ -98,7 +86,7 @@ public abstract class Publication {
         return publicationTargets.stream()
             .filter(PublicationTarget::isSuccessfullyCompleted)
             .map(PublicationTarget::getDiscoveryNode)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public boolean isCommitted() {
@@ -134,7 +122,7 @@ public abstract class Publication {
     }
 
     // For assertions only: verify that this invariant holds
-    private boolean publicationCompletedIffAllTargetsInactiveOrCancelled() {
+    boolean publicationCompletedIffAllTargetsInactiveOrCancelled() {
         if (cancelled == false) {
             for (final PublicationTarget target : publicationTargets) {
                 if (target.isActive()) {
@@ -166,43 +154,71 @@ public abstract class Publication {
         }
 
         if (isPublishQuorum(possiblySuccessfulNodes) == false) {
-            logger.debug("onPossibleCommitFailure: non-failed nodes {} do not form a quorum, so {} cannot succeed",
-                possiblySuccessfulNodes, this);
+            logger.debug(
+                "onPossibleCommitFailure: non-failed nodes {} do not form a quorum, so {} cannot succeed",
+                possiblySuccessfulNodes,
+                this
+            );
             Exception e = new FailedToCommitClusterStateException("non-failed nodes do not form a quorum");
             publicationTargets.stream().filter(PublicationTarget::isActive).forEach(pt -> pt.setFailed(e));
             onPossibleCompletion();
         }
     }
 
+    protected final long getStartTime() {
+        return startTime;
+    }
+
     protected abstract void onCompletion(boolean committed);
 
     protected abstract boolean isPublishQuorum(CoordinationState.VoteCollection votes);
 
-    protected abstract Optional<ApplyCommitRequest> handlePublishResponse(DiscoveryNode sourceNode, PublishResponse publishResponse);
+    protected abstract Optional<SubscribableListener<ApplyCommitRequest>> handlePublishResponse(
+        DiscoveryNode sourceNode,
+        PublishResponse publishResponse
+    );
 
     protected abstract void onJoin(Join join);
 
     protected abstract void onMissingJoin(DiscoveryNode discoveryNode);
 
-    protected abstract void sendPublishRequest(DiscoveryNode destination, PublishRequest publishRequest,
-                                               ActionListener<PublishWithJoinResponse> responseActionListener);
+    protected abstract void sendPublishRequest(
+        DiscoveryNode destination,
+        PublishRequest publishRequest,
+        ActionListener<PublishWithJoinResponse> responseActionListener
+    );
 
-    protected abstract void sendApplyCommit(DiscoveryNode destination, ApplyCommitRequest applyCommit,
-                                            ActionListener<TransportResponse.Empty> responseActionListener);
+    protected abstract void sendApplyCommit(
+        DiscoveryNode destination,
+        ApplyCommitRequest applyCommit,
+        ActionListener<Void> responseActionListener
+    );
+
+    protected abstract <T> ActionListener<T> wrapListener(ActionListener<T> listener);
 
     @Override
     public String toString() {
-        return "Publication{term=" + publishRequest.getAcceptedState().term() +
-            ", version=" + publishRequest.getAcceptedState().version() + '}';
+        return "Publication{term="
+            + publishRequest.getAcceptedState().term()
+            + ", version="
+            + publishRequest.getAcceptedState().version()
+            + '}';
     }
 
     void logIncompleteNodes(Level level) {
-        final String message = publicationTargets.stream().filter(PublicationTarget::isActive).map(publicationTarget ->
-            publicationTarget.getDiscoveryNode() + " [" + publicationTarget.getState() + "]").collect(Collectors.joining(", "));
+        final String message = publicationTargets.stream()
+            .filter(PublicationTarget::isActive)
+            .map(publicationTarget -> publicationTarget.getDiscoveryNode() + " [" + publicationTarget.getState() + "]")
+            .collect(Collectors.joining(", "));
         if (message.isEmpty() == false) {
             final TimeValue elapsedTime = TimeValue.timeValueMillis(currentTimeSupplier.getAsLong() - startTime);
-            logger.log(level, "after [{}] publication of cluster state version [{}] is still waiting for {}", elapsedTime,
-                publishRequest.getAcceptedState().version(), message);
+            logger.log(
+                level,
+                "after [{}] publication of cluster state version [{}] is still waiting for {}",
+                elapsedTime,
+                publishRequest.getAcceptedState().version(),
+                message
+            );
         }
     }
 
@@ -230,11 +246,7 @@ public abstract class Publication {
 
         @Override
         public String toString() {
-            return "PublicationTarget{" +
-                "discoveryNode=" + discoveryNode +
-                ", state=" + state +
-                ", ackIsPending=" + ackIsPending +
-                '}';
+            return "PublicationTarget{" + "discoveryNode=" + discoveryNode + ", state=" + state + ", ackIsPending=" + ackIsPending + '}';
         }
 
         void sendPublishRequest() {
@@ -244,7 +256,6 @@ public abstract class Publication {
             assert state == PublicationTargetState.NOT_STARTED : state + " -> " + PublicationTargetState.SENT_PUBLISH_REQUEST;
             state = PublicationTargetState.SENT_PUBLISH_REQUEST;
             Publication.this.sendPublishRequest(discoveryNode, publishRequest, new PublishResponseHandler());
-            // TODO Can this ^ fail with an exception? Target should be failed if so.
             assert publicationCompletedIffAllTargetsInactiveOrCancelled();
         }
 
@@ -259,7 +270,8 @@ public abstract class Publication {
                         assert applyCommitRequest.isPresent() == false;
                         applyCommitRequest = Optional.of(applyCommit);
                         ackListener.onCommit(TimeValue.timeValueMillis(currentTimeSupplier.getAsLong() - startTime));
-                        publicationTargets.stream().filter(PublicationTarget::isWaitingForQuorum)
+                        publicationTargets.stream()
+                            .filter(PublicationTarget::isWaitingForQuorum)
                             .forEach(PublicationTarget::sendApplyCommit);
                     });
                 } catch (Exception e) {
@@ -273,7 +285,19 @@ public abstract class Publication {
             assert state == PublicationTargetState.WAITING_FOR_QUORUM : state + " -> " + PublicationTargetState.SENT_APPLY_COMMIT;
             state = PublicationTargetState.SENT_APPLY_COMMIT;
             assert applyCommitRequest.isPresent();
-            Publication.this.sendApplyCommit(discoveryNode, applyCommitRequest.get(), new ApplyCommitResponseHandler());
+            applyCommitRequest.get().addListener(wrapListener(new ActionListener<>() {
+                @Override
+                public void onResponse(ApplyCommitRequest applyCommitRequest) {
+                    Publication.this.sendApplyCommit(discoveryNode, applyCommitRequest, new ApplyCommitResponseHandler());
+                    assert publicationCompletedIffAllTargetsInactiveOrCancelled();
+                }
+
+                @Override
+                public void onFailure(Exception e) {
+                    setFailed(e);
+                    onPossibleCommitFailure();
+                }
+            }));
             assert publicationCompletedIffAllTargetsInactiveOrCancelled();
         }
 
@@ -309,8 +333,7 @@ public abstract class Publication {
         }
 
         boolean isActive() {
-            return state != PublicationTargetState.FAILED
-                && state != PublicationTargetState.APPLIED_COMMIT;
+            return state != PublicationTargetState.FAILED && state != PublicationTargetState.APPLIED_COMMIT;
         }
 
         boolean isSuccessfullyCompleted() {
@@ -343,8 +366,8 @@ public abstract class Publication {
 
                 if (response.getJoin().isPresent()) {
                     final Join join = response.getJoin().get();
-                    assert discoveryNode.equals(join.getSourceNode());
-                    assert join.getTerm() == response.getPublishResponse().getTerm() : response;
+                    assert discoveryNode.equals(join.votingNode());
+                    assert join.term() == response.getPublishResponse().getTerm() : response;
                     logger.trace("handling join within publish response: {}", join);
                     onJoin(join);
                 } else {
@@ -361,24 +384,32 @@ public abstract class Publication {
 
             @Override
             public void onFailure(Exception e) {
-                assert e instanceof TransportException;
-                final TransportException exp = (TransportException) e;
-                logger.debug(() -> new ParameterizedMessage("PublishResponseHandler: [{}] failed", discoveryNode), exp);
-                assert ((TransportException) e).getRootCause() instanceof Exception;
-                setFailed((Exception) exp.getRootCause());
+                logger.debug(() -> "PublishResponseHandler: [" + discoveryNode + "] failed", e);
+                setFailed(getRootCause(e));
                 onPossibleCommitFailure();
                 assert publicationCompletedIffAllTargetsInactiveOrCancelled();
             }
 
         }
 
-        private class ApplyCommitResponseHandler implements ActionListener<TransportResponse.Empty> {
+        private Exception getRootCause(Exception e) {
+            if (e instanceof final TransportException transportException) {
+                if (transportException.getRootCause() instanceof final Exception rootCause) {
+                    return rootCause;
+                } else {
+                    assert false : e;
+                    logger.error(() -> "PublishResponseHandler: [" + discoveryNode + "] failed", e);
+                }
+            }
+            return e;
+        }
+
+        private class ApplyCommitResponseHandler implements ActionListener<Void> {
 
             @Override
-            public void onResponse(TransportResponse.Empty ignored) {
+            public void onResponse(Void ignored) {
                 if (isFailed()) {
-                    logger.debug("ApplyCommitResponseHandler.handleResponse: already failed, ignoring response from [{}]",
-                        discoveryNode);
+                    logger.debug("ApplyCommitResponseHandler.handleResponse: already failed, ignoring response from [{}]", discoveryNode);
                     return;
                 }
                 setAppliedCommit();
@@ -390,7 +421,7 @@ public abstract class Publication {
             public void onFailure(Exception e) {
                 assert e instanceof TransportException;
                 final TransportException exp = (TransportException) e;
-                logger.debug(() -> new ParameterizedMessage("ApplyCommitResponseHandler: [{}] failed", discoveryNode), exp);
+                logger.debug(() -> "ApplyCommitResponseHandler: [" + discoveryNode + "] failed", exp);
                 assert ((TransportException) e).getRootCause() instanceof Exception;
                 setFailed((Exception) exp.getRootCause());
                 onPossibleCompletion();
