@@ -1,33 +1,21 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.common.xcontent;
 
 import org.apache.lucene.search.spell.LevenshteinDistance;
 import org.apache.lucene.util.CollectionUtil;
-import org.elasticsearch.common.collect.Tuple;
+import org.elasticsearch.core.Tuple;
+import org.elasticsearch.xcontent.ErrorOnUnknown;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-
-import static java.util.stream.Collectors.toList;
 
 public class SuggestingErrorOnUnknown implements ErrorOnUnknown {
     @Override
@@ -42,7 +30,7 @@ public class SuggestingErrorOnUnknown implements ErrorOnUnknown {
 
     /**
      * Builds suggestions for an unknown field, returning an empty string if there
-     * aren't any suggestions or " did you mean " and then the list of suggestions. 
+     * aren't any suggestions or " did you mean " and then the list of suggestions.
      */
     public static String suggest(String unknownField, Iterable<String> candidates) {
         // TODO it'd be nice to combine this with BaseRestHandler's implementation.
@@ -65,7 +53,7 @@ public class SuggestingErrorOnUnknown implements ErrorOnUnknown {
             }
             return a.v2().compareTo(b.v2());
         });
-        List<String> keys = scored.stream().map(Tuple::v2).collect(toList());
+        List<String> keys = scored.stream().map(Tuple::v2).toList();
         StringBuilder builder = new StringBuilder(" did you mean ");
         if (keys.size() == 1) {
             builder.append("[").append(keys.get(0)).append("]");
