@@ -1,52 +1,34 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.action.admin.indices.close;
 
 import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.Version;
 import org.elasticsearch.action.NoShardAvailableActionException;
 import org.elasticsearch.action.admin.indices.close.CloseIndexResponse.IndexResult;
-import org.elasticsearch.action.support.master.AcknowledgedResponse;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.io.stream.BytesStreamOutput;
-import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentType;
+import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.test.AbstractWireSerializingTestCase;
 import org.elasticsearch.transport.ActionNotFoundTransportException;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentType;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.elasticsearch.test.VersionUtils.getPreviousVersion;
-import static org.elasticsearch.test.VersionUtils.randomVersionBetween;
-import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
@@ -58,6 +40,11 @@ public class CloseIndexResponseTests extends AbstractWireSerializingTestCase<Clo
     @Override
     protected CloseIndexResponse createTestInstance() {
         return randomResponse();
+    }
+
+    @Override
+    protected CloseIndexResponse mutateInstance(CloseIndexResponse instance) {
+        return null;// TODO implement https://github.com/elastic/elasticsearch/issues/25929
     }
 
     @Override
@@ -81,8 +68,10 @@ public class CloseIndexResponseTests extends AbstractWireSerializingTestCase<Clo
             if (expectedIndexResult.hasFailures() == false) {
                 assertThat(actualIndexResult.getException(), nullValue());
                 if (actualIndexResult.getShards() != null) {
-                    assertThat(Arrays.stream(actualIndexResult.getShards())
-                        .allMatch(shardResult -> shardResult.hasFailures() == false), is(true));
+                    assertThat(
+                        Arrays.stream(actualIndexResult.getShards()).allMatch(shardResult -> shardResult.hasFailures() == false),
+                        is(true)
+                    );
                 }
             }
 
@@ -118,12 +107,14 @@ public class CloseIndexResponseTests extends AbstractWireSerializingTestCase<Clo
                             // Serialising and deserialising an exception seems to remove the "java.base/" part from the stack trace
                             // in the `reason` property, so we don't compare it directly. Instead, check that the first lines match,
                             // and that the stack trace has the same number of lines.
-                            List<String> expectedReasonLines = expectedFailure.reason().lines().collect(Collectors.toList());
-                            List<String> actualReasonLines = actualFailure.reason().lines().collect(Collectors.toList());
+                            List<String> expectedReasonLines = expectedFailure.reason().lines().toList();
+                            List<String> actualReasonLines = actualFailure.reason().lines().toList();
                             assertThat(actualReasonLines.get(0), equalTo(expectedReasonLines.get(0)));
-                            assertThat("Exceptions have a different number of lines",
+                            assertThat(
+                                "Exceptions have a different number of lines",
                                 actualReasonLines,
-                                hasSize(expectedReasonLines.size()));
+                                hasSize(expectedReasonLines.size())
+                            );
 
                             assertThat(actualFailure.getCause().getMessage(), equalTo(expectedFailure.getCause().getMessage()));
                             assertThat(actualFailure.getCause().getClass(), equalTo(expectedFailure.getCause().getClass()));
@@ -152,70 +143,44 @@ public class CloseIndexResponseTests extends AbstractWireSerializingTestCase<Clo
 
         Index index = new Index("test", "uuid");
         IndexResult indexResult = new CloseIndexResponse.IndexResult(index);
-        CloseIndexResponse closeIndexResponse = new CloseIndexResponse(true, true,
-                Collections.singletonList(indexResult));
-        assertEquals("{\"acknowledged\":true,\"shards_acknowledged\":true,\"indices\":{\"test\":{\"closed\":true}}}",
-                Strings.toString(closeIndexResponse));
+        CloseIndexResponse closeIndexResponse = new CloseIndexResponse(true, true, Collections.singletonList(indexResult));
+        assertEquals("""
+            {"acknowledged":true,"shards_acknowledged":true,"indices":{"test":{"closed":true}}}""", Strings.toString(closeIndexResponse));
 
         CloseIndexResponse.ShardResult[] shards = new CloseIndexResponse.ShardResult[1];
-        shards[0] = new CloseIndexResponse.ShardResult(0, new CloseIndexResponse.ShardResult.Failure[] {
-                new CloseIndexResponse.ShardResult.Failure("test", 0, new ActionNotFoundTransportException("test"), "nodeId") });
+        shards[0] = new CloseIndexResponse.ShardResult(
+            0,
+            new CloseIndexResponse.ShardResult.Failure[] {
+                new CloseIndexResponse.ShardResult.Failure("test", 0, new ActionNotFoundTransportException("test"), "nodeId") }
+        );
         indexResult = new CloseIndexResponse.IndexResult(index, shards);
-        closeIndexResponse = new CloseIndexResponse(true, true,
-                Collections.singletonList(indexResult));
-        assertEquals("{\"acknowledged\":true,\"shards_acknowledged\":true,"
-                + "\"indices\":{\"test\":{\"closed\":false,\"failedShards\":{\"0\":{"
-                + "\"failures\":[{\"node\":\"nodeId\",\"shard\":0,\"index\":\"test\",\"status\":\"INTERNAL_SERVER_ERROR\","
-                + "\"reason\":{\"type\":\"action_not_found_transport_exception\","
-                + "\"reason\":\"No handler for action [test]\"}}]}}}}}",
-                Strings.toString(closeIndexResponse));
-    }
-
-    public void testBwcSerialization() throws Exception {
-        {
-            final CloseIndexResponse response = randomResponse();
-            try (BytesStreamOutput out = new BytesStreamOutput()) {
-                out.setVersion(randomVersionBetween(random(), Version.V_7_0_0, getPreviousVersion(Version.V_7_2_0)));
-                response.writeTo(out);
-
-                try (StreamInput in = out.bytes().streamInput()) {
-                    in.setVersion(out.getVersion());
-                    final AcknowledgedResponse deserializedResponse = new AcknowledgedResponse(in);
-                    assertThat(deserializedResponse.isAcknowledged(), equalTo(response.isAcknowledged()));
-                }
-            }
-        }
-        {
-            final AcknowledgedResponse response = new AcknowledgedResponse(randomBoolean());
-            try (BytesStreamOutput out = new BytesStreamOutput()) {
-                response.writeTo(out);
-
-                try (StreamInput in = out.bytes().streamInput()) {
-                    in.setVersion(randomVersionBetween(random(), Version.V_7_0_0, getPreviousVersion(Version.V_7_2_0)));
-                    final CloseIndexResponse deserializedResponse = new CloseIndexResponse(in);
-                    assertThat(deserializedResponse.isAcknowledged(), equalTo(response.isAcknowledged()));
-                }
-            }
-        }
-        {
-            final CloseIndexResponse response = randomResponse();
-            try (BytesStreamOutput out = new BytesStreamOutput()) {
-                Version version = randomVersionBetween(random(), Version.V_7_2_0, Version.CURRENT);
-                out.setVersion(version);
-                response.writeTo(out);
-                try (StreamInput in = out.bytes().streamInput()) {
-                    in.setVersion(version);
-                    final CloseIndexResponse deserializedResponse = new CloseIndexResponse(in);
-                    assertThat(deserializedResponse.isAcknowledged(), equalTo(response.isAcknowledged()));
-                    assertThat(deserializedResponse.isShardsAcknowledged(), equalTo(response.isShardsAcknowledged()));
-                    if (version.onOrAfter(Version.V_7_3_0)) {
-                        assertThat(deserializedResponse.getIndices(), hasSize(response.getIndices().size()));
-                    } else {
-                        assertThat(deserializedResponse.getIndices(), empty());
+        closeIndexResponse = new CloseIndexResponse(true, true, Collections.singletonList(indexResult));
+        assertEquals(XContentHelper.stripWhitespace("""
+            {
+              "acknowledged": true,
+              "shards_acknowledged": true,
+              "indices": {
+                "test": {
+                  "closed": false,
+                  "failedShards": {
+                    "0": {
+                      "failures": [
+                        {
+                          "node": "nodeId",
+                          "shard": 0,
+                          "index": "test",
+                          "status": "INTERNAL_SERVER_ERROR",
+                          "reason": {
+                            "type": "action_not_found_transport_exception",
+                            "reason": "No handler for action [test]"
+                          }
+                        }
+                      ]
                     }
+                  }
                 }
-            }
-        }
+              }
+            }"""), Strings.toString(closeIndexResponse));
     }
 
     private CloseIndexResponse randomResponse() {
@@ -262,6 +227,7 @@ public class CloseIndexResponseTests extends AbstractWireSerializingTestCase<Clo
         return randomFrom(
             new IndexNotFoundException(index),
             new ActionNotFoundTransportException("test"),
-            new NoShardAvailableActionException(new ShardId(index, id)));
+            new NoShardAvailableActionException(new ShardId(index, id))
+        );
     }
 }
