@@ -1,27 +1,16 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.action.support.replication;
 
 import org.apache.lucene.store.AlreadyClosedException;
 import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.UnavailableShardsException;
 import org.elasticsearch.action.admin.indices.close.CloseIndexRequest;
@@ -31,7 +20,7 @@ import org.elasticsearch.action.support.ActionTestUtils;
 import org.elasticsearch.action.support.ActiveShardCount;
 import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.action.support.replication.ReplicationOperation.ReplicaResponse;
-import org.elasticsearch.client.transport.NoNodeAvailableException;
+import org.elasticsearch.client.internal.transport.NoNodeAvailableException;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.action.shard.ShardStateAction;
@@ -39,8 +28,8 @@ import org.elasticsearch.cluster.block.ClusterBlock;
 import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
 import org.elasticsearch.cluster.block.ClusterBlocks;
-import org.elasticsearch.cluster.metadata.IndexMetaData;
-import org.elasticsearch.cluster.metadata.MetaData;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.routing.AllocationId;
 import org.elasticsearch.cluster.routing.IndexShardRoutingTable;
@@ -50,14 +39,17 @@ import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.TestShardRouting;
 import org.elasticsearch.cluster.routing.allocation.AllocationService;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.lease.Releasable;
 import org.elasticsearch.common.network.NetworkService;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.PageCacheRecycler;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.Releasable;
+import org.elasticsearch.core.Strings;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.IndexService;
@@ -78,13 +70,15 @@ import org.elasticsearch.test.transport.CapturingTransport;
 import org.elasticsearch.test.transport.MockTransportService;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.transport.TestTransportChannel;
 import org.elasticsearch.transport.Transport;
 import org.elasticsearch.transport.TransportChannel;
 import org.elasticsearch.transport.TransportException;
 import org.elasticsearch.transport.TransportRequest;
 import org.elasticsearch.transport.TransportResponse;
 import org.elasticsearch.transport.TransportService;
-import org.elasticsearch.transport.nio.MockNioTransport;
+import org.elasticsearch.transport.netty4.Netty4Transport;
+import org.elasticsearch.transport.netty4.SharedGroupFactory;
 import org.hamcrest.Matcher;
 import org.junit.After;
 import org.junit.AfterClass;
@@ -97,19 +91,18 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Executor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singleton;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.state;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.stateWithActivePrimary;
-import static org.elasticsearch.cluster.metadata.IndexMetaData.SETTING_WAIT_FOR_ACTIVE_SHARDS;
+import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_WAIT_FOR_ACTIVE_SHARDS;
 import static org.elasticsearch.test.ClusterServiceUtils.createClusterService;
 import static org.elasticsearch.test.ClusterServiceUtils.setState;
 import static org.hamcrest.CoreMatchers.containsString;
@@ -120,11 +113,11 @@ import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.core.Is.is;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyInt;
-import static org.mockito.Matchers.anyLong;
-import static org.mockito.Matchers.anyObject;
-import static org.mockito.Matchers.anyString;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
@@ -141,16 +134,17 @@ public class TransportReplicationActionTests extends ESTestCase {
      *
      * This will throw a {@link ClassCastException} if the request is of the wrong type.
      */
-    public static <R extends ReplicationRequest> R resolveRequest(TransportRequest requestOrWrappedRequest) {
+    @SuppressWarnings("unchecked")
+    public static <R extends ReplicationRequest<?>> R resolveRequest(TransportRequest requestOrWrappedRequest) {
         if (requestOrWrappedRequest instanceof TransportReplicationAction.ConcreteShardRequest) {
-            requestOrWrappedRequest = ((TransportReplicationAction.ConcreteShardRequest<?>)requestOrWrappedRequest).getRequest();
+            requestOrWrappedRequest = ((TransportReplicationAction.ConcreteShardRequest<?>) requestOrWrappedRequest).getRequest();
         }
-        //noinspection unchecked
         return (R) requestOrWrappedRequest;
     }
 
     private static ThreadPool threadPool;
 
+    private boolean forceExecute;
     private ClusterService clusterService;
     private TransportService transportService;
     private CapturingTransport transport;
@@ -171,10 +165,17 @@ public class TransportReplicationActionTests extends ESTestCase {
     @Before
     public void setUp() throws Exception {
         super.setUp();
+        forceExecute = randomBoolean();
         transport = new CapturingTransport();
         clusterService = createClusterService(threadPool);
-        transportService = transport.createTransportService(clusterService.getSettings(), threadPool,
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR, x -> clusterService.localNode(), null, Collections.emptySet());
+        transportService = transport.createTransportService(
+            clusterService.getSettings(),
+            threadPool,
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            x -> clusterService.localNode(),
+            null,
+            Collections.emptySet()
+        );
         transportService.start();
         transportService.acceptIncomingRequests();
         shardStateAction = new ShardStateAction(clusterService, transportService, null, null, threadPool);
@@ -213,14 +214,34 @@ public class TransportReplicationActionTests extends ESTestCase {
     }
 
     public void testBlocksInReroutePhase() {
-        final ClusterBlock nonRetryableBlock =
-            new ClusterBlock(1, "non retryable", false, true, false, RestStatus.SERVICE_UNAVAILABLE, ClusterBlockLevel.ALL);
-        final ClusterBlock retryableBlock =
-            new ClusterBlock(1, "retryable", true, true, false, RestStatus.SERVICE_UNAVAILABLE, ClusterBlockLevel.ALL);
+        final ClusterBlock nonRetryableBlock = new ClusterBlock(
+            1,
+            "non retryable",
+            false,
+            true,
+            false,
+            RestStatus.SERVICE_UNAVAILABLE,
+            ClusterBlockLevel.ALL
+        );
+        final ClusterBlock retryableBlock = new ClusterBlock(
+            1,
+            "retryable",
+            true,
+            true,
+            false,
+            RestStatus.SERVICE_UNAVAILABLE,
+            ClusterBlockLevel.ALL
+        );
 
         final boolean globalBlock = randomBoolean();
-        final TestAction action = new TestAction(Settings.EMPTY, "internal:testActionWithBlocks",
-            transportService, clusterService, shardStateAction, threadPool) {
+        final TestAction action = new TestAction(
+            Settings.EMPTY,
+            "internal:testActionWithBlocks",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool
+        ) {
             @Override
             protected ClusterBlockLevel globalBlockLevel() {
                 return globalBlock ? ClusterBlockLevel.WRITE : null;
@@ -234,7 +255,7 @@ public class TransportReplicationActionTests extends ESTestCase {
 
         setState(clusterService, ClusterStateCreationUtils.stateWithActivePrimary("index", true, 0));
 
-        ShardId shardId = new ShardId(clusterService.state().metaData().index("index").getIndex(), 0);
+        ShardId shardId = new ShardId(clusterService.state().metadata().index("index").getIndex(), 0);
 
         {
             setStateWithBlock(clusterService, nonRetryableBlock, globalBlock);
@@ -246,23 +267,29 @@ public class TransportReplicationActionTests extends ESTestCase {
             TestAction.ReroutePhase reroutePhase = action.new ReroutePhase(task, request, listener);
             reroutePhase.run();
 
-            ClusterBlockException exception =
-                assertListenerThrows("primary action should fail operation", listener, ClusterBlockException.class);
+            ClusterBlockException exception = assertListenerThrows(
+                "primary action should fail operation",
+                listener,
+                ClusterBlockException.class
+            );
             assertThat(((ClusterBlockException) exception.unwrapCause()).blocks().iterator().next(), is(nonRetryableBlock));
             assertPhase(task, "failed");
         }
         {
             setStateWithBlock(clusterService, retryableBlock, globalBlock);
 
-            Request requestWithTimeout = (globalBlock ? new Request(shardId) : new Request(shardId)).timeout("5ms");
+            Request requestWithTimeout = new Request(shardId).timeout(TimeValue.timeValueMillis(5));
             PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
             ReplicationTask task = maybeTask();
 
             TestAction.ReroutePhase reroutePhase = action.new ReroutePhase(task, requestWithTimeout, listener);
             reroutePhase.run();
 
-            ClusterBlockException exception =
-                assertListenerThrows("failed to timeout on retryable block", listener, ClusterBlockException.class);
+            ClusterBlockException exception = assertListenerThrows(
+                "failed to timeout on retryable block",
+                listener,
+                ClusterBlockException.class
+            );
             assertThat(((ClusterBlockException) exception.unwrapCause()).blocks().iterator().next(), is(retryableBlock));
             assertPhase(task, "failed");
             assertTrue(requestWithTimeout.isRetrySet.get());
@@ -283,18 +310,28 @@ public class TransportReplicationActionTests extends ESTestCase {
 
             setStateWithBlock(clusterService, nonRetryableBlock, globalBlock);
 
-            ClusterBlockException exception = assertListenerThrows("primary phase should fail operation when moving from a retryable " +
-                    "block to a non-retryable one", listener, ClusterBlockException.class);
+            ClusterBlockException exception = assertListenerThrows(
+                "primary phase should fail operation when moving from a retryable " + "block to a non-retryable one",
+                listener,
+                ClusterBlockException.class
+            );
             assertThat(((ClusterBlockException) exception.unwrapCause()).blocks().iterator().next(), is(nonRetryableBlock));
             assertIndexShardUninitialized();
         }
         {
-            Request requestWithTimeout = new Request(new ShardId("unknown", "_na_", 0)).index("unknown").timeout("5ms");
+            Request requestWithTimeout = new Request(new ShardId("unknown", "_na_", 0)).index("unknown")
+                .timeout(TimeValue.timeValueMillis(5));
             PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
             ReplicationTask task = maybeTask();
 
-            TestAction testActionWithNoBlocks = new TestAction(Settings.EMPTY, "internal:testActionWithNoBlocks", transportService,
-                clusterService, shardStateAction, threadPool);
+            TestAction testActionWithNoBlocks = new TestAction(
+                Settings.EMPTY,
+                "internal:testActionWithNoBlocks",
+                transportService,
+                clusterService,
+                shardStateAction,
+                threadPool
+            );
             TestAction.ReroutePhase reroutePhase = testActionWithNoBlocks.new ReroutePhase(task, requestWithTimeout, listener);
             reroutePhase.run();
             assertListenerThrows("should fail with an IndexNotFoundException when no blocks", listener, IndexNotFoundException.class);
@@ -304,18 +341,24 @@ public class TransportReplicationActionTests extends ESTestCase {
     public void testBlocksInPrimaryAction() {
         final boolean globalBlock = randomBoolean();
 
-        final TestAction actionWithBlocks =
-            new TestAction(Settings.EMPTY, "internal:actionWithBlocks", transportService, clusterService, shardStateAction, threadPool) {
-                @Override
-                protected ClusterBlockLevel globalBlockLevel() {
-                    return globalBlock ? ClusterBlockLevel.WRITE : null;
-                }
+        final TestAction actionWithBlocks = new TestAction(
+            Settings.EMPTY,
+            "internal:actionWithBlocks",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool
+        ) {
+            @Override
+            protected ClusterBlockLevel globalBlockLevel() {
+                return globalBlock ? ClusterBlockLevel.WRITE : null;
+            }
 
-                @Override
-                public ClusterBlockLevel indexBlockLevel() {
-                    return globalBlock == false ? ClusterBlockLevel.WRITE : null;
-                }
-            };
+            @Override
+            public ClusterBlockLevel indexBlockLevel() {
+                return globalBlock == false ? ClusterBlockLevel.WRITE : null;
+            }
+        };
 
         final String index = "index";
         final ShardId shardId = new ShardId(index, "_na_", 0);
@@ -323,25 +366,46 @@ public class TransportReplicationActionTests extends ESTestCase {
 
         final ClusterBlocks.Builder block = ClusterBlocks.builder();
         if (globalBlock) {
-            block.addGlobalBlock(new ClusterBlock(randomIntBetween(1, 16), "test global block", randomBoolean(), randomBoolean(),
-                randomBoolean(), RestStatus.BAD_REQUEST, ClusterBlockLevel.ALL));
+            block.addGlobalBlock(
+                new ClusterBlock(
+                    randomIntBetween(1, 16),
+                    "test global block",
+                    randomBoolean(),
+                    randomBoolean(),
+                    randomBoolean(),
+                    RestStatus.BAD_REQUEST,
+                    ClusterBlockLevel.ALL
+                )
+            );
         } else {
-            block.addIndexBlock(index, new ClusterBlock(randomIntBetween(1, 16), "test index block", randomBoolean(), randomBoolean(),
-                randomBoolean(), RestStatus.FORBIDDEN, ClusterBlockLevel.READ_WRITE));
+            block.addIndexBlock(
+                index,
+                new ClusterBlock(
+                    randomIntBetween(1, 16),
+                    "test index block",
+                    randomBoolean(),
+                    randomBoolean(),
+                    randomBoolean(),
+                    RestStatus.FORBIDDEN,
+                    ClusterBlockLevel.READ_WRITE
+                )
+            );
         }
         setState(clusterService, ClusterState.builder(clusterService.state()).blocks(block));
 
         final ClusterState clusterState = clusterService.state();
         final String targetAllocationID = clusterState.getRoutingTable().shardRoutingTable(shardId).primaryShard().allocationId().getId();
-        final long primaryTerm = clusterState.metaData().index(index).primaryTerm(shardId.id());
+        final long primaryTerm = clusterState.metadata().index(index).primaryTerm(shardId.id());
         final Request request = new Request(shardId);
         final ReplicationTask task = maybeTask();
         final PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
 
-        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest
-            = new TransportReplicationAction.ConcreteShardRequest<>(request, targetAllocationID, primaryTerm);
-        final TransportReplicationAction.AsyncPrimaryAction asyncPrimaryActionWithBlocks =
-            actionWithBlocks.new AsyncPrimaryAction(primaryRequest, listener, task);
+        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest =
+            new TransportReplicationAction.ConcreteShardRequest<>(request, targetAllocationID, primaryTerm);
+        @SuppressWarnings("rawtypes")
+        final TransportReplicationAction.AsyncPrimaryAction asyncPrimaryActionWithBlocks = actionWithBlocks.new AsyncPrimaryAction(
+            primaryRequest, listener, task
+        );
         asyncPrimaryActionWithBlocks.run();
 
         final ExecutionException exception = expectThrows(ExecutionException.class, listener::get);
@@ -358,13 +422,12 @@ public class TransportReplicationActionTests extends ESTestCase {
         final String index = "test";
         final ShardId shardId = new ShardId(index, "_na_", 0);
         // no replicas in oder to skip the replication part
-        setState(clusterService, state(index, true,
-            randomBoolean() ? ShardRoutingState.INITIALIZING : ShardRoutingState.UNASSIGNED));
+        setState(clusterService, state(index, true, randomBoolean() ? ShardRoutingState.INITIALIZING : ShardRoutingState.UNASSIGNED));
         ReplicationTask task = maybeTask();
 
         logger.debug("--> using initial state:\n{}", clusterService.state());
 
-        Request request = new Request(shardId).timeout("1ms");
+        Request request = new Request(shardId).timeout(TimeValue.timeValueMillis(1));
         PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
         TestAction.ReroutePhase reroutePhase = action.new ReroutePhase(task, request, listener);
         reroutePhase.run();
@@ -385,11 +448,11 @@ public class TransportReplicationActionTests extends ESTestCase {
 
         final IndexShardRoutingTable shardRoutingTable = clusterService.state().routingTable().index(index).shard(shardId.id());
         final String primaryNodeId = shardRoutingTable.primaryShard().currentNodeId();
-        final List<CapturingTransport.CapturedRequest> capturedRequests =
-            transport.getCapturedRequestsByTargetNodeAndClear().get(primaryNodeId);
+        final List<CapturingTransport.CapturedRequest> capturedRequests = transport.getCapturedRequestsByTargetNodeAndClear()
+            .get(primaryNodeId);
         assertThat(capturedRequests, notNullValue());
         assertThat(capturedRequests.size(), equalTo(1));
-        assertThat(capturedRequests.get(0).action, equalTo("internal:testAction[p]"));
+        assertThat(capturedRequests.get(0).action(), equalTo("internal:testAction[p]"));
         assertIndexShardCounter(0);
     }
 
@@ -404,16 +467,19 @@ public class TransportReplicationActionTests extends ESTestCase {
         final AtomicBoolean executed = new AtomicBoolean();
 
         final ShardRouting primaryShard = state.getRoutingTable().shardRoutingTable(shardId).primaryShard();
-        final long primaryTerm = state.metaData().index(index).primaryTerm(shardId.id());
-        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest
-                = new TransportReplicationAction.ConcreteShardRequest<>(request, primaryShard.allocationId().getId(), primaryTerm);
+        final long primaryTerm = state.metadata().index(index).primaryTerm(shardId.id());
+        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest =
+            new TransportReplicationAction.ConcreteShardRequest<>(request, primaryShard.allocationId().getId(), primaryTerm);
 
         isPrimaryMode.set(false);
 
         new TestAction(Settings.EMPTY, "internal:test-action", transportService, clusterService, shardStateAction, threadPool) {
             @Override
-            protected void shardOperationOnPrimary(Request shardRequest, IndexShard primary,
-                                                   ActionListener<PrimaryResult<Request, TestResponse>> listener) {
+            protected void shardOperationOnPrimary(
+                Request shardRequest,
+                IndexShard primary,
+                ActionListener<PrimaryResult<Request, TestResponse>> listener
+            ) {
                 assertPhase(task, "primary");
                 assertFalse(executed.getAndSet(true));
                 super.shardOperationOnPrimary(shardRequest, primary, listener);
@@ -449,7 +515,8 @@ public class TransportReplicationActionTests extends ESTestCase {
         setState(clusterService, state);
         logger.debug("--> relocation ongoing state:\n{}", clusterService.state());
 
-        Request request = new Request(shardId).timeout("1ms").routedBasedOnClusterVersion(clusterService.state().version() + 1);
+        Request request = new Request(shardId).timeout(TimeValue.timeValueMillis(1))
+            .routedBasedOnClusterVersion(clusterService.state().version() + 1);
         PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
         TestAction.ReroutePhase reroutePhase = action.new ReroutePhase(null, request, listener);
         reroutePhase.run();
@@ -464,8 +531,11 @@ public class TransportReplicationActionTests extends ESTestCase {
         assertTrue(request.isRetrySet.get());
 
         // finish relocation
-        ShardRouting relocationTarget = clusterService.state().getRoutingTable().shardRoutingTable(shardId)
-            .shardsWithState(ShardRoutingState.INITIALIZING).get(0);
+        ShardRouting relocationTarget = clusterService.state()
+            .getRoutingTable()
+            .shardRoutingTable(shardId)
+            .shardsWithState(ShardRoutingState.INITIALIZING)
+            .get(0);
         AllocationService allocationService = ESAllocationTestCase.createAllocationService();
         ClusterState updatedState = ESAllocationTestCase.startShardsAndReroute(allocationService, state, relocationTarget);
 
@@ -474,22 +544,21 @@ public class TransportReplicationActionTests extends ESTestCase {
 
         IndexShardRoutingTable shardRoutingTable = clusterService.state().routingTable().index(index).shard(shardId.id());
         final String primaryNodeId = shardRoutingTable.primaryShard().currentNodeId();
-        final List<CapturingTransport.CapturedRequest> capturedRequests =
-            transport.getCapturedRequestsByTargetNodeAndClear().get(primaryNodeId);
+        final List<CapturingTransport.CapturedRequest> capturedRequests = transport.getCapturedRequestsByTargetNodeAndClear()
+            .get(primaryNodeId);
         assertThat(capturedRequests, notNullValue());
         assertThat(capturedRequests.size(), equalTo(1));
-        assertThat(capturedRequests.get(0).action, equalTo("internal:testAction[p]"));
+        assertThat(capturedRequests.get(0).action(), equalTo("internal:testAction[p]"));
         assertIndexShardCounter(0);
     }
 
     public void testUnknownIndexOrShardOnReroute() {
         final String index = "test";
         // no replicas in oder to skip the replication part
-        setState(clusterService, state(index, true,
-            randomBoolean() ? ShardRoutingState.INITIALIZING : ShardRoutingState.UNASSIGNED));
+        setState(clusterService, state(index, true, randomBoolean() ? ShardRoutingState.INITIALIZING : ShardRoutingState.UNASSIGNED));
         logger.debug("--> using initial state:\n{}", clusterService.state());
 
-        Request request = new Request(new ShardId("unknown_index", "_na_", 0)).timeout("1ms");
+        Request request = new Request(new ShardId("unknown_index", "_na_", 0)).timeout(TimeValue.timeValueMillis(1));
         PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
         ReplicationTask task = maybeTask();
 
@@ -501,7 +570,7 @@ public class TransportReplicationActionTests extends ESTestCase {
 
         // try again with a request that is based on a newer cluster state, make sure we waited until that
         // cluster state for the index to appear
-        request = new Request(new ShardId("unknown_index", "_na_", 0)).timeout("1ms");
+        request = new Request(new ShardId("unknown_index", "_na_", 0)).timeout(TimeValue.timeValueMillis(1));
         request.routedBasedOnClusterVersion(clusterService.state().version() + 1);
         listener = new PlainActionFuture<>();
         task = maybeTask();
@@ -512,29 +581,44 @@ public class TransportReplicationActionTests extends ESTestCase {
         assertPhase(task, "failed");
         assertTrue(request.isRetrySet.get());
 
-        request = new Request(new ShardId(index, "_na_", 10)).timeout("1ms");
+        request = new Request(new ShardId(index, "_na_", 10)).timeout(TimeValue.timeValueMillis(1));
         listener = new PlainActionFuture<>();
         reroutePhase = action.new ReroutePhase(null, request, listener);
         reroutePhase.run();
         assertListenerThrows("must throw shard not found exception", listener, ShardNotFoundException.class);
-        assertFalse(request.isRetrySet.get()); //TODO I'd have expected this to be true but we fail too early?
+        assertFalse(request.isRetrySet.get()); // TODO I'd have expected this to be true but we fail too early?
     }
 
     public void testClosedIndexOnReroute() {
         final String index = "test";
         // no replicas in oder to skip the replication part
         ClusterStateChanges clusterStateChanges = new ClusterStateChanges(xContentRegistry(), threadPool);
-        setState(clusterService, clusterStateChanges.closeIndices(
-            clusterStateChanges.createIndex(clusterService.state(), new CreateIndexRequest(index)),
-            new CloseIndexRequest(index)));
-        assertThat(clusterService.state().metaData().indices().get(index).getState(), equalTo(IndexMetaData.State.CLOSE));
+        setState(
+            clusterService,
+            clusterStateChanges.closeIndices(
+                clusterStateChanges.createIndex(
+                    clusterService.state(),
+                    new CreateIndexRequest(index).waitForActiveShards(ActiveShardCount.NONE)
+                ),
+                new CloseIndexRequest(index)
+            )
+        );
+        assertThat(clusterService.state().metadata().indices().get(index).getState(), equalTo(IndexMetadata.State.CLOSE));
         logger.debug("--> using initial state:\n{}", clusterService.state());
-        Request request = new Request(new ShardId(clusterService.state().metaData().indices().get(index).getIndex(), 0)).timeout("1ms");
+        Request request = new Request(new ShardId(clusterService.state().metadata().indices().get(index).getIndex(), 0)).timeout(
+            TimeValue.timeValueMillis(1)
+        );
         PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
         ReplicationTask task = maybeTask();
 
-        TestAction action = new TestAction(Settings.EMPTY, "internal:testActionWithBlocks", transportService,
-                clusterService, shardStateAction, threadPool);
+        TestAction action = new TestAction(
+            Settings.EMPTY,
+            "internal:testActionWithBlocks",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool
+        );
         TestAction.ReroutePhase reroutePhase = action.new ReroutePhase(task, request, listener);
         reroutePhase.run();
         assertListenerThrows("must throw index closed exception", listener, IndexClosedException.class);
@@ -552,9 +636,9 @@ public class TransportReplicationActionTests extends ESTestCase {
         Request request = new Request(shardId);
         boolean timeout = randomBoolean();
         if (timeout) {
-            request.timeout("0s");
+            request.timeout(TimeValue.ZERO);
         } else {
-            request.timeout("1h");
+            request.timeout(TimeValue.timeValueHours(1));
         }
         PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
         ReplicationTask task = maybeTask();
@@ -563,20 +647,19 @@ public class TransportReplicationActionTests extends ESTestCase {
         reroutePhase.run();
         CapturingTransport.CapturedRequest[] capturedRequests = transport.getCapturedRequestsAndClear();
         assertThat(capturedRequests, arrayWithSize(1));
-        assertThat(capturedRequests[0].action, equalTo("internal:testAction[p]"));
+        assertThat(capturedRequests[0].action(), equalTo("internal:testAction[p]"));
         assertPhase(task, "waiting_on_primary");
         assertFalse(request.isRetrySet.get());
-        transport.handleRemoteError(capturedRequests[0].requestId, randomRetryPrimaryException(shardId));
-
+        transport.handleRemoteError(capturedRequests[0].requestId(), randomRetryPrimaryException(shardId));
 
         if (timeout) {
             // we always try at least one more time on timeout
             assertThat(listener.isDone(), equalTo(false));
             capturedRequests = transport.getCapturedRequestsAndClear();
             assertThat(capturedRequests, arrayWithSize(1));
-            assertThat(capturedRequests[0].action, equalTo("internal:testAction[p]"));
+            assertThat(capturedRequests[0].action(), equalTo("internal:testAction[p]"));
             assertPhase(task, "waiting_on_primary");
-            transport.handleRemoteError(capturedRequests[0].requestId, randomRetryPrimaryException(shardId));
+            transport.handleRemoteError(capturedRequests[0].requestId(), randomRetryPrimaryException(shardId));
             assertListenerThrows("must throw index not found exception", listener, ElasticsearchException.class);
             assertPhase(task, "failed");
         } else {
@@ -585,7 +668,7 @@ public class TransportReplicationActionTests extends ESTestCase {
             setState(clusterService, clusterService.state());
             capturedRequests = transport.getCapturedRequestsAndClear();
             assertThat(capturedRequests, arrayWithSize(1));
-            assertThat(capturedRequests[0].action, equalTo("internal:testAction[p]"));
+            assertThat(capturedRequests[0].action(), equalTo("internal:testAction[p]"));
         }
     }
 
@@ -616,15 +699,15 @@ public class TransportReplicationActionTests extends ESTestCase {
         reroutePhase.run();
         assertThat(request.shardId(), equalTo(shardId));
         logger.info("--> primary is assigned to [{}], checking request forwarded", primaryNodeId);
-        final List<CapturingTransport.CapturedRequest> capturedRequests =
-            transport.getCapturedRequestsByTargetNodeAndClear().get(primaryNodeId);
+        final List<CapturingTransport.CapturedRequest> capturedRequests = transport.getCapturedRequestsByTargetNodeAndClear()
+            .get(primaryNodeId);
         assertThat(capturedRequests, notNullValue());
         assertThat(capturedRequests.size(), equalTo(1));
         if (clusterService.state().nodes().getLocalNodeId().equals(primaryNodeId)) {
-            assertThat(capturedRequests.get(0).action, equalTo("internal:testAction[p]"));
+            assertThat(capturedRequests.get(0).action(), equalTo("internal:testAction[p]"));
             assertPhase(task, "waiting_on_primary");
         } else {
-            assertThat(capturedRequests.get(0).action, equalTo("internal:testAction"));
+            assertThat(capturedRequests.get(0).action(), equalTo("internal:testAction"));
             assertPhase(task, "rerouted");
         }
         assertFalse(request.isRetrySet.get());
@@ -636,26 +719,29 @@ public class TransportReplicationActionTests extends ESTestCase {
         final ShardId shardId = new ShardId(index, "_na_", 0);
         ClusterState state = stateWithActivePrimary(index, true, randomInt(5));
         setState(clusterService, state);
-        Request request = new Request(shardId).timeout("1ms");
+        Request request = new Request(shardId).timeout(TimeValue.timeValueMillis(1));
         PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
         ReplicationTask task = maybeTask();
         AtomicBoolean executed = new AtomicBoolean();
 
         ShardRouting primaryShard = state.getRoutingTable().shardRoutingTable(shardId).primaryShard();
-        final long primaryTerm = state.metaData().index(index).primaryTerm(shardId.id());
+        final long primaryTerm = state.metadata().index(index).primaryTerm(shardId.id());
         boolean executeOnPrimary = true;
         // whether shard has been marked as relocated already (i.e. relocation completed)
         if (primaryShard.relocating() && randomBoolean()) {
             isRelocated.set(true);
             executeOnPrimary = false;
         }
-        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest
-            = new TransportReplicationAction.ConcreteShardRequest<>(request, primaryShard.allocationId().getId(), primaryTerm);
+        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest =
+            new TransportReplicationAction.ConcreteShardRequest<>(request, primaryShard.allocationId().getId(), primaryTerm);
 
         new TestAction(Settings.EMPTY, "internal:testAction2", transportService, clusterService, shardStateAction, threadPool) {
             @Override
-            protected void shardOperationOnPrimary(Request shardRequest, IndexShard primary,
-                                                   ActionListener<PrimaryResult<Request, TestResponse>> listener) {
+            protected void shardOperationOnPrimary(
+                Request shardRequest,
+                IndexShard primary,
+                ActionListener<PrimaryResult<Request, TestResponse>> listener
+            ) {
                 assertPhase(task, "primary");
                 assertFalse(executed.getAndSet(true));
                 super.shardOperationOnPrimary(shardRequest, primary, listener);
@@ -671,18 +757,21 @@ public class TransportReplicationActionTests extends ESTestCase {
         } else {
             assertFalse(executed.get());
             assertIndexShardCounter(0);  // it should have been freed.
-            final List<CapturingTransport.CapturedRequest> requests =
-                transport.capturedRequestsByTargetNode().get(primaryShard.relocatingNodeId());
+            final List<CapturingTransport.CapturedRequest> requests = transport.capturedRequestsByTargetNode()
+                .get(primaryShard.relocatingNodeId());
             assertThat(requests, notNullValue());
             assertThat(requests.size(), equalTo(1));
-            assertThat("primary request was not delegated to relocation target",
-                requests.get(0).action, equalTo("internal:testAction2[p]"));
-            //noinspection unchecked
-            final TransportReplicationAction.ConcreteShardRequest<Request> concreteShardRequest
-                = (TransportReplicationAction.ConcreteShardRequest<Request>) requests.get(0).request;
+            assertThat(
+                "primary request was not delegated to relocation target",
+                requests.get(0).action(),
+                equalTo("internal:testAction2[p]")
+            );
+            @SuppressWarnings("unchecked")
+            final TransportReplicationAction.ConcreteShardRequest<Request> concreteShardRequest =
+                (TransportReplicationAction.ConcreteShardRequest<Request>) requests.get(0).request();
             assertThat("primary term not properly set on primary delegation", concreteShardRequest.getPrimaryTerm(), equalTo(primaryTerm));
             assertPhase(task, "primary_delegation");
-            transport.handleResponse(requests.get(0).requestId, new TestResponse());
+            transport.handleResponse(requests.get(0).requestId(), new TestResponse());
             assertTrue(listener.isDone());
             listener.get();
             assertPhase(task, "finished");
@@ -695,22 +784,25 @@ public class TransportReplicationActionTests extends ESTestCase {
         final ShardId shardId = new ShardId(index, "_na_", 0);
         ClusterState state = state(index, true, ShardRoutingState.RELOCATING);
         final ShardRouting primaryShard = state.getRoutingTable().shardRoutingTable(shardId).primaryShard();
-        final long primaryTerm = state.metaData().index(index).primaryTerm(shardId.id());
+        final long primaryTerm = state.metadata().index(index).primaryTerm(shardId.id());
         String primaryTargetNodeId = primaryShard.relocatingNodeId();
         // simulate execution of the primary phase on the relocation target node
         state = ClusterState.builder(state).nodes(DiscoveryNodes.builder(state.nodes()).localNodeId(primaryTargetNodeId)).build();
         setState(clusterService, state);
-        Request request = new Request(shardId).timeout("1ms");
+        Request request = new Request(shardId).timeout(TimeValue.timeValueMillis(1));
         PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
         ReplicationTask task = maybeTask();
         AtomicBoolean executed = new AtomicBoolean();
-        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest
-            = new TransportReplicationAction.ConcreteShardRequest<>(request, primaryShard.allocationId().getRelocationId(), primaryTerm);
+        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest =
+            new TransportReplicationAction.ConcreteShardRequest<>(request, primaryShard.allocationId().getRelocationId(), primaryTerm);
 
         new TestAction(Settings.EMPTY, "internal:testAction2", transportService, clusterService, shardStateAction, threadPool) {
             @Override
-            protected void shardOperationOnPrimary(Request shardRequest, IndexShard primary,
-                                                   ActionListener<PrimaryResult<Request, TestResponse>> listener) {
+            protected void shardOperationOnPrimary(
+                Request shardRequest,
+                IndexShard primary,
+                ActionListener<PrimaryResult<Request, TestResponse>> listener
+            ) {
                 assertPhase(task, "primary");
                 assertFalse(executed.getAndSet(true));
                 super.shardOperationOnPrimary(shardRequest, primary, listener);
@@ -734,17 +826,16 @@ public class TransportReplicationActionTests extends ESTestCase {
         };
         TestAction.PrimaryShardReference primary = action.new PrimaryShardReference(shard, releasable);
         final Request request = new Request(NO_SHARD_ID);
-        shard.runUnderPrimaryPermit(() ->
-            primary.perform(request, ActionTestUtils.assertNoFailureListener(r -> {
-                final ElasticsearchException exception = new ElasticsearchException("testing");
-                primary.failShard("test", exception);
+        shard.runUnderPrimaryPermit(() -> primary.perform(request, ActionTestUtils.assertNoFailureListener(r -> {
+            final ElasticsearchException exception = new ElasticsearchException("testing");
+            primary.failShard("test", exception);
 
-                verify(shard).failShard("test", exception);
+            verify(shard).failShard("test", exception);
 
-                primary.close();
+            primary.close();
 
-                assertTrue(closed.get());
-            })), Assert::assertNotNull, null, null);
+            assertTrue(closed.get());
+        })), Assert::assertNotNull, null);
     }
 
     public void testReplicaProxy() throws InterruptedException, ExecutionException {
@@ -753,27 +844,35 @@ public class TransportReplicationActionTests extends ESTestCase {
         ClusterState state = stateWithActivePrimary(index, true, 1 + randomInt(3), randomInt(2));
         logger.info("using state: {}", state);
         setState(clusterService, state);
-        final long primaryTerm = state.metaData().index(index).primaryTerm(0);
+        final long primaryTerm = state.metadata().index(index).primaryTerm(0);
         ReplicationOperation.Replicas<Request> proxy = action.newReplicasProxy();
 
         // check that at unknown node fails
         PlainActionFuture<ReplicaResponse> listener = new PlainActionFuture<>();
-        ShardRoutingState routingState = randomFrom(ShardRoutingState.INITIALIZING, ShardRoutingState.STARTED,
-            ShardRoutingState.RELOCATING);
+        ShardRoutingState routingState = randomFrom(
+            ShardRoutingState.INITIALIZING,
+            ShardRoutingState.STARTED,
+            ShardRoutingState.RELOCATING
+        );
         proxy.performOn(
-            TestShardRouting.newShardRouting(shardId, "NOT THERE",
-                routingState == ShardRoutingState.RELOCATING ? state.nodes().iterator().next().getId() : null, false, routingState),
-                new Request(NO_SHARD_ID),
-                primaryTerm,
-                randomNonNegativeLong(),
-                randomNonNegativeLong(),
-                listener);
+            TestShardRouting.newShardRouting(
+                shardId,
+                "NOT THERE",
+                routingState == ShardRoutingState.RELOCATING ? state.nodes().iterator().next().getId() : null,
+                false,
+                routingState
+            ),
+            new Request(NO_SHARD_ID),
+            primaryTerm,
+            randomNonNegativeLong(),
+            randomNonNegativeLong(),
+            listener
+        );
         assertTrue(listener.isDone());
         assertListenerThrows("non existent node should throw a NoNodeAvailableException", listener, NoNodeAvailableException.class);
 
         final IndexShardRoutingTable shardRoutings = state.routingTable().shardRoutingTable(shardId);
-        final ShardRouting replica = randomFrom(shardRoutings.replicaShards().stream()
-            .filter(ShardRouting::assignedToNode).collect(Collectors.toList()));
+        final ShardRouting replica = randomFrom(shardRoutings.replicaShards().stream().filter(ShardRouting::assignedToNode).toList());
         listener = new PlainActionFuture<>();
         proxy.performOn(replica, new Request(NO_SHARD_ID), primaryTerm, randomNonNegativeLong(), randomNonNegativeLong(), listener);
         assertFalse(listener.isDone());
@@ -781,25 +880,32 @@ public class TransportReplicationActionTests extends ESTestCase {
         CapturingTransport.CapturedRequest[] captures = transport.getCapturedRequestsAndClear();
         assertThat(captures, arrayWithSize(1));
         if (randomBoolean()) {
-            final TransportReplicationAction.ReplicaResponse response =
-                    new TransportReplicationAction.ReplicaResponse(randomLong(), randomLong());
-            transport.handleResponse(captures[0].requestId, response);
+            final TransportReplicationAction.ReplicaResponse response = new TransportReplicationAction.ReplicaResponse(
+                randomLong(),
+                randomLong()
+            );
+            transport.handleResponse(captures[0].requestId(), response);
             assertTrue(listener.isDone());
             assertThat(listener.get(), equalTo(response));
         } else if (randomBoolean()) {
-            transport.handleRemoteError(captures[0].requestId, new ElasticsearchException("simulated"));
+            transport.handleRemoteError(captures[0].requestId(), new ElasticsearchException("simulated"));
             assertTrue(listener.isDone());
             assertListenerThrows("listener should reflect remote error", listener, ElasticsearchException.class);
         } else {
-            transport.handleError(captures[0].requestId, new TransportException("simulated"));
+            transport.handleError(captures[0].requestId(), new TransportException("simulated"));
             assertTrue(listener.isDone());
             assertListenerThrows("listener should reflect remote error", listener, TransportException.class);
         }
 
         AtomicReference<Object> failure = new AtomicReference<>();
         AtomicBoolean success = new AtomicBoolean();
-        proxy.failShardIfNeeded(replica, primaryTerm, "test", new ElasticsearchException("simulated"),
-                ActionListener.wrap(r -> success.set(true), failure::set));
+        proxy.failShardIfNeeded(
+            replica,
+            primaryTerm,
+            "test",
+            new ElasticsearchException("simulated"),
+            ActionListener.wrap(r -> success.set(true), failure::set)
+        );
         CapturingTransport.CapturedRequest[] shardFailedRequests = transport.getCapturedRequestsAndClear();
         // A replication action doesn't not fail the request
         assertEquals(0, shardFailedRequests.length);
@@ -809,34 +915,43 @@ public class TransportReplicationActionTests extends ESTestCase {
         final String index = "test";
         final ShardId shardId = new ShardId(index, "_na_", 0);
         // we use one replica to check the primary term was set on the operation and sent to the replica
-        setState(clusterService,
-            state(index, true, ShardRoutingState.STARTED, randomFrom(ShardRoutingState.INITIALIZING, ShardRoutingState.STARTED)));
+        setState(
+            clusterService,
+            state(index, true, ShardRoutingState.STARTED, randomFrom(ShardRoutingState.INITIALIZING, ShardRoutingState.STARTED))
+        );
         logger.debug("--> using initial state:\n{}", clusterService.state());
         final ShardRouting routingEntry = clusterService.state().getRoutingTable().index("test").shard(0).primaryShard();
-        final long primaryTerm = clusterService.state().metaData().index(index).primaryTerm(shardId.id());
+        final long primaryTerm = clusterService.state().metadata().index(index).primaryTerm(shardId.id());
         Request request = new Request(shardId);
         TransportReplicationAction.ConcreteShardRequest<Request> concreteShardRequest =
             new TransportReplicationAction.ConcreteShardRequest<>(request, routingEntry.allocationId().getId(), primaryTerm);
-        PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
-
+        PlainActionFuture<TransportResponse> listener = new PlainActionFuture<>();
 
         final IndexShard shard = mockIndexShard(shardId, clusterService);
         when(shard.getPendingPrimaryTerm()).thenReturn(primaryTerm);
         when(shard.routingEntry()).thenReturn(routingEntry);
         when(shard.isRelocatedPrimary()).thenReturn(false);
         IndexShardRoutingTable shardRoutingTable = clusterService.state().routingTable().shardRoutingTable(shardId);
-        Set<String> inSyncIds = randomBoolean() ? singleton(routingEntry.allocationId().getId()) :
-            clusterService.state().metaData().index(index).inSyncAllocationIds(0);
-        when(shard.getReplicationGroup()).thenReturn(
-            new ReplicationGroup(shardRoutingTable,
-                inSyncIds,
-                shardRoutingTable.getAllAllocationIds()));
+        Set<String> inSyncIds = randomBoolean()
+            ? singleton(routingEntry.allocationId().getId())
+            : clusterService.state().metadata().index(index).inSyncAllocationIds(0);
+        ReplicationGroup replicationGroup = new ReplicationGroup(
+            shardRoutingTable,
+            inSyncIds,
+            shardRoutingTable.getPromotableAllocationIds(),
+            0
+        );
+        when(shard.getReplicationGroup()).thenReturn(replicationGroup);
+        PendingReplicationActions replicationActions = new PendingReplicationActions(shardId, threadPool);
+        replicationActions.accept(replicationGroup);
+        when(shard.getPendingReplicationActions()).thenReturn(replicationActions);
         doAnswer(invocation -> {
             count.incrementAndGet();
-            //noinspection unchecked
-            ((ActionListener<Releasable>)invocation.getArguments()[0]).onResponse(count::decrementAndGet);
+            @SuppressWarnings("unchecked")
+            ActionListener<Releasable> argument = (ActionListener<Releasable>) invocation.getArguments()[0];
+            argument.onResponse(count::decrementAndGet);
             return null;
-        }).when(shard).acquirePrimaryOperationPermit(any(), anyString(), anyObject());
+        }).when(shard).acquirePrimaryOperationPermit(any(), any(Executor.class), eq(forceExecute));
         when(shard.getActiveOperationsCount()).thenAnswer(i -> count.get());
 
         final IndexService indexService = mock(IndexService.class);
@@ -845,15 +960,23 @@ public class TransportReplicationActionTests extends ESTestCase {
         final IndicesService indicesService = mock(IndicesService.class);
         when(indicesService.indexServiceSafe(shard.shardId().getIndex())).thenReturn(indexService);
 
-        TestAction action = new TestAction(Settings.EMPTY, "internal:testSeqNoIsSetOnPrimary", transportService, clusterService,
-            shardStateAction, threadPool, indicesService);
+        TestAction action = new TestAction(
+            Settings.EMPTY,
+            "internal:testSeqNoIsSetOnPrimary",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool,
+            indicesService
+        );
 
         action.handlePrimaryRequest(concreteShardRequest, createTransportChannel(listener), null);
         CapturingTransport.CapturedRequest[] requestsToReplicas = transport.capturedRequests();
         assertThat(requestsToReplicas, arrayWithSize(1));
-        //noinspection unchecked
-        assertThat(((TransportReplicationAction.ConcreteShardRequest<Request>) requestsToReplicas[0].request).getPrimaryTerm(),
-            equalTo(primaryTerm));
+        @SuppressWarnings("unchecked")
+        TransportReplicationAction.ConcreteShardRequest<Request> shardRequest = (TransportReplicationAction.ConcreteShardRequest<
+            Request>) requestsToReplicas[0].request();
+        assertThat(shardRequest.getPrimaryTerm(), equalTo(primaryTerm));
     }
 
     public void testCounterOnPrimary() throws Exception {
@@ -864,20 +987,23 @@ public class TransportReplicationActionTests extends ESTestCase {
         setState(clusterService, state);
         logger.debug("--> using initial state:\n{}", clusterService.state());
         final ShardRouting primaryShard = state.routingTable().shardRoutingTable(shardId).primaryShard();
-        final long primaryTerm = state.metaData().index(index).primaryTerm(shardId.id());
+        final long primaryTerm = state.metadata().index(index).primaryTerm(shardId.id());
         Request request = new Request(shardId);
         PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
         ReplicationTask task = maybeTask();
         int i = randomInt(2);
         final boolean throwExceptionOnRun = i == 1;
         final boolean respondWithError = i == 2;
-        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest
-            = new TransportReplicationAction.ConcreteShardRequest<>(request, primaryShard.allocationId().getId(), primaryTerm);
+        final TransportReplicationAction.ConcreteShardRequest<Request> primaryRequest =
+            new TransportReplicationAction.ConcreteShardRequest<>(request, primaryShard.allocationId().getId(), primaryTerm);
 
         new TestAction(Settings.EMPTY, "internal:testAction2", transportService, clusterService, shardStateAction, threadPool) {
             @Override
-            protected void shardOperationOnPrimary(Request shardRequest, IndexShard primary,
-                                                   ActionListener<PrimaryResult<Request, TestResponse>> listener) {
+            protected void shardOperationOnPrimary(
+                Request shardRequest,
+                IndexShard primary,
+                ActionListener<PrimaryResult<Request, TestResponse>> listener
+            ) {
                 assertIndexShardCounter(1);
                 if (throwExceptionOnRun) {
                     throw new ElasticsearchException("simulated exception, during shardOperationOnPrimary");
@@ -916,24 +1042,39 @@ public class TransportReplicationActionTests extends ESTestCase {
         final ShardRouting replicaRouting = state.getRoutingTable().shardRoutingTable(shardId).replicaShards().get(0);
         boolean throwException = randomBoolean();
         final ReplicationTask task = maybeTask();
-        TestAction action = new TestAction(Settings.EMPTY, "internal:testActionWithExceptions", transportService, clusterService,
-            shardStateAction, threadPool) {
+        TestAction action = new TestAction(
+            Settings.EMPTY,
+            "internal:testActionWithExceptions",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool
+        ) {
+
             @Override
-            protected ReplicaResult shardOperationOnReplica(Request request, IndexShard replica) {
-                assertIndexShardCounter(1);
-                assertPhase(task, "replica");
-                if (throwException) {
-                    throw new ElasticsearchException("simulated");
-                }
-                return new ReplicaResult();
+            protected void shardOperationOnReplica(Request shardRequest, IndexShard replica, ActionListener<ReplicaResult> listener) {
+                ActionListener.completeWith(listener, () -> {
+                    assertIndexShardCounter(1);
+                    assertPhase(task, "replica");
+                    if (throwException) {
+                        throw new ElasticsearchException("simulated");
+                    }
+                    return new ReplicaResult();
+                });
             }
         };
         try {
             action.handleReplicaRequest(
                 new TransportReplicationAction.ConcreteReplicaRequest<>(
-                        new Request(shardId), replicaRouting.allocationId().getId(), randomNonNegativeLong(),
-                        randomNonNegativeLong(), randomNonNegativeLong()),
-                createTransportChannel(new PlainActionFuture<>()), task);
+                    new Request(shardId),
+                    replicaRouting.allocationId().getId(),
+                    randomNonNegativeLong(),
+                    randomNonNegativeLong(),
+                    randomNonNegativeLong()
+                ),
+                createTransportChannel(new PlainActionFuture<>()),
+                task
+            );
         } catch (ElasticsearchException e) {
             assertThat(e.getMessage(), containsString("simulated"));
             assertTrue(throwException);
@@ -944,7 +1085,7 @@ public class TransportReplicationActionTests extends ESTestCase {
     }
 
     /**
-     * This test ensures that replication operations adhere to the {@link IndexMetaData#SETTING_WAIT_FOR_ACTIVE_SHARDS} setting
+     * This test ensures that replication operations adhere to the {@link IndexMetadata#SETTING_WAIT_FOR_ACTIVE_SHARDS} setting
      * when the request is using the default value for waitForActiveShards.
      */
     public void testDefaultWaitForActiveShardsUsesIndexSetting() {
@@ -955,22 +1096,23 @@ public class TransportReplicationActionTests extends ESTestCase {
         int numReplicas = randomIntBetween(0, 5);
         int idxSettingWaitForActiveShards = randomIntBetween(0, numReplicas + 1);
         ClusterState state = stateWithActivePrimary(indexName, randomBoolean(), numReplicas);
-        IndexMetaData indexMetaData = state.metaData().index(indexName);
-        Settings indexSettings = Settings.builder().put(indexMetaData.getSettings())
-                                     .put(SETTING_WAIT_FOR_ACTIVE_SHARDS.getKey(), Integer.toString(idxSettingWaitForActiveShards))
-                                     .build();
-        MetaData.Builder metaDataBuilder = MetaData.builder(state.metaData())
-                                               .put(IndexMetaData.builder(indexMetaData).settings(indexSettings).build(), true);
-        state = ClusterState.builder(state).metaData(metaDataBuilder).build();
+        IndexMetadata indexMetadata = state.metadata().index(indexName);
+        Settings indexSettings = Settings.builder()
+            .put(indexMetadata.getSettings())
+            .put(SETTING_WAIT_FOR_ACTIVE_SHARDS.getKey(), Integer.toString(idxSettingWaitForActiveShards))
+            .build();
+        Metadata.Builder metadataBuilder = Metadata.builder(state.metadata())
+            .put(IndexMetadata.builder(indexMetadata).settings(indexSettings).build(), true);
+        state = ClusterState.builder(state).metadata(metadataBuilder).build();
         setState(clusterService, state);
         Request request = new Request(shardId).waitForActiveShards(ActiveShardCount.DEFAULT); // set to default so index settings are used
-        action.resolveRequest(state.metaData().index(indexName), request);
+        action.resolveRequest(state.metadata().index(indexName), request);
         assertEquals(ActiveShardCount.from(idxSettingWaitForActiveShards), request.waitForActiveShards());
 
         // test wait_for_active_shards when default not set on the request (request value should be honored over index setting)
         int requestWaitForActiveShards = randomIntBetween(0, numReplicas + 1);
         request = new Request(shardId).waitForActiveShards(ActiveShardCount.from(requestWaitForActiveShards));
-        action.resolveRequest(state.metaData().index(indexName), request);
+        action.resolveRequest(state.metadata().index(indexName), request);
         assertEquals(ActiveShardCount.from(requestWaitForActiveShards), request.waitForActiveShards());
     }
 
@@ -980,30 +1122,45 @@ public class TransportReplicationActionTests extends ESTestCase {
         final ShardId shardId = new ShardId(index, "_na_", 0);
         setState(clusterService, state(index, true, ShardRoutingState.STARTED));
         final ShardRouting primary = clusterService.state().routingTable().shardRoutingTable(shardId).primaryShard();
-        final long primaryTerm = clusterService.state().metaData().index(shardId.getIndexName()).primaryTerm(shardId.id());
-        PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
+        final long primaryTerm = clusterService.state().metadata().index(shardId.getIndexName()).primaryTerm(shardId.id());
+        PlainActionFuture<TransportResponse> listener = new PlainActionFuture<>();
         final boolean wrongAllocationId = randomBoolean();
         final long requestTerm = wrongAllocationId && randomBoolean() ? primaryTerm : primaryTerm + randomIntBetween(1, 10);
-        Request request = new Request(shardId).timeout("1ms");
-            action.handlePrimaryRequest(
-                new TransportReplicationAction.ConcreteShardRequest<>(request,
-                    wrongAllocationId ? "_not_a_valid_aid_" : primary.allocationId().getId(),
-                    requestTerm),
-                createTransportChannel(listener), maybeTask()
-            );
+        Request request = new Request(shardId).timeout(TimeValue.timeValueMillis(1));
+        action.handlePrimaryRequest(
+            new TransportReplicationAction.ConcreteShardRequest<>(
+                request,
+                wrongAllocationId ? "_not_a_valid_aid_" : primary.allocationId().getId(),
+                requestTerm
+            ),
+            createTransportChannel(listener),
+            maybeTask()
+        );
         try {
             listener.get();
             fail("using a wrong aid didn't fail the operation");
         } catch (ExecutionException execException) {
             Throwable throwable = execException.getCause();
-            logger.debug("got exception:" , throwable);
-            assertTrue(throwable.getClass() + " is not a retry exception", action.retryPrimaryException(throwable));
+            logger.debug("got exception:", throwable);
+            assertTrue(throwable.getClass() + " is not a retry exception", TransportReplicationAction.retryPrimaryException(throwable));
             if (wrongAllocationId) {
-                assertThat(throwable.getMessage(), containsString("expected allocation id [_not_a_valid_aid_] but found [" +
-                    primary.allocationId().getId() + "]"));
+                assertThat(
+                    throwable.getMessage(),
+                    containsString("expected allocation id [_not_a_valid_aid_] but found [" + primary.allocationId().getId() + "]")
+                );
             } else {
-                assertThat(throwable.getMessage(), containsString("expected allocation id [" + primary.allocationId().getId()
-                    + "] with term [" + requestTerm + "] but found [" + primaryTerm + "]"));
+                assertThat(
+                    throwable.getMessage(),
+                    containsString(
+                        "expected allocation id ["
+                            + primary.allocationId().getId()
+                            + "] with term ["
+                            + requestTerm
+                            + "] but found ["
+                            + primaryTerm
+                            + "]"
+                    )
+                );
             }
         }
     }
@@ -1018,19 +1175,25 @@ public class TransportReplicationActionTests extends ESTestCase {
         state = ClusterState.builder(state).nodes(DiscoveryNodes.builder(state.nodes()).localNodeId(replica.currentNodeId())).build();
         setState(clusterService, state);
 
-        PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
-        Request request = new Request(shardId).timeout("1ms");
+        PlainActionFuture<TransportResponse> listener = new PlainActionFuture<>();
+        Request request = new Request(shardId).timeout(TimeValue.timeValueMillis(1));
         action.handleReplicaRequest(
-            new TransportReplicationAction.ConcreteReplicaRequest<>(request, "_not_a_valid_aid_", randomNonNegativeLong(),
-                randomNonNegativeLong(), randomNonNegativeLong()),
-            createTransportChannel(listener), maybeTask()
+            new TransportReplicationAction.ConcreteReplicaRequest<>(
+                request,
+                "_not_a_valid_aid_",
+                randomNonNegativeLong(),
+                randomNonNegativeLong(),
+                randomNonNegativeLong()
+            ),
+            createTransportChannel(listener),
+            maybeTask()
         );
         try {
             listener.get();
             fail("using a wrong aid didn't fail the operation");
         } catch (ExecutionException execException) {
             Throwable throwable = execException.getCause();
-            if (action.retryPrimaryException(throwable) == false) {
+            if (TransportReplicationAction.retryPrimaryException(throwable) == false) {
                 throw new AssertionError("thrown exception is not retriable", throwable);
             }
             assertThat(throwable.getMessage(), containsString("_not_a_valid_aid_"));
@@ -1045,39 +1208,54 @@ public class TransportReplicationActionTests extends ESTestCase {
         final ShardId shardId = new ShardId("test", "_na_", 0);
         ClusterState state = state(shardId.getIndexName(), true, ShardRoutingState.STARTED, ShardRoutingState.STARTED);
         final ShardRouting replica = state.getRoutingTable().shardRoutingTable(shardId).replicaShards().get(0);
-        final long primaryTerm = state.metaData().index(shardId.getIndexName()).primaryTerm(shardId.id());
+        final long primaryTerm = state.metadata().index(shardId.getIndexName()).primaryTerm(shardId.id());
         // simulate execution of the node holding the replica
         state = ClusterState.builder(state).nodes(DiscoveryNodes.builder(state.nodes()).localNodeId(replica.currentNodeId())).build();
         setState(clusterService, state);
         AtomicBoolean throwException = new AtomicBoolean(true);
         final ReplicationTask task = maybeTask();
-        TestAction action = new TestAction(Settings.EMPTY, "internal:testActionWithExceptions", transportService, clusterService,
-            shardStateAction, threadPool) {
+        TestAction action = new TestAction(
+            Settings.EMPTY,
+            "internal:testActionWithExceptions",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool
+        ) {
             @Override
-            protected ReplicaResult shardOperationOnReplica(Request request, IndexShard replica) {
-                assertPhase(task, "replica");
-                if (throwException.get()) {
-                    throw new RetryOnReplicaException(shardId, "simulation");
-                }
-                return new ReplicaResult();
+            protected void shardOperationOnReplica(Request shardRequest, IndexShard replica, ActionListener<ReplicaResult> listener) {
+                ActionListener.completeWith(listener, () -> {
+                    assertPhase(task, "replica");
+                    if (throwException.get()) {
+                        throw new RetryOnReplicaException(shardId, "simulation");
+                    }
+                    return new ReplicaResult();
+                });
             }
         };
-        final PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
+        final PlainActionFuture<TransportResponse> listener = new PlainActionFuture<>();
         final Request request = new Request(shardId);
         final long checkpoint = randomNonNegativeLong();
         final long maxSeqNoOfUpdatesOrDeletes = randomNonNegativeLong();
         action.handleReplicaRequest(
-                new TransportReplicationAction.ConcreteReplicaRequest<>(request, replica.allocationId().getId(),
-                    primaryTerm, checkpoint, maxSeqNoOfUpdatesOrDeletes),
-                createTransportChannel(listener), task);
+            new TransportReplicationAction.ConcreteReplicaRequest<>(
+                request,
+                replica.allocationId().getId(),
+                primaryTerm,
+                checkpoint,
+                maxSeqNoOfUpdatesOrDeletes
+            ),
+            createTransportChannel(listener),
+            task
+        );
         if (listener.isDone()) {
             listener.get(); // fail with the exception if there
             fail("listener shouldn't be done");
         }
 
         // no retry yet
-        List<CapturingTransport.CapturedRequest> capturedRequests =
-            transport.getCapturedRequestsByTargetNodeAndClear().get(replica.currentNodeId());
+        List<CapturingTransport.CapturedRequest> capturedRequests = transport.getCapturedRequestsByTargetNodeAndClear()
+            .get(replica.currentNodeId());
         assertThat(capturedRequests, nullValue());
 
         // release the waiting
@@ -1088,56 +1266,90 @@ public class TransportReplicationActionTests extends ESTestCase {
         assertThat(capturedRequests, notNullValue());
         assertThat(capturedRequests.size(), equalTo(1));
         final CapturingTransport.CapturedRequest capturedRequest = capturedRequests.get(0);
-        assertThat(capturedRequest.action, equalTo("internal:testActionWithExceptions[r]"));
-        assertThat(capturedRequest.request, instanceOf(TransportReplicationAction.ConcreteReplicaRequest.class));
-        assertThat(((TransportReplicationAction.ConcreteReplicaRequest) capturedRequest.request).getGlobalCheckpoint(),
-                equalTo(checkpoint));
-        assertThat(((TransportReplicationAction.ConcreteReplicaRequest) capturedRequest.request).getMaxSeqNoOfUpdatesOrDeletes(),
-            equalTo(maxSeqNoOfUpdatesOrDeletes));
-        assertConcreteShardRequest(capturedRequest.request, request, replica.allocationId());
+        assertThat(capturedRequest.action(), equalTo("internal:testActionWithExceptions[r]"));
+        assertThat(capturedRequest.request(), instanceOf(TransportReplicationAction.ConcreteReplicaRequest.class));
+        assertThat(
+            ((TransportReplicationAction.ConcreteReplicaRequest) capturedRequest.request()).getGlobalCheckpoint(),
+            equalTo(checkpoint)
+        );
+        assertThat(
+            ((TransportReplicationAction.ConcreteReplicaRequest) capturedRequest.request()).getMaxSeqNoOfUpdatesOrDeletes(),
+            equalTo(maxSeqNoOfUpdatesOrDeletes)
+        );
+        assertConcreteShardRequest(capturedRequest.request(), request, replica.allocationId());
     }
 
     public void testRetryOnReplicaWithRealTransport() throws Exception {
         final ShardId shardId = new ShardId("test", "_na_", 0);
         final ClusterState initialState = state(shardId.getIndexName(), true, ShardRoutingState.STARTED, ShardRoutingState.STARTED);
         final ShardRouting replica = initialState.getRoutingTable().shardRoutingTable(shardId).replicaShards().get(0);
-        final long primaryTerm = initialState.metaData().index(shardId.getIndexName()).primaryTerm(shardId.id());
+        final long primaryTerm = initialState.metadata().index(shardId.getIndexName()).primaryTerm(shardId.id());
         // simulate execution of the node holding the replica
         final ClusterState stateWithNodes = ClusterState.builder(initialState)
-                .nodes(DiscoveryNodes.builder(initialState.nodes()).localNodeId(replica.currentNodeId())).build();
+            .nodes(DiscoveryNodes.builder(initialState.nodes()).localNodeId(replica.currentNodeId()))
+            .build();
         setState(clusterService, stateWithNodes);
         AtomicBoolean throwException = new AtomicBoolean(true);
         final ReplicationTask task = maybeTask();
         NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(Collections.emptyList());
-        final Transport transport = new MockNioTransport(Settings.EMPTY, Version.CURRENT, threadPool,
-            new NetworkService(Collections.emptyList()), PageCacheRecycler.NON_RECYCLING_INSTANCE, namedWriteableRegistry,
-            new NoneCircuitBreakerService());
-        transportService = new MockTransportService(Settings.EMPTY, transport, threadPool, TransportService.NOOP_TRANSPORT_INTERCEPTOR,
-                x -> clusterService.localNode(), null, Collections.emptySet());
+        final Transport transport = new Netty4Transport(
+            Settings.EMPTY,
+            TransportVersion.current(),
+            threadPool,
+            new NetworkService(Collections.emptyList()),
+            PageCacheRecycler.NON_RECYCLING_INSTANCE,
+            namedWriteableRegistry,
+            new NoneCircuitBreakerService(),
+            new SharedGroupFactory(Settings.EMPTY)
+        );
+        transportService = new MockTransportService(
+            Settings.EMPTY,
+            transport,
+            threadPool,
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            x -> clusterService.localNode(),
+            null,
+            Collections.emptySet()
+        );
         transportService.start();
         transportService.acceptIncomingRequests();
 
         AtomicBoolean calledSuccessfully = new AtomicBoolean(false);
-        TestAction action = new TestAction(Settings.EMPTY, "internal:testActionWithExceptions", transportService, clusterService,
-            shardStateAction, threadPool) {
+        TestAction action = new TestAction(
+            Settings.EMPTY,
+            "internal:testActionWithExceptions",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool
+        ) {
             @Override
-            protected ReplicaResult shardOperationOnReplica(Request request, IndexShard replica) {
-                assertPhase(task, "replica");
-                if (throwException.get()) {
-                    throw new RetryOnReplicaException(shardId, "simulation");
-                }
-                calledSuccessfully.set(true);
-                return new ReplicaResult();
+            protected void shardOperationOnReplica(Request shardRequest, IndexShard replica, ActionListener<ReplicaResult> listener) {
+                ActionListener.completeWith(listener, () -> {
+                    assertPhase(task, "replica");
+                    if (throwException.get()) {
+                        throw new RetryOnReplicaException(shardId, "simulation");
+                    }
+                    calledSuccessfully.set(true);
+                    return new ReplicaResult();
+                });
             }
         };
-        final PlainActionFuture<TestResponse> listener = new PlainActionFuture<>();
+        final PlainActionFuture<TransportResponse> listener = new PlainActionFuture<>();
         final Request request = new Request(shardId);
         final long checkpoint = randomNonNegativeLong();
         final long maxSeqNoOfUpdates = randomNonNegativeLong();
         action.handleReplicaRequest(
-                new TransportReplicationAction.ConcreteReplicaRequest<>(request, replica.allocationId().getId(),
-                    primaryTerm, checkpoint, maxSeqNoOfUpdates),
-                createTransportChannel(listener), task);
+            new TransportReplicationAction.ConcreteReplicaRequest<>(
+                request,
+                replica.allocationId().getId(),
+                primaryTerm,
+                checkpoint,
+                maxSeqNoOfUpdates
+            ),
+            createTransportChannel(listener),
+            task
+        );
         if (listener.isDone()) {
             listener.get(); // fail with the exception if there
             fail("listener shouldn't be done");
@@ -1154,24 +1366,41 @@ public class TransportReplicationActionTests extends ESTestCase {
     }
 
     public void testIsRetryableClusterBlockException() {
-        final TestAction action = new TestAction(Settings.EMPTY, "internal:testIsRetryableClusterBlockException", transportService,
-            clusterService, shardStateAction, threadPool);
-        assertFalse(action.isRetryableClusterBlockException(randomRetryPrimaryException(new ShardId("index", "_na_", 0))));
+        final TestAction action = new TestAction(
+            Settings.EMPTY,
+            "internal:testIsRetryableClusterBlockException",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool
+        );
+        assertFalse(
+            TransportReplicationAction.isRetryableClusterBlockException(randomRetryPrimaryException(new ShardId("index", "_na_", 0)))
+        );
 
         final boolean retryable = randomBoolean();
-        ClusterBlock randomBlock = new ClusterBlock(randomIntBetween(1, 16), "test", retryable, randomBoolean(),
-            randomBoolean(), randomFrom(RestStatus.values()), EnumSet.of(randomFrom(ClusterBlockLevel.values())));
-        assertEquals(retryable, action.isRetryableClusterBlockException(new ClusterBlockException(singleton(randomBlock))));
+        ClusterBlock randomBlock = new ClusterBlock(
+            randomIntBetween(1, 16),
+            "test",
+            retryable,
+            randomBoolean(),
+            randomBoolean(),
+            randomFrom(RestStatus.values()),
+            EnumSet.of(randomFrom(ClusterBlockLevel.values()))
+        );
+        assertEquals(
+            retryable,
+            TransportReplicationAction.isRetryableClusterBlockException(new ClusterBlockException(singleton(randomBlock)))
+        );
     }
 
     private void assertConcreteShardRequest(TransportRequest capturedRequest, Request expectedRequest, AllocationId expectedAllocationId) {
-        final TransportReplicationAction.ConcreteShardRequest<?> concreteShardRequest =
-            (TransportReplicationAction.ConcreteShardRequest<?>) capturedRequest;
+        final TransportReplicationAction.ConcreteShardRequest<?> concreteShardRequest = (TransportReplicationAction.ConcreteShardRequest<
+            ?>) capturedRequest;
         assertThat(concreteShardRequest.getRequest(), equalTo(expectedRequest));
-        assertThat(((Request)concreteShardRequest.getRequest()).isRetrySet.get(), equalTo(true));
+        assertThat(((Request) concreteShardRequest.getRequest()).isRetrySet.get(), equalTo(true));
         assertThat(concreteShardRequest.getTargetAllocationID(), equalTo(expectedAllocationId.getId()));
     }
-
 
     private void assertIndexShardCounter(int expected) {
         assertThat(count.get(), equalTo(expected));
@@ -1244,25 +1473,47 @@ public class TransportReplicationActionTests extends ESTestCase {
         }
 
         TestResponse() {
-            setShardInfo(new ShardInfo());
+            setShardInfo(ReplicationResponse.ShardInfo.EMPTY);
         }
     }
 
     private class TestAction extends TransportReplicationAction<Request, Request, TestResponse> {
 
-        TestAction(Settings settings, String actionName, TransportService transportService,
-                   ClusterService clusterService, ShardStateAction shardStateAction,
-                   ThreadPool threadPool) {
+        TestAction(
+            Settings settings,
+            String actionName,
+            TransportService transportService,
+            ClusterService clusterService,
+            ShardStateAction shardStateAction,
+            ThreadPool threadPool
+        ) {
             this(settings, actionName, transportService, clusterService, shardStateAction, threadPool, mockIndicesService(clusterService));
         }
 
-        TestAction(Settings settings, String actionName, TransportService transportService,
-                   ClusterService clusterService, ShardStateAction shardStateAction,
-                   ThreadPool threadPool, IndicesService indicesService) {
-            super(settings, actionName, transportService, clusterService, indicesService, threadPool,
+        TestAction(
+            Settings settings,
+            String actionName,
+            TransportService transportService,
+            ClusterService clusterService,
+            ShardStateAction shardStateAction,
+            ThreadPool threadPool,
+            IndicesService indicesService
+        ) {
+            super(
+                settings,
+                actionName,
+                transportService,
+                clusterService,
+                indicesService,
+                threadPool,
                 shardStateAction,
                 new ActionFilters(new HashSet<>()),
-                Request::new, Request::new, ThreadPool.Names.SAME);
+                Request::new,
+                Request::new,
+                EsExecutors.DIRECT_EXECUTOR_SERVICE,
+                false,
+                forceExecute
+            );
         }
 
         @Override
@@ -1271,33 +1522,36 @@ public class TransportReplicationActionTests extends ESTestCase {
         }
 
         @Override
-        protected void shardOperationOnPrimary(Request shardRequest, IndexShard primary,
-                ActionListener<PrimaryResult<Request, TestResponse>> listener) {
+        protected void shardOperationOnPrimary(
+            Request shardRequest,
+            IndexShard primary,
+            ActionListener<PrimaryResult<Request, TestResponse>> listener
+        ) {
             boolean executedBefore = shardRequest.processedOnPrimary.getAndSet(true);
             assert executedBefore == false : "request has already been executed on the primary";
             listener.onResponse(new PrimaryResult<>(shardRequest, new TestResponse()));
         }
 
         @Override
-        protected ReplicaResult shardOperationOnReplica(Request request, IndexShard replica) {
+        protected void shardOperationOnReplica(Request request, IndexShard replica, ActionListener<ReplicaResult> listener) {
             request.processedOnReplicas.incrementAndGet();
-            return new ReplicaResult();
+            listener.onResponse(new ReplicaResult());
         }
     }
 
     private IndicesService mockIndicesService(ClusterService clusterService) {
         final IndicesService indicesService = mock(IndicesService.class);
         when(indicesService.indexServiceSafe(any(Index.class))).then(invocation -> {
-            Index index = (Index)invocation.getArguments()[0];
+            Index index = (Index) invocation.getArguments()[0];
             final ClusterState state = clusterService.state();
-            final IndexMetaData indexSafe = state.metaData().getIndexSafe(index);
+            final IndexMetadata indexSafe = state.metadata().getIndexSafe(index);
             return mockIndexService(indexSafe, clusterService);
         });
         when(indicesService.indexService(any(Index.class))).then(invocation -> {
             Index index = (Index) invocation.getArguments()[0];
             final ClusterState state = clusterService.state();
-            if (state.metaData().hasIndex(index.getName())) {
-                return mockIndexService(clusterService.state().metaData().getIndexSafe(index), clusterService);
+            if (state.metadata().hasIndex(index.getName())) {
+                return mockIndexService(clusterService.state().metadata().getIndexSafe(index), clusterService);
             } else {
                 return null;
             }
@@ -1305,12 +1559,12 @@ public class TransportReplicationActionTests extends ESTestCase {
         return indicesService;
     }
 
-    private IndexService mockIndexService(final IndexMetaData indexMetaData, ClusterService clusterService) {
+    private IndexService mockIndexService(final IndexMetadata indexMetadata, ClusterService clusterService) {
         final IndexService indexService = mock(IndexService.class);
         when(indexService.getShard(anyInt())).then(invocation -> {
             int shard = (Integer) invocation.getArguments()[0];
-            final ShardId shardId = new ShardId(indexMetaData.getIndex(), shard);
-            if (shard > indexMetaData.getNumberOfShards()) {
+            final ShardId shardId = new ShardId(indexMetadata.getIndex(), shard);
+            if (shard > indexMetadata.getNumberOfShards()) {
                 throw new ShardNotFoundException(shardId);
             }
             return mockIndexShard(shardId, clusterService);
@@ -1333,20 +1587,21 @@ public class TransportReplicationActionTests extends ESTestCase {
                 callback.onFailure(new ShardNotInPrimaryModeException(shardId, IndexShardState.STARTED));
             }
             return null;
-        }).when(indexShard).acquirePrimaryOperationPermit(any(ActionListener.class), anyString(), anyObject());
+        }).when(indexShard).acquirePrimaryOperationPermit(any(ActionListener.class), any(Executor.class), eq(forceExecute));
+        when(indexShard.isPrimaryMode()).thenAnswer(invocation -> isPrimaryMode.get());
         doAnswer(invocation -> {
-            long term = (Long)invocation.getArguments()[0];
+            long term = (Long) invocation.getArguments()[0];
             ActionListener<Releasable> callback = (ActionListener<Releasable>) invocation.getArguments()[3];
             final long primaryTerm = indexShard.getPendingPrimaryTerm();
             if (term < primaryTerm) {
-                throw new IllegalArgumentException(String.format(Locale.ROOT, "%s operation term [%d] is too old (current [%d])",
-                    shardId, term, primaryTerm));
+                throw new IllegalArgumentException(
+                    Strings.format("%s operation term [%d] is too old (current [%d])", shardId, term, primaryTerm)
+                );
             }
             count.incrementAndGet();
             callback.onResponse(count::decrementAndGet);
             return null;
-        }).when(indexShard)
-            .acquireReplicaOperationPermit(anyLong(), anyLong(), anyLong(), any(ActionListener.class), anyString(), anyObject());
+        }).when(indexShard).acquireReplicaOperationPermit(anyLong(), anyLong(), anyLong(), any(ActionListener.class), any(Executor.class));
         when(indexShard.getActiveOperationsCount()).thenAnswer(i -> count.get());
 
         when(indexShard.routingEntry()).thenAnswer(invocationOnMock -> {
@@ -1360,8 +1615,9 @@ public class TransportReplicationActionTests extends ESTestCase {
         });
         when(indexShard.isRelocatedPrimary()).thenAnswer(invocationOnMock -> isRelocated.get());
         doThrow(new AssertionError("failed shard is not supported")).when(indexShard).failShard(anyString(), any(Exception.class));
-        when(indexShard.getPendingPrimaryTerm()).thenAnswer(i ->
-            clusterService.state().metaData().getIndexSafe(shardId.getIndex()).primaryTerm(shardId.id()));
+        when(indexShard.getPendingPrimaryTerm()).thenAnswer(
+            i -> clusterService.state().metadata().getIndexSafe(shardId.getIndex()).primaryTerm(shardId.id())
+        );
 
         ReplicationGroup replicationGroup = mock(ReplicationGroup.class);
         when(indexShard.getReplicationGroup()).thenReturn(replicationGroup);
@@ -1371,29 +1627,8 @@ public class TransportReplicationActionTests extends ESTestCase {
     /**
      * Transport channel that is needed for replica operation testing.
      */
-    public TransportChannel createTransportChannel(final PlainActionFuture<TestResponse> listener) {
-        return new TransportChannel() {
-
-            @Override
-            public String getProfileName() {
-                return "";
-            }
-
-            @Override
-            public void sendResponse(TransportResponse response) {
-                listener.onResponse(((TestResponse) response));
-            }
-
-            @Override
-            public void sendResponse(Exception exception) {
-                listener.onFailure(exception);
-            }
-
-            @Override
-            public String getChannelType() {
-                return "replica_test";
-            }
-        };
+    public TransportChannel createTransportChannel(final PlainActionFuture<TransportResponse> listener) {
+        return new TestTransportChannel(listener);
     }
 
 }
