@@ -1,31 +1,25 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 package org.elasticsearch.cluster.coordination;
 
+import org.apache.logging.log4j.Level;
 import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.Version;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
+import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
+import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.concurrent.DeterministicTaskQueue;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.discovery.DiscoveryModule;
-import org.elasticsearch.node.Node;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.MockLog;
 import org.elasticsearch.test.transport.MockTransport;
 import org.elasticsearch.transport.TransportRequest;
 import org.elasticsearch.transport.TransportService;
@@ -42,7 +36,6 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Collections.emptyList;
-import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySet;
 import static java.util.Collections.singletonList;
 import static org.elasticsearch.cluster.coordination.ClusterBootstrapService.BOOTSTRAP_PLACEHOLDER_PREFIX;
@@ -52,6 +45,7 @@ import static org.elasticsearch.common.settings.Settings.builder;
 import static org.elasticsearch.discovery.DiscoveryModule.DISCOVERY_SEED_PROVIDERS_SETTING;
 import static org.elasticsearch.discovery.SettingsBasedSeedHostsProvider.DISCOVERY_SEED_HOSTS_SETTING;
 import static org.elasticsearch.node.Node.NODE_NAME_SETTING;
+import static org.elasticsearch.test.NodeRoles.nonMasterNode;
 import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
@@ -74,7 +68,7 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
         otherNode1 = newDiscoveryNode("other1");
         otherNode2 = newDiscoveryNode("other2");
 
-        deterministicTaskQueue = new DeterministicTaskQueue(builder().put(NODE_NAME_SETTING.getKey(), "node").build(), random());
+        deterministicTaskQueue = new DeterministicTaskQueue();
 
         final MockTransport transport = new MockTransport() {
             @Override
@@ -83,18 +77,18 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
             }
         };
 
-        transportService = transport.createTransportService(Settings.EMPTY, deterministicTaskQueue.getThreadPool(),
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR, boundTransportAddress -> localNode, null, emptySet());
+        transportService = transport.createTransportService(
+            Settings.EMPTY,
+            deterministicTaskQueue.getThreadPool(),
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            boundTransportAddress -> localNode,
+            null,
+            emptySet()
+        );
     }
 
     private DiscoveryNode newDiscoveryNode(String nodeName) {
-        return new DiscoveryNode(
-                nodeName,
-                randomAlphaOfLength(10),
-                buildNewFakeTransportAddress(),
-                emptyMap(),
-                Set.of(DiscoveryNodeRole.MASTER_ROLE),
-                Version.CURRENT);
+        return DiscoveryNodeUtils.builder(randomAlphaOfLength(10)).name(nodeName).roles(Set.of(DiscoveryNodeRole.MASTER_ROLE)).build();
     }
 
     public void testBootstrapsAutomaticallyWithDefaultConfiguration() {
@@ -112,17 +106,25 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
         });
 
         final AtomicBoolean bootstrapped = new AtomicBoolean();
-        ClusterBootstrapService clusterBootstrapService
-            = new ClusterBootstrapService(settings.build(), transportService, () -> discoveredNodesSupplier.get().get(),
-            () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(),
-                equalTo(Stream.of(localNode, otherNode1, otherNode2).map(DiscoveryNode::getId).collect(Collectors.toSet())));
-            assertThat(deterministicTaskQueue.getCurrentTimeMillis(), greaterThanOrEqualTo(timeout));
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            settings.build(),
+            transportService,
+            () -> discoveredNodesSupplier.get().get(),
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(
+                    vc.getNodeIds(),
+                    equalTo(Stream.of(localNode, otherNode1, otherNode2).map(DiscoveryNode::getId).collect(Collectors.toSet()))
+                );
+                assertThat(deterministicTaskQueue.getCurrentTimeMillis(), greaterThanOrEqualTo(timeout));
+            }
+        );
 
-        deterministicTaskQueue.scheduleAt(timeout - 1,
-            () -> discoveredNodesSupplier.set(() -> Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toSet())));
+        deterministicTaskQueue.scheduleAt(
+            timeout - 1,
+            () -> discoveredNodesSupplier.set(() -> Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toSet()))
+        );
 
         transportService.start();
         clusterBootstrapService.scheduleUnconfiguredBootstrap();
@@ -143,30 +145,32 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNothingByDefaultOnMasterIneligibleNodes() {
-        localNode = new DiscoveryNode("local", randomAlphaOfLength(10), buildNewFakeTransportAddress(), emptyMap(), emptySet(),
-            Version.CURRENT);
+        localNode = DiscoveryNodeUtils.builder(randomAlphaOfLength(10)).name("local").roles(emptySet()).build();
         testDoesNothingWithSettings(Settings.builder());
     }
 
     private void testDoesNothingWithSettings(Settings.Builder builder) {
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(builder.build(), transportService, () -> {
             throw new AssertionError("should not be called");
-        }, () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        }, () -> false, vc -> { throw new AssertionError("should not be called"); });
         transportService.start();
         clusterBootstrapService.scheduleUnconfiguredBootstrap();
         deterministicTaskQueue.runAllTasks();
     }
 
     public void testThrowsExceptionOnDuplicates() {
-        final IllegalArgumentException illegalArgumentException = expectThrows(IllegalArgumentException.class, () -> {
-            new ClusterBootstrapService(builder().putList(
-                INITIAL_MASTER_NODES_SETTING.getKey(), "duplicate-requirement", "duplicate-requirement").build(),
-                transportService, Collections::emptyList, () -> false, vc -> {
-                throw new AssertionError("should not be called");
-            });
-        });
+        final IllegalArgumentException illegalArgumentException = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ClusterBootstrapService(
+                builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), "duplicate-requirement", "duplicate-requirement").build(),
+                transportService,
+                Collections::emptyList,
+                () -> false,
+                vc -> {
+                    throw new AssertionError("should not be called");
+                }
+            )
+        );
 
         assertThat(illegalArgumentException.getMessage(), containsString(INITIAL_MASTER_NODES_SETTING.getKey()));
         assertThat(illegalArgumentException.getMessage(), containsString("duplicate-requirement"));
@@ -175,13 +179,19 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testBootstrapsOnDiscoveryOfAllRequiredNodes() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
 
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(), containsInAnyOrder(localNode.getId(), otherNode1.getId(), otherNode2.getId()));
-            assertThat(vc.getNodeIds(), not(hasItem(containsString("placeholder"))));
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(vc.getNodeIds(), containsInAnyOrder(localNode.getId(), otherNode1.getId(), otherNode2.getId()));
+                assertThat(vc.getNodeIds(), not(hasItem(containsString("placeholder"))));
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -197,18 +207,24 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testBootstrapsOnDiscoveryOfTwoOfThreeRequiredNodes() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
 
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> singletonList(otherNode1), () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(), hasSize(3));
-            assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
-            assertThat(vc.getNodeIds(), hasItem(otherNode1.getId()));
-            assertThat(vc.getNodeIds(), hasItem(allOf(startsWith(BOOTSTRAP_PLACEHOLDER_PREFIX), containsString(otherNode2.getName()))));
-            assertTrue(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).collect(Collectors.toList())));
-            assertFalse(vc.hasQuorum(singletonList(localNode.getId())));
-            assertFalse(vc.hasQuorum(singletonList(otherNode1.getId())));
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> singletonList(otherNode1),
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(vc.getNodeIds(), hasSize(3));
+                assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
+                assertThat(vc.getNodeIds(), hasItem(otherNode1.getId()));
+                assertThat(vc.getNodeIds(), hasItem(allOf(startsWith(BOOTSTRAP_PLACEHOLDER_PREFIX), containsString(otherNode2.getName()))));
+                assertTrue(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).toList()));
+                assertFalse(vc.hasQuorum(singletonList(localNode.getId())));
+                assertFalse(vc.hasQuorum(singletonList(otherNode1.getId())));
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -224,27 +240,38 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testBootstrapsOnDiscoveryOfThreeOfFiveRequiredNodes() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
 
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName(),
-            "missing-node-1", "missing-node-2").build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(), hasSize(5));
-            assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
-            assertThat(vc.getNodeIds(), hasItem(otherNode1.getId()));
-            assertThat(vc.getNodeIds(), hasItem(otherNode2.getId()));
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(
+                    INITIAL_MASTER_NODES_SETTING.getKey(),
+                    localNode.getName(),
+                    otherNode1.getName(),
+                    otherNode2.getName(),
+                    "missing-node-1",
+                    "missing-node-2"
+                )
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(vc.getNodeIds(), hasSize(5));
+                assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
+                assertThat(vc.getNodeIds(), hasItem(otherNode1.getId()));
+                assertThat(vc.getNodeIds(), hasItem(otherNode2.getId()));
 
-            final List<String> placeholders
-                = vc.getNodeIds().stream().filter(ClusterBootstrapService::isBootstrapPlaceholder).collect(Collectors.toList());
-            assertThat(placeholders.size(), equalTo(2));
-            assertNotEquals(placeholders.get(0), placeholders.get(1));
-            assertThat(placeholders, hasItem(containsString("missing-node-1")));
-            assertThat(placeholders, hasItem(containsString("missing-node-2")));
+                final List<String> placeholders = vc.getNodeIds().stream().filter(ClusterBootstrapService::isBootstrapPlaceholder).toList();
+                assertThat(placeholders.size(), equalTo(2));
+                assertNotEquals(placeholders.get(0), placeholders.get(1));
+                assertThat(placeholders, hasItem(containsString("missing-node-1")));
+                assertThat(placeholders, hasItem(containsString("missing-node-2")));
 
-            assertTrue(vc.hasQuorum(Stream.of(localNode, otherNode1, otherNode2).map(DiscoveryNode::getId).collect(Collectors.toList())));
-            assertFalse(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).collect(Collectors.toList())));
-            assertFalse(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).collect(Collectors.toList())));
-        });
+                assertTrue(vc.hasQuorum(Stream.of(localNode, otherNode1, otherNode2).map(DiscoveryNode::getId).toList()));
+                assertFalse(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).toList()));
+                assertFalse(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).toList()));
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -258,11 +285,17 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapIfNoNodesDiscovered() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, Collections::emptyList, () -> true, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            Collections::emptyList,
+            () -> true,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -270,12 +303,24 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapIfTwoOfFiveNodesDiscovered() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(),
-            localNode.getName(), otherNode1.getName(), otherNode2.getName(), "not-a-node-1", "not-a-node-2").build(),
-            transportService, () -> Stream.of(otherNode1).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(
+                    INITIAL_MASTER_NODES_SETTING.getKey(),
+                    localNode.getName(),
+                    otherNode1.getName(),
+                    otherNode2.getName(),
+                    "not-a-node-1",
+                    "not-a-node-2"
+                )
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1).toList(),
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -283,12 +328,25 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapIfThreeOfSixNodesDiscovered() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(),
-            localNode.getName(), otherNode1.getName(), otherNode2.getName(), "not-a-node-1", "not-a-node-2", "not-a-node-3").build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(
+                    INITIAL_MASTER_NODES_SETTING.getKey(),
+                    localNode.getName(),
+                    otherNode1.getName(),
+                    otherNode2.getName(),
+                    "not-a-node-1",
+                    "not-a-node-2",
+                    "not-a-node-3"
+                )
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -296,11 +354,17 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapIfAlreadyBootstrapped() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> true, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> true,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -308,26 +372,33 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapsOnNonMasterNode() {
-        localNode = new DiscoveryNode("local", randomAlphaOfLength(10), buildNewFakeTransportAddress(), emptyMap(), emptySet(),
-            Version.CURRENT);
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () ->
-            Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        localNode = DiscoveryNodeUtils.builder(randomAlphaOfLength(10)).name("local").roles(emptySet()).build();
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(localNode, otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
         deterministicTaskQueue.runAllTasks();
     }
 
     public void testDoesNotBootstrapsIfLocalNodeNotInInitialMasterNodes() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () ->
-            Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), otherNode1.getName(), otherNode2.getName()).build(),
+            transportService,
+            () -> Stream.of(localNode, otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
         deterministicTaskQueue.runAllTasks();
@@ -335,10 +406,14 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
 
     public void testDoesNotBootstrapsIfNotConfigured() {
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey()).build(), transportService,
-            () -> Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey()).build(),
+            transportService,
+            () -> Stream.of(localNode, otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
         transportService.start();
         clusterBootstrapService.scheduleUnconfiguredBootstrap();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -347,14 +422,20 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
 
     public void testRetriesBootstrappingOnException() {
         final AtomicLong bootstrappingAttempts = new AtomicLong();
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            bootstrappingAttempts.incrementAndGet();
-            if (bootstrappingAttempts.get() < 5L) {
-                throw new ElasticsearchException("test");
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                bootstrappingAttempts.incrementAndGet();
+                if (bootstrappingAttempts.get() < 5L) {
+                    throw new ElasticsearchException("test");
+                }
             }
-        });
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -364,13 +445,16 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testCancelsBootstrapIfRequirementMatchesMultipleNodes() {
-        AtomicReference<Iterable<DiscoveryNode>> discoveredNodes
-            = new AtomicReference<>(Stream.of(otherNode1, otherNode2).collect(Collectors.toList()));
+        AtomicReference<Iterable<DiscoveryNode>> discoveredNodes = new AtomicReference<>(Stream.of(otherNode1, otherNode2).toList());
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
             Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getAddress().getAddress()).build(),
-            transportService, discoveredNodes::get, () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+            transportService,
+            discoveredNodes::get,
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -382,35 +466,36 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testCancelsBootstrapIfNodeMatchesMultipleRequirements() {
-        AtomicReference<Iterable<DiscoveryNode>> discoveredNodes
-            = new AtomicReference<>(Stream.of(otherNode1, otherNode2).collect(Collectors.toList()));
+        AtomicReference<Iterable<DiscoveryNode>> discoveredNodes = new AtomicReference<>(List.of(otherNode1, otherNode2));
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), otherNode1.getAddress().toString(), otherNode1.getName())
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), otherNode1.getAddress().toString(), otherNode1.getName())
                 .build(),
-            transportService, discoveredNodes::get, () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+            transportService,
+            discoveredNodes::get,
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
         deterministicTaskQueue.runAllTasks();
 
-        discoveredNodes.set(Stream.of(
-                new DiscoveryNode(
-                        otherNode1.getName(),
-                        randomAlphaOfLength(10),
-                        buildNewFakeTransportAddress(),
-                        emptyMap(),
-                        Set.of(DiscoveryNodeRole.MASTER_ROLE),
-                        Version.CURRENT),
-                new DiscoveryNode(
-                        "yet-another-node",
-                        randomAlphaOfLength(10),
-                        otherNode1.getAddress(),
-                        emptyMap(),
-                        Set.of(DiscoveryNodeRole.MASTER_ROLE),
-                        Version.CURRENT))
-                .collect(Collectors.toList()));
+        discoveredNodes.set(
+            List.of(
+                DiscoveryNodeUtils.builder(randomAlphaOfLength(10))
+                    .name(otherNode1.getName())
+                    .roles(Set.of(DiscoveryNodeRole.MASTER_ROLE))
+                    .build(),
+                DiscoveryNodeUtils.builder(randomAlphaOfLength(10))
+                    .name("yet-another-node")
+                    .address(otherNode1.getAddress())
+                    .roles(Set.of(DiscoveryNodeRole.MASTER_ROLE))
+                    .build()
+            )
+        );
 
         clusterBootstrapService.onFoundPeersUpdated();
         deterministicTaskQueue.runAllTasks();
@@ -419,8 +504,12 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testMatchesOnNodeName() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName()).build(), transportService,
-            Collections::emptyList, () -> false, vc -> assertTrue(bootstrapped.compareAndSet(false, true)));
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName()).build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> assertTrue(bootstrapped.compareAndSet(false, true))
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -431,8 +520,12 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testMatchesOnNodeAddress() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getAddress().toString()).build(), transportService,
-            Collections::emptyList, () -> false, vc -> assertTrue(bootstrapped.compareAndSet(false, true)));
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getAddress().toString()).build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> assertTrue(bootstrapped.compareAndSet(false, true))
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -444,7 +537,11 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
             Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getAddress().getAddress()).build(),
-            transportService, Collections::emptyList, () -> false, vc -> assertTrue(bootstrapped.compareAndSet(false, true)));
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> assertTrue(bootstrapped.compareAndSet(false, true))
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -454,10 +551,14 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
 
     public void testDoesNotJustMatchEverything() {
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), randomAlphaOfLength(10)).build(), transportService,
-            Collections::emptyList, () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), randomAlphaOfLength(10)).build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -467,13 +568,18 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testDoesNotIncludeExtraNodes() {
         final DiscoveryNode extraNode = newDiscoveryNode("extra-node");
         final AtomicBoolean bootstrapped = new AtomicBoolean();
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2, extraNode).collect(Collectors.toList()), () -> false,
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> List.of(otherNode1, otherNode2, extraNode),
+            () -> false,
             vc -> {
                 assertTrue(bootstrapped.compareAndSet(false, true));
                 assertThat(vc.getNodeIds(), not(hasItem(extraNode.getId())));
-            });
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -487,13 +593,18 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
             .put(NODE_NAME_SETTING.getKey(), localNode.getName());
         final AtomicBoolean bootstrapped = new AtomicBoolean();
 
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(settings.build(),
-            transportService, () -> emptyList(), () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(), hasSize(1));
-            assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
-            assertTrue(vc.hasQuorum(singletonList(localNode.getId())));
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            settings.build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(vc.getNodeIds(), hasSize(1));
+                assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
+                assertTrue(vc.hasQuorum(singletonList(localNode.getId())));
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -512,20 +623,154 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
             .put(NODE_NAME_SETTING.getKey(), localNode.getName())
             .put(INITIAL_MASTER_NODES_SETTING.getKey(), "test");
 
-        assertThat(expectThrows(IllegalArgumentException.class, () -> new ClusterBootstrapService(settings.build(),
-            transportService, () -> emptyList(), () -> false, vc -> fail())).getMessage(),
-            containsString("setting [" + INITIAL_MASTER_NODES_SETTING.getKey() + "] is not allowed when [discovery.type] is set " +
-                "to [single-node]"));
+        assertThat(
+            expectThrows(
+                IllegalArgumentException.class,
+                () -> new ClusterBootstrapService(settings.build(), transportService, Collections::emptyList, () -> false, vc -> fail())
+            ).getMessage(),
+            containsString(
+                "setting [" + INITIAL_MASTER_NODES_SETTING.getKey() + "] is not allowed when [discovery.type] is set " + "to [single-node]"
+            )
+        );
     }
 
     public void testFailBootstrapNonMasterEligibleNodeWithSingleNodeDiscovery() {
         final Settings.Builder settings = Settings.builder()
             .put(DiscoveryModule.DISCOVERY_TYPE_SETTING.getKey(), DiscoveryModule.SINGLE_NODE_DISCOVERY_TYPE)
             .put(NODE_NAME_SETTING.getKey(), localNode.getName())
-            .put(Node.NODE_MASTER_SETTING.getKey(), false);
+            .put(nonMasterNode());
 
-        assertThat(expectThrows(IllegalArgumentException.class, () -> new ClusterBootstrapService(settings.build(),
-                transportService, () -> emptyList(), () -> false, vc -> fail())).getMessage(),
-            containsString("node with [discovery.type] set to [single-node] must be master-eligible"));
+        assertThat(
+            expectThrows(
+                IllegalArgumentException.class,
+                () -> new ClusterBootstrapService(settings.build(), transportService, Collections::emptyList, () -> false, vc -> fail())
+            ).getMessage(),
+            containsString("node with [discovery.type] set to [single-node] must be master-eligible")
+        );
+    }
+
+    public void testBootstrapStateLogging() {
+        try (var mockLog = MockLog.capture(ClusterBootstrapService.class)) {
+            mockLog.addExpectation(
+                new MockLog.SeenEventExpectation(
+                    "fresh node message",
+                    ClusterBootstrapService.class.getCanonicalName(),
+                    Level.INFO,
+                    "this node has not joined a bootstrapped cluster yet; [cluster.initial_master_nodes] is set to [node1, node2]"
+                )
+            );
+
+            final var metadataBuilder = Metadata.builder().clusterUUIDCommitted(false);
+            if (randomBoolean()) {
+                metadataBuilder.clusterUUID(UUIDs.randomBase64UUID(random()));
+            }
+            new ClusterBootstrapService(
+                Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), "node1", "node2").build(),
+                transportService,
+                Collections::emptyList,
+                () -> false,
+                vc -> {
+                    throw new AssertionError("should not be called");
+                }
+            ).logBootstrapState(metadataBuilder.build());
+
+            mockLog.assertAllExpectationsMatched();
+
+            final String infoMessagePattern = """
+                this node is locked into cluster UUID [test-uuid] and will not attempt further cluster bootstrapping""";
+            mockLog.addExpectation(
+                new MockLog.SeenEventExpectation(
+                    "bootstrapped node message",
+                    ClusterBootstrapService.class.getCanonicalName(),
+                    Level.INFO,
+                    infoMessagePattern
+                )
+            );
+
+            new ClusterBootstrapService(Settings.EMPTY, transportService, Collections::emptyList, () -> false, vc -> {
+                throw new AssertionError("should not be called");
+            }).logBootstrapState(Metadata.builder().clusterUUID("test-uuid").clusterUUIDCommitted(true).build());
+
+            mockLog.assertAllExpectationsMatched();
+
+            final var warningMessagePattern = """
+                this node is locked into cluster UUID [test-uuid] but [cluster.initial_master_nodes] is set to [node1, node2]; \
+                remove this setting to avoid possible data loss caused by subsequent cluster bootstrap attempts; \
+                for further information see \
+                https://www.elastic.co/guide/en/elasticsearch/reference/*/important-settings.html#initial_master_nodes""";
+
+            mockLog.addExpectation(
+                new MockLog.SeenEventExpectation(
+                    "bootstrapped node message if bootstrapping still configured",
+                    ClusterBootstrapService.class.getCanonicalName(),
+                    Level.WARN,
+                    warningMessagePattern
+                )
+            );
+
+            new ClusterBootstrapService(
+                Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), "node1", "node2").build(),
+                transportService,
+                Collections::emptyList,
+                () -> false,
+                vc -> {
+                    throw new AssertionError("should not be called");
+                }
+            ).logBootstrapState(Metadata.builder().clusterUUID("test-uuid").clusterUUIDCommitted(true).build());
+
+            mockLog.assertAllExpectationsMatched();
+
+            mockLog.addExpectation(
+                new MockLog.SeenEventExpectation(
+                    "bootstrapped node message if bootstrapping still configured",
+                    ClusterBootstrapService.class.getCanonicalName(),
+                    Level.WARN,
+                    warningMessagePattern
+                )
+            );
+
+            var startTime = deterministicTaskQueue.getCurrentTimeMillis();
+            while (deterministicTaskQueue.getCurrentTimeMillis() <= startTime + TimeValue.timeValueHours(12).millis()) {
+                deterministicTaskQueue.runAllRunnableTasks();
+                deterministicTaskQueue.advanceTime();
+            }
+
+            mockLog.assertAllExpectationsMatched();
+
+            mockLog.addExpectation(
+                new MockLog.SeenEventExpectation(
+                    "bootstrapped node message if discovery type is single node ",
+                    ClusterBootstrapService.class.getCanonicalName(),
+                    Level.INFO,
+                    infoMessagePattern
+                )
+            );
+
+            new ClusterBootstrapService(
+                Settings.builder().put(DiscoveryModule.DISCOVERY_TYPE_SETTING.getKey(), DiscoveryModule.SINGLE_NODE_DISCOVERY_TYPE).build(),
+                transportService,
+                Collections::emptyList,
+                () -> false,
+                vc -> {
+                    throw new AssertionError("should not be called");
+                }
+            ).logBootstrapState(Metadata.builder().clusterUUID("test-uuid").clusterUUIDCommitted(true).build());
+
+            mockLog.assertAllExpectationsMatched();
+        }
+    }
+
+    public void testNoRepeatedLoggingWithSingleNodeDiscoveryType() {
+        new ClusterBootstrapService(
+            Settings.builder().put(DiscoveryModule.DISCOVERY_TYPE_SETTING.getKey(), DiscoveryModule.SINGLE_NODE_DISCOVERY_TYPE).build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> {
+                throw new AssertionError("should not be called");
+            }
+        ).logBootstrapState(Metadata.builder().clusterUUID("test-uuid").clusterUUIDCommitted(true).build());
+
+        assertFalse((deterministicTaskQueue.hasDeferredTasks() || deterministicTaskQueue.hasRunnableTasks()));
     }
 }
