@@ -1,23 +1,13 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 package org.elasticsearch.cluster.coordination;
 
+import org.elasticsearch.Build;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.Version;
 import org.elasticsearch.cluster.ClusterName;
@@ -25,16 +15,20 @@ import org.elasticsearch.cluster.coordination.Coordinator.Mode;
 import org.elasticsearch.cluster.coordination.FollowersChecker.FollowerCheckRequest;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
+import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
-import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.settings.Settings.Builder;
+import org.elasticsearch.common.util.concurrent.AbstractRunnable;
+import org.elasticsearch.common.util.concurrent.DeterministicTaskQueue;
+import org.elasticsearch.common.util.concurrent.EsRejectedExecutionException;
+import org.elasticsearch.monitor.NodeHealthService;
+import org.elasticsearch.monitor.StatusInfo;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.EqualsHashCodeTestUtils;
 import org.elasticsearch.test.EqualsHashCodeTestUtils.CopyFunction;
 import org.elasticsearch.test.transport.CapturingTransport;
 import org.elasticsearch.test.transport.MockTransport;
-import org.elasticsearch.threadpool.ThreadPool.Names;
 import org.elasticsearch.transport.AbstractSimpleTransportTestCase;
 import org.elasticsearch.transport.ConnectTransportException;
 import org.elasticsearch.transport.TransportException;
@@ -52,11 +46,11 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.Executor;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Collections.emptySet;
@@ -64,12 +58,15 @@ import static org.elasticsearch.cluster.coordination.FollowersChecker.FOLLOWER_C
 import static org.elasticsearch.cluster.coordination.FollowersChecker.FOLLOWER_CHECK_INTERVAL_SETTING;
 import static org.elasticsearch.cluster.coordination.FollowersChecker.FOLLOWER_CHECK_RETRY_COUNT_SETTING;
 import static org.elasticsearch.cluster.coordination.FollowersChecker.FOLLOWER_CHECK_TIMEOUT_SETTING;
+import static org.elasticsearch.monitor.StatusInfo.Status.HEALTHY;
+import static org.elasticsearch.monitor.StatusInfo.Status.UNHEALTHY;
 import static org.elasticsearch.node.Node.NODE_NAME_SETTING;
 import static org.elasticsearch.transport.TransportService.HANDSHAKE_ACTION_NAME;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.core.IsInstanceOf.instanceOf;
@@ -77,13 +74,13 @@ import static org.hamcrest.core.IsInstanceOf.instanceOf;
 public class FollowersCheckerTests extends ESTestCase {
 
     public void testChecksExpectedNodes() {
-        final DiscoveryNode localNode = new DiscoveryNode("local-node", buildNewFakeTransportAddress(), Version.CURRENT);
+        final DiscoveryNode localNode = DiscoveryNodeUtils.create("local-node");
         final Settings settings = Settings.builder().put(NODE_NAME_SETTING.getKey(), localNode.getName()).build();
 
-        final DiscoveryNodes[] discoveryNodesHolder
-            = new DiscoveryNodes[]{DiscoveryNodes.builder().add(localNode).localNodeId(localNode.getId()).build()};
+        final DiscoveryNodes[] discoveryNodesHolder = new DiscoveryNodes[] {
+            DiscoveryNodes.builder().add(localNode).localNodeId(localNode.getId()).build() };
 
-        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue(settings, random());
+        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue();
 
         final Set<DiscoveryNode> checkedNodes = new HashSet<>();
         final AtomicInteger checkCount = new AtomicInteger();
@@ -101,16 +98,26 @@ public class FollowersCheckerTests extends ESTestCase {
             }
         };
 
-        final TransportService transportService = mockTransport.createTransportService(settings, deterministicTaskQueue.getThreadPool(),
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR, boundTransportAddress -> localNode, null, emptySet());
+        final TransportService transportService = mockTransport.createTransportService(
+            settings,
+            deterministicTaskQueue.getThreadPool(),
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            boundTransportAddress -> localNode,
+            null,
+            emptySet()
+        );
         transportService.start();
         transportService.acceptIncomingRequests();
 
-        final FollowersChecker followersChecker = new FollowersChecker(settings, transportService, fcr -> {
-            assert false : fcr;
-        }, (node, reason) -> {
-            assert false : node;
-        });
+        final FollowersChecker followersChecker = new FollowersChecker(
+            settings,
+            transportService,
+            fcr -> { assert false : fcr; },
+            (node, reason) -> {
+                assert false : node;
+            },
+            () -> new StatusInfo(StatusInfo.Status.HEALTHY, "healthy-info")
+        );
 
         followersChecker.setCurrentNodes(discoveryNodesHolder[0]);
         deterministicTaskQueue.runAllTasks();
@@ -118,7 +125,7 @@ public class FollowersCheckerTests extends ESTestCase {
         assertThat(checkedNodes, empty());
         assertThat(followersChecker.getFaultyNodes(), empty());
 
-        final DiscoveryNode otherNode1 = new DiscoveryNode("other-node-1", buildNewFakeTransportAddress(), Version.CURRENT);
+        final DiscoveryNode otherNode1 = DiscoveryNodeUtils.create("other-node-1");
         followersChecker.setCurrentNodes(discoveryNodesHolder[0] = DiscoveryNodes.builder(discoveryNodesHolder[0]).add(otherNode1).build());
         while (checkCount.get() < 10) {
             if (deterministicTaskQueue.hasRunnableTasks()) {
@@ -132,7 +139,7 @@ public class FollowersCheckerTests extends ESTestCase {
 
         checkedNodes.clear();
         checkCount.set(0);
-        final DiscoveryNode otherNode2 = new DiscoveryNode("other-node-2", buildNewFakeTransportAddress(), Version.CURRENT);
+        final DiscoveryNode otherNode2 = DiscoveryNodeUtils.create("other-node-2");
         followersChecker.setCurrentNodes(discoveryNodesHolder[0] = DiscoveryNodes.builder(discoveryNodesHolder[0]).add(otherNode2).build());
         while (checkCount.get() < 10) {
             if (deterministicTaskQueue.hasRunnableTasks()) {
@@ -146,8 +153,9 @@ public class FollowersCheckerTests extends ESTestCase {
 
         checkedNodes.clear();
         checkCount.set(0);
-        followersChecker.setCurrentNodes(discoveryNodesHolder[0]
-            = DiscoveryNodes.builder(discoveryNodesHolder[0]).remove(otherNode1).build());
+        followersChecker.setCurrentNodes(
+            discoveryNodesHolder[0] = DiscoveryNodes.builder(discoveryNodesHolder[0]).remove(otherNode1).build()
+        );
         while (checkCount.get() < 10) {
             if (deterministicTaskQueue.hasRunnableTasks()) {
                 deterministicTaskQueue.runRandomTask();
@@ -165,92 +173,147 @@ public class FollowersCheckerTests extends ESTestCase {
     }
 
     public void testFailsNodeThatDoesNotRespond() {
-        final Builder settingsBuilder = Settings.builder();
-        if (randomBoolean()) {
-            settingsBuilder.put(FOLLOWER_CHECK_RETRY_COUNT_SETTING.getKey(), randomIntBetween(1, 10));
-        }
-        if (randomBoolean()) {
-            settingsBuilder.put(FOLLOWER_CHECK_INTERVAL_SETTING.getKey(), randomIntBetween(100, 100000) + "ms");
-        }
-        if (randomBoolean()) {
-            settingsBuilder.put(FOLLOWER_CHECK_TIMEOUT_SETTING.getKey(), randomIntBetween(1, 100000) + "ms");
-        }
-        final Settings settings = settingsBuilder.build();
-
-        testBehaviourOfFailingNode(settings, () -> null,
-            "followers check retry count exceeded",
+        final Settings settings = randomSettings();
+        testBehaviourOfFailingNode(
+            settings,
+            () -> null,
+            "followers check retry count exceeded [timeouts=" + FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings) + ", failures=0]",
             (FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings) - 1) * FOLLOWER_CHECK_INTERVAL_SETTING.get(settings).millis()
-                + FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings) * FOLLOWER_CHECK_TIMEOUT_SETTING.get(settings).millis());
+                + FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings) * FOLLOWER_CHECK_TIMEOUT_SETTING.get(settings).millis(),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
     }
 
     public void testFailsNodeThatRejectsCheck() {
-        final Builder settingsBuilder = Settings.builder();
-        if (randomBoolean()) {
-            settingsBuilder.put(FOLLOWER_CHECK_RETRY_COUNT_SETTING.getKey(), randomIntBetween(1, 10));
-        }
-        if (randomBoolean()) {
-            settingsBuilder.put(FOLLOWER_CHECK_INTERVAL_SETTING.getKey(), randomIntBetween(100, 100000) + "ms");
-        }
-        final Settings settings = settingsBuilder.build();
+        final Settings settings = randomSettings();
+        testBehaviourOfFailingNode(
+            settings,
+            () -> { throw new ElasticsearchException("simulated exception"); },
+            "followers check retry count exceeded [timeouts=0, failures=" + FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings) + "]",
+            (FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings) - 1) * FOLLOWER_CHECK_INTERVAL_SETTING.get(settings).millis(),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
+    }
 
-        testBehaviourOfFailingNode(settings, () -> {
-                throw new ElasticsearchException("simulated exception");
-            },
-            "followers check retry count exceeded",
-            (FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings) - 1) * FOLLOWER_CHECK_INTERVAL_SETTING.get(settings).millis());
+    public void testFailsNodeThatRejectsCheckAndDoesNotRespond() {
+        final Settings settings = randomSettings();
+        final int retryCount = FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings);
+        final int timeoutCount = between(0, retryCount);
+        final int failureCount = retryCount - timeoutCount;
+
+        testBehaviourOfFailingNode(settings, new Supplier<Empty>() {
+
+            private int timeoutsRemaining;
+            private int failuresRemaining;
+
+            @Override
+            public Empty get() {
+                if (timeoutsRemaining == 0 && failuresRemaining == 0) {
+                    // node was added, reset counters
+                    timeoutsRemaining = timeoutCount;
+                    failuresRemaining = failureCount;
+                }
+                if (timeoutsRemaining == 0) {
+                    assertThat(failuresRemaining--, greaterThan(0));
+                    throw new ElasticsearchException("simulated exception");
+                } else if (failuresRemaining == 0) {
+                    assertThat(timeoutsRemaining--, greaterThan(0));
+                    return null;
+                } else if (randomBoolean()) {
+                    assertThat(failuresRemaining--, greaterThan(0));
+                    throw new ElasticsearchException("simulated exception");
+                } else {
+                    assertThat(timeoutsRemaining--, greaterThan(0));
+                    return null;
+                }
+            }
+        },
+            "followers check retry count exceeded [timeouts=" + timeoutCount + ", failures=" + failureCount + "]",
+            (retryCount - 1) * FOLLOWER_CHECK_INTERVAL_SETTING.get(settings).millis() + timeoutCount * FOLLOWER_CHECK_TIMEOUT_SETTING.get(
+                settings
+            ).millis(),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
     }
 
     public void testFailureCounterResetsOnSuccess() {
-        final Builder settingsBuilder = Settings.builder();
-        if (randomBoolean()) {
-            settingsBuilder.put(FOLLOWER_CHECK_RETRY_COUNT_SETTING.getKey(), randomIntBetween(2, 10));
-        }
-        if (randomBoolean()) {
-            settingsBuilder.put(FOLLOWER_CHECK_INTERVAL_SETTING.getKey(), randomIntBetween(100, 100000) + "ms");
-        }
-        final Settings settings = settingsBuilder.build();
-
+        final Settings settings = randomSettings();
         final int retryCount = FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings);
         final int maxRecoveries = randomIntBetween(3, 10);
 
         // passes just enough checks to keep it alive, up to maxRecoveries, and then fails completely
         testBehaviourOfFailingNode(settings, new Supplier<Empty>() {
-                private int checkIndex;
-                private int recoveries;
+            private int checkIndex;
+            private int recoveries;
 
-                @Override
-                public Empty get() {
-                    checkIndex++;
-                    if (checkIndex % retryCount == 0 && recoveries < maxRecoveries) {
-                        recoveries++;
-                        return Empty.INSTANCE;
-                    }
-                    throw new ElasticsearchException("simulated exception");
+            @Override
+            public Empty get() {
+                checkIndex++;
+                if (checkIndex % retryCount == 0 && recoveries < maxRecoveries) {
+                    recoveries++;
+                    return Empty.INSTANCE;
                 }
-            },
-            "followers check retry count exceeded",
-            (FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings) * (maxRecoveries + 1) - 1)
-                * FOLLOWER_CHECK_INTERVAL_SETTING.get(settings).millis());
+                throw new ElasticsearchException("simulated exception");
+            }
+        },
+            "followers check retry count exceeded [timeouts=0, failures=" + retryCount + "]",
+            (retryCount * (maxRecoveries + 1) - 1) * FOLLOWER_CHECK_INTERVAL_SETTING.get(settings).millis(),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
+    }
+
+    public void testTimeoutCounterResetsOnSuccess() {
+        final Settings settings = randomSettings();
+        final int retryCount = FOLLOWER_CHECK_RETRY_COUNT_SETTING.get(settings);
+        final int maxRecoveries = randomIntBetween(3, 10);
+
+        // passes just enough checks to keep it alive, up to maxRecoveries, and then fails completely
+        testBehaviourOfFailingNode(settings, new Supplier<Empty>() {
+            private int checkIndex;
+            private int recoveries;
+
+            @Override
+            public Empty get() {
+                checkIndex++;
+                if (checkIndex % retryCount == 0 && recoveries < maxRecoveries) {
+                    recoveries++;
+                    return Empty.INSTANCE;
+                }
+                return null;
+            }
+        },
+            "followers check retry count exceeded [timeouts=" + retryCount + ", failures=0]",
+            (retryCount * (maxRecoveries + 1) - 1) * FOLLOWER_CHECK_INTERVAL_SETTING.get(settings).millis() + (retryCount * (maxRecoveries
+                + 1) - maxRecoveries) * FOLLOWER_CHECK_TIMEOUT_SETTING.get(settings).millis(),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
     }
 
     public void testFailsNodeThatIsDisconnected() {
-        testBehaviourOfFailingNode(Settings.EMPTY, () -> {
-            throw new ConnectTransportException(null, "simulated exception");
-        }, "disconnected", 0);
+        testBehaviourOfFailingNode(
+            Settings.EMPTY,
+            () -> { throw new ConnectTransportException(null, "simulated exception"); },
+            "disconnected",
+            0,
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
     }
 
     public void testFailsNodeThatDisconnects() {
-        final DiscoveryNode localNode = new DiscoveryNode("local-node", buildNewFakeTransportAddress(), Version.CURRENT);
-        final DiscoveryNode otherNode = new DiscoveryNode("other-node", buildNewFakeTransportAddress(), Version.CURRENT);
+        final DiscoveryNode localNode = DiscoveryNodeUtils.create("local-node");
+        final DiscoveryNode otherNode = DiscoveryNodeUtils.create("other-node");
         final Settings settings = Settings.builder().put(NODE_NAME_SETTING.getKey(), localNode.getName()).build();
-        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue(settings, random());
+        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue();
 
         final MockTransport mockTransport = new MockTransport() {
             @Override
             protected void onSendRequest(long requestId, String action, TransportRequest request, DiscoveryNode node) {
                 assertFalse(node.equals(localNode));
                 if (action.equals(HANDSHAKE_ACTION_NAME)) {
-                    handleResponse(requestId, new TransportService.HandshakeResponse(node, ClusterName.DEFAULT, Version.CURRENT));
+                    handleResponse(
+                        requestId,
+                        new TransportService.HandshakeResponse(Version.CURRENT, Build.current().hash(), node, ClusterName.DEFAULT)
+                    );
                     return;
                 }
                 deterministicTaskQueue.scheduleNow(new Runnable() {
@@ -267,19 +330,29 @@ public class FollowersCheckerTests extends ESTestCase {
             }
         };
 
-        final TransportService transportService = mockTransport.createTransportService(settings, deterministicTaskQueue.getThreadPool(),
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR, boundTransportAddress -> localNode, null, emptySet());
+        final TransportService transportService = mockTransport.createTransportService(
+            settings,
+            deterministicTaskQueue.getThreadPool(),
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            boundTransportAddress -> localNode,
+            null,
+            emptySet()
+        );
         transportService.start();
         transportService.acceptIncomingRequests();
 
         final AtomicBoolean nodeFailed = new AtomicBoolean();
 
-        final FollowersChecker followersChecker = new FollowersChecker(settings, transportService, fcr -> {
-            assert false : fcr;
-        }, (node, reason) -> {
-            assertTrue(nodeFailed.compareAndSet(false, true));
-            assertThat(reason, equalTo("disconnected"));
-        });
+        final FollowersChecker followersChecker = new FollowersChecker(
+            settings,
+            transportService,
+            fcr -> { assert false : fcr; },
+            (node, reason) -> {
+                assertTrue(nodeFailed.compareAndSet(false, true));
+                assertThat(reason, equalTo("disconnected"));
+            },
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
 
         DiscoveryNodes discoveryNodes = DiscoveryNodes.builder().add(localNode).add(otherNode).localNodeId(localNode.getId()).build();
         followersChecker.setCurrentNodes(discoveryNodes);
@@ -291,17 +364,32 @@ public class FollowersCheckerTests extends ESTestCase {
         assertThat(followersChecker.getFaultyNodes(), contains(otherNode));
     }
 
-    private void testBehaviourOfFailingNode(Settings testSettings, Supplier<TransportResponse.Empty> responder, String failureReason,
-                                            long expectedFailureTime) {
-        final DiscoveryNode localNode = new DiscoveryNode("local-node", buildNewFakeTransportAddress(), Version.CURRENT);
-        final DiscoveryNode otherNode = new DiscoveryNode("other-node", buildNewFakeTransportAddress(), Version.CURRENT);
+    public void testFailsNodeThatIsUnhealthy() {
+        testBehaviourOfFailingNode(
+            randomSettings(),
+            () -> { throw new NodeHealthCheckFailureException("non writable exception"); },
+            "health check failed",
+            0,
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
+    }
+
+    private void testBehaviourOfFailingNode(
+        Settings testSettings,
+        Supplier<TransportResponse.Empty> responder,
+        String failureReason,
+        long expectedFailureTime,
+        NodeHealthService nodeHealthService
+    ) {
+        final DiscoveryNode localNode = DiscoveryNodeUtils.create("local-node");
+        final DiscoveryNode otherNode = DiscoveryNodeUtils.create("other-node");
         final Settings settings = Settings.builder().put(NODE_NAME_SETTING.getKey(), localNode.getName()).put(testSettings).build();
-        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue(settings, random());
+        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue();
 
         final MockTransport mockTransport = new MockTransport() {
             @Override
             protected void onSendRequest(long requestId, String action, TransportRequest request, DiscoveryNode node) {
-                assertFalse(node.equals(localNode));
+                assertNotEquals(node, localNode);
                 deterministicTaskQueue.scheduleNow(new Runnable() {
                     @Override
                     public void run() {
@@ -328,19 +416,29 @@ public class FollowersCheckerTests extends ESTestCase {
             }
         };
 
-        final TransportService transportService = mockTransport.createTransportService(settings, deterministicTaskQueue.getThreadPool(),
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR, boundTransportAddress -> localNode, null, emptySet());
+        final TransportService transportService = mockTransport.createTransportService(
+            settings,
+            deterministicTaskQueue.getThreadPool(),
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            boundTransportAddress -> localNode,
+            null,
+            emptySet()
+        );
         transportService.start();
         transportService.acceptIncomingRequests();
 
         final AtomicBoolean nodeFailed = new AtomicBoolean();
 
-        final FollowersChecker followersChecker = new FollowersChecker(settings, transportService, fcr -> {
-            assert false : fcr;
-        }, (node, reason) -> {
-            assertTrue(nodeFailed.compareAndSet(false, true));
-            assertThat(reason, equalTo(failureReason));
-        });
+        final FollowersChecker followersChecker = new FollowersChecker(
+            settings,
+            transportService,
+            fcr -> { assert false : fcr; },
+            (node, reason) -> {
+                assertTrue(nodeFailed.compareAndSet(false, true));
+                assertThat(reason, equalTo(failureReason));
+            },
+            nodeHealthService
+        );
 
         DiscoveryNodes discoveryNodes = DiscoveryNodes.builder().add(localNode).add(otherNode).localNodeId(localNode.getId()).build();
         followersChecker.setCurrentNodes(discoveryNodes);
@@ -356,7 +454,7 @@ public class FollowersCheckerTests extends ESTestCase {
         deterministicTaskQueue.runAllTasks();
 
         // add another node and see that it schedules checks for this new node but keeps on considering the old one faulty
-        final DiscoveryNode otherNode2 = new DiscoveryNode("other-node-2", buildNewFakeTransportAddress(), Version.CURRENT);
+        final DiscoveryNode otherNode2 = DiscoveryNodeUtils.create("other-node-2");
         discoveryNodes = DiscoveryNodes.builder(discoveryNodes).add(otherNode2).build();
         followersChecker.setCurrentNodes(discoveryNodes);
         deterministicTaskQueue.runAllRunnableTasks();
@@ -389,24 +487,25 @@ public class FollowersCheckerTests extends ESTestCase {
 
     public void testFollowerCheckRequestEqualsHashCodeSerialization() {
         // Note: the explicit cast of the CopyFunction is needed for some IDE (specifically Eclipse 4.8.0) to infer the right type
-        EqualsHashCodeTestUtils.checkEqualsAndHashCode(new FollowerCheckRequest(randomNonNegativeLong(),
-                new DiscoveryNode(randomAlphaOfLength(10), buildNewFakeTransportAddress(), Version.CURRENT)),
+        EqualsHashCodeTestUtils.checkEqualsAndHashCode(
+            new FollowerCheckRequest(randomNonNegativeLong(), DiscoveryNodeUtils.create(randomAlphaOfLength(10))),
             (CopyFunction<FollowerCheckRequest>) rq -> copyWriteable(rq, writableRegistry(), FollowerCheckRequest::new),
             rq -> {
                 if (randomBoolean()) {
-                    return new FollowerCheckRequest(rq.getTerm(),
-                        new DiscoveryNode(randomAlphaOfLength(10), buildNewFakeTransportAddress(), Version.CURRENT));
+                    return new FollowerCheckRequest(rq.getTerm(), DiscoveryNodeUtils.create(randomAlphaOfLength(10)));
                 } else {
                     return new FollowerCheckRequest(randomNonNegativeLong(), rq.getSender());
                 }
-            });
+            }
+        );
     }
 
-    public void testResponder() {
-        final DiscoveryNode leader = new DiscoveryNode("leader", buildNewFakeTransportAddress(), Version.CURRENT);
-        final DiscoveryNode follower = new DiscoveryNode("follower", buildNewFakeTransportAddress(), Version.CURRENT);
+    public void testUnhealthyNodeRejectsImmediately() {
+
+        final DiscoveryNode leader = DiscoveryNodeUtils.create("leader");
+        final DiscoveryNode follower = DiscoveryNodeUtils.create("follower");
         final Settings settings = Settings.builder().put(NODE_NAME_SETTING.getKey(), follower.getName()).build();
-        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue(settings, random());
+        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue();
 
         final MockTransport mockTransport = new MockTransport() {
             @Override
@@ -415,24 +514,101 @@ public class FollowersCheckerTests extends ESTestCase {
             }
         };
 
-        final TransportService transportService = mockTransport.createTransportService(settings, deterministicTaskQueue.getThreadPool(),
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR, boundTransportAddress -> follower, null, emptySet());
+        final TransportService transportService = mockTransport.createTransportService(
+            settings,
+            deterministicTaskQueue.getThreadPool(),
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            boundTransportAddress -> follower,
+            null,
+            emptySet()
+        );
         transportService.start();
         transportService.acceptIncomingRequests();
 
         final AtomicBoolean calledCoordinator = new AtomicBoolean();
         final AtomicReference<RuntimeException> coordinatorException = new AtomicReference<>();
 
-        final FollowersChecker followersChecker = new FollowersChecker(settings, transportService,
-            fcr -> {
-                assertTrue(calledCoordinator.compareAndSet(false, true));
-                final RuntimeException exception = coordinatorException.get();
-                if (exception != null) {
+        final FollowersChecker followersChecker = new FollowersChecker(settings, transportService, fcr -> {
+            assertTrue(calledCoordinator.compareAndSet(false, true));
+            final RuntimeException exception = coordinatorException.get();
+            if (exception != null) {
+                throw exception;
+            }
+        }, (node, reason) -> { assert false : node; }, () -> new StatusInfo(UNHEALTHY, "unhealthy-info"));
+
+        final long leaderTerm = randomLongBetween(2, Long.MAX_VALUE);
+        final long followerTerm = randomLongBetween(1, leaderTerm - 1);
+        followersChecker.updateFastResponseState(followerTerm, Mode.FOLLOWER);
+        final AtomicReference<TransportException> receivedException = new AtomicReference<>();
+        transportService.sendRequest(
+            follower,
+            FOLLOWER_CHECK_ACTION_NAME,
+            new FollowerCheckRequest(leaderTerm, leader),
+            new TransportResponseHandler.Empty() {
+                @Override
+                public Executor executor() {
+                    return TransportResponseHandler.TRANSPORT_WORKER;
+                }
+
+                @Override
+                public void handleResponse() {
+                    fail("unexpected success");
+                }
+
+                @Override
+                public void handleException(TransportException exp) {
+                    assertThat(exp, not(nullValue()));
+                    assertTrue(receivedException.compareAndSet(null, exp));
+                }
+            }
+        );
+        deterministicTaskQueue.runAllTasks();
+        assertFalse(calledCoordinator.get());
+        assertThat(receivedException.get(), not(nullValue()));
+    }
+
+    public void testResponder() {
+        final DiscoveryNode leader = DiscoveryNodeUtils.create("leader");
+        final DiscoveryNode follower = DiscoveryNodeUtils.create("follower");
+        final Settings settings = Settings.builder().put(NODE_NAME_SETTING.getKey(), follower.getName()).build();
+        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue();
+
+        final MockTransport mockTransport = new MockTransport() {
+            @Override
+            protected void onSendRequest(long requestId, String action, TransportRequest request, DiscoveryNode node) {
+                throw new AssertionError("no requests expected");
+            }
+        };
+
+        final AtomicBoolean rejectExecution = new AtomicBoolean();
+
+        final TransportService transportService = mockTransport.createTransportService(settings, deterministicTaskQueue.getThreadPool(r -> {
+            if (rejectExecution.get()) {
+                final var exception = new EsRejectedExecutionException("simulated rejection", true);
+                if (r instanceof AbstractRunnable ar) {
+                    ar.onRejection(exception);
+                    return () -> {};
+                } else {
                     throw exception;
                 }
-            }, (node, reason) -> {
-            assert false : node;
-        });
+            } else {
+                return r;
+            }
+        }), TransportService.NOOP_TRANSPORT_INTERCEPTOR, boundTransportAddress -> follower, null, emptySet());
+
+        final AtomicBoolean calledCoordinator = new AtomicBoolean();
+        final AtomicReference<RuntimeException> coordinatorException = new AtomicReference<>();
+
+        final FollowersChecker followersChecker = new FollowersChecker(settings, transportService, fcr -> {
+            assertTrue(calledCoordinator.compareAndSet(false, true));
+            final RuntimeException exception = coordinatorException.get();
+            if (exception != null) {
+                throw exception;
+            }
+        }, (node, reason) -> { assert false : node; }, () -> new StatusInfo(HEALTHY, "healthy-info"));
+
+        transportService.start();
+        transportService.acceptIncomingRequests();
 
         {
             // Does not call into the coordinator in the normal case
@@ -453,15 +629,18 @@ public class FollowersCheckerTests extends ESTestCase {
             followersChecker.updateFastResponseState(followerTerm, Mode.FOLLOWER);
 
             final AtomicReference<TransportException> receivedException = new AtomicReference<>();
-            transportService.sendRequest(follower, FOLLOWER_CHECK_ACTION_NAME, new FollowerCheckRequest(leaderTerm, leader),
-                new TransportResponseHandler<TransportResponse.Empty>() {
+            transportService.sendRequest(
+                follower,
+                FOLLOWER_CHECK_ACTION_NAME,
+                new FollowerCheckRequest(leaderTerm, leader),
+                new TransportResponseHandler.Empty() {
                     @Override
-                    public TransportResponse.Empty read(StreamInput in) {
-                        return TransportResponse.Empty.INSTANCE;
+                    public Executor executor() {
+                        return TransportResponseHandler.TRANSPORT_WORKER;
                     }
 
                     @Override
-                    public void handleResponse(TransportResponse.Empty response) {
+                    public void handleResponse() {
                         fail("unexpected success");
                     }
 
@@ -470,12 +649,8 @@ public class FollowersCheckerTests extends ESTestCase {
                         assertThat(exp, not(nullValue()));
                         assertTrue(receivedException.compareAndSet(null, exp));
                     }
-
-                    @Override
-                    public String executor() {
-                        return Names.SAME;
-                    }
-                });
+                }
+            );
             deterministicTaskQueue.runAllTasks();
             assertFalse(calledCoordinator.get());
             assertThat(receivedException.get(), not(nullValue()));
@@ -488,8 +663,12 @@ public class FollowersCheckerTests extends ESTestCase {
             followersChecker.updateFastResponseState(followerTerm, Mode.FOLLOWER);
 
             final ExpectsSuccess expectsSuccess = new ExpectsSuccess();
-            transportService.sendRequest(follower, FOLLOWER_CHECK_ACTION_NAME,
-                new FollowerCheckRequest(leaderTerm, leader), expectsSuccess);
+            transportService.sendRequest(
+                follower,
+                FOLLOWER_CHECK_ACTION_NAME,
+                new FollowerCheckRequest(leaderTerm, leader),
+                expectsSuccess
+            );
             deterministicTaskQueue.runAllTasks();
             assertTrue(expectsSuccess.succeeded());
             assertTrue(calledCoordinator.get());
@@ -517,15 +696,18 @@ public class FollowersCheckerTests extends ESTestCase {
             coordinatorException.set(new ElasticsearchException(exceptionMessage));
 
             final AtomicReference<TransportException> receivedException = new AtomicReference<>();
-            transportService.sendRequest(follower, FOLLOWER_CHECK_ACTION_NAME, new FollowerCheckRequest(term, leader),
-                new TransportResponseHandler<TransportResponse.Empty>() {
+            transportService.sendRequest(
+                follower,
+                FOLLOWER_CHECK_ACTION_NAME,
+                new FollowerCheckRequest(term, leader),
+                new TransportResponseHandler.Empty() {
                     @Override
-                    public TransportResponse.Empty read(StreamInput in) {
-                        return TransportResponse.Empty.INSTANCE;
+                    public Executor executor() {
+                        return TransportResponseHandler.TRANSPORT_WORKER;
                     }
 
                     @Override
-                    public void handleResponse(TransportResponse.Empty response) {
+                    public void handleResponse() {
                         fail("unexpected success");
                     }
 
@@ -534,37 +716,77 @@ public class FollowersCheckerTests extends ESTestCase {
                         assertThat(exp, not(nullValue()));
                         assertTrue(receivedException.compareAndSet(null, exp));
                     }
-
-                    @Override
-                    public String executor() {
-                        return Names.SAME;
-                    }
-                });
+                }
+            );
             deterministicTaskQueue.runAllTasks();
             assertTrue(calledCoordinator.get());
             assertThat(receivedException.get(), not(nullValue()));
             assertThat(receivedException.get().getRootCause().getMessage(), equalTo(exceptionMessage));
+            calledCoordinator.set(false);
+        }
+
+        {
+            // If it calls into the coordinator but the threadpool is shut down then the rejection is passed back to the caller
+            rejectExecution.set(true);
+            final long term = randomNonNegativeLong();
+            followersChecker.updateFastResponseState(term, randomFrom(Mode.LEADER, Mode.CANDIDATE));
+
+            final AtomicReference<TransportException> receivedException = new AtomicReference<>();
+            transportService.sendRequest(
+                follower,
+                FOLLOWER_CHECK_ACTION_NAME,
+                new FollowerCheckRequest(term, leader),
+                new TransportResponseHandler.Empty() {
+                    @Override
+                    public Executor executor() {
+                        return TransportResponseHandler.TRANSPORT_WORKER;
+                    }
+
+                    @Override
+                    public void handleResponse() {
+                        fail("unexpected success");
+                    }
+
+                    @Override
+                    public void handleException(TransportException exp) {
+                        assertThat(exp, not(nullValue()));
+                        assertTrue(receivedException.compareAndSet(null, exp));
+                    }
+                }
+            );
+            deterministicTaskQueue.runAllTasks();
+            assertFalse(calledCoordinator.get());
+            assertThat(receivedException.get(), not(nullValue()));
+            assertThat(receivedException.get().getRootCause().getMessage(), equalTo("simulated rejection"));
         }
     }
 
-   public void testPreferMasterNodes() {
+    public void testPreferMasterNodes() {
         List<DiscoveryNode> nodes = randomNodes(10);
         DiscoveryNodes.Builder discoNodesBuilder = DiscoveryNodes.builder();
         nodes.forEach(dn -> discoNodesBuilder.add(dn));
         DiscoveryNodes discoveryNodes = discoNodesBuilder.localNodeId(nodes.get(0).getId()).build();
         CapturingTransport capturingTransport = new CapturingTransport();
-        final Settings settings = Settings.builder().put(NODE_NAME_SETTING.getKey(), nodes.get(0).getName()).build();
-        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue(settings, random());
-        TransportService transportService = capturingTransport.createTransportService(Settings.EMPTY,
-                deterministicTaskQueue.getThreadPool(), TransportService.NOOP_TRANSPORT_INTERCEPTOR, x -> nodes.get(0), null, emptySet());
-        final FollowersChecker followersChecker = new FollowersChecker(Settings.EMPTY, transportService, fcr -> {
-            assert false : fcr;
-        }, (node, reason) -> {
-            assert false : node;
-        });
+        final DeterministicTaskQueue deterministicTaskQueue = new DeterministicTaskQueue();
+        TransportService transportService = capturingTransport.createTransportService(
+            Settings.EMPTY,
+            deterministicTaskQueue.getThreadPool(),
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            x -> nodes.get(0),
+            null,
+            emptySet()
+        );
+        final FollowersChecker followersChecker = new FollowersChecker(
+            Settings.EMPTY,
+            transportService,
+            fcr -> { assert false : fcr; },
+            (node, reason) -> {
+                assert false : node;
+            },
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         followersChecker.setCurrentNodes(discoveryNodes);
-        List<DiscoveryNode> followerTargets = Stream.of(capturingTransport.getCapturedRequestsAndClear())
-            .map(cr -> cr.node).collect(Collectors.toList());
+        List<DiscoveryNode> followerTargets = Stream.of(capturingTransport.getCapturedRequestsAndClear()).map(cr -> cr.node()).toList();
         List<DiscoveryNode> sortedFollowerTargets = new ArrayList<>(followerTargets);
         Collections.sort(sortedFollowerTargets, Comparator.comparing(n -> n.isMasterNode() == false));
         assertEquals(sortedFollowerTargets, followerTargets);
@@ -577,43 +799,50 @@ public class FollowersCheckerTests extends ESTestCase {
             if (frequently()) {
                 attributes.put("custom", randomBoolean() ? "match" : randomAlphaOfLengthBetween(3, 5));
             }
-            final DiscoveryNode node = newNode(i, attributes,
-                new HashSet<>(randomSubsetOf(DiscoveryNodeRole.BUILT_IN_ROLES)));
+            final DiscoveryNode node = newNode(i, attributes, new HashSet<>(randomSubsetOf(DiscoveryNodeRole.roles())));
             nodesList.add(node);
         }
         return nodesList;
     }
 
     private static DiscoveryNode newNode(int nodeId, Map<String, String> attributes, Set<DiscoveryNodeRole> roles) {
-        return new DiscoveryNode("name_" + nodeId, "node_" + nodeId, buildNewFakeTransportAddress(), attributes, roles,
-            Version.CURRENT);
+        return DiscoveryNodeUtils.builder("node_" + nodeId).name("name_" + nodeId).attributes(attributes).roles(roles).build();
     }
 
-    private static class ExpectsSuccess implements TransportResponseHandler<Empty> {
+    private static Settings randomSettings() {
+        final Builder settingsBuilder = Settings.builder();
+        if (randomBoolean()) {
+            settingsBuilder.put(FOLLOWER_CHECK_RETRY_COUNT_SETTING.getKey(), randomIntBetween(1, 10));
+        }
+        if (randomBoolean()) {
+            settingsBuilder.put(FOLLOWER_CHECK_INTERVAL_SETTING.getKey(), randomIntBetween(100, 100000) + "ms");
+        }
+        if (randomBoolean()) {
+            settingsBuilder.put(FOLLOWER_CHECK_TIMEOUT_SETTING.getKey(), randomIntBetween(1, 100000) + "ms");
+        }
+        return settingsBuilder.build();
+    }
+
+    private static class ExpectsSuccess extends TransportResponseHandler.Empty {
         private final AtomicBoolean responseReceived = new AtomicBoolean();
 
         @Override
-        public void handleResponse(Empty response) {
+        public Executor executor() {
+            return TransportResponseHandler.TRANSPORT_WORKER;
+        }
+
+        @Override
+        public void handleResponse() {
             assertTrue(responseReceived.compareAndSet(false, true));
         }
 
         @Override
         public void handleException(TransportException exp) {
-            throw new AssertionError("unexpected", exp);
-        }
-
-        @Override
-        public String executor() {
-            return Names.SAME;
+            fail(exp);
         }
 
         public boolean succeeded() {
             return responseReceived.get();
-        }
-
-        @Override
-        public TransportResponse.Empty read(StreamInput in) {
-            return TransportResponse.Empty.INSTANCE;
         }
 
     }
