@@ -1,50 +1,38 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.common.util;
 
-import org.apache.lucene.util.BytesRef;
-import org.apache.lucene.util.BytesRefArray;
-import org.apache.lucene.util.BytesRefBuilder;
-import org.apache.lucene.util.Counter;
+import org.elasticsearch.common.collect.Iterators;
 import org.elasticsearch.test.ESTestCase;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.SortedSet;
-import java.util.TreeSet;
+import java.util.Set;
 
-import static java.util.Collections.emptyMap;
+import static org.elasticsearch.common.util.CollectionUtils.appendToCopyNoNullElements;
+import static org.elasticsearch.common.util.CollectionUtils.concatLists;
 import static org.elasticsearch.common.util.CollectionUtils.eagerPartition;
+import static org.elasticsearch.common.util.CollectionUtils.ensureNoSelfReferences;
+import static org.elasticsearch.common.util.CollectionUtils.limitSize;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.lessThan;
 
 public class CollectionUtilsTests extends ESTestCase {
     public void testRotateEmpty() {
-        assertTrue(CollectionUtils.rotate(Collections.emptyList(), randomInt()).isEmpty());
+        assertTrue(CollectionUtils.rotate(List.of(), randomInt()).isEmpty());
     }
 
     public void testRotate() {
@@ -72,135 +60,145 @@ public class CollectionUtilsTests extends ESTestCase {
         }
     }
 
-    public void testSortAndDedupByteRefArray() {
-        SortedSet<BytesRef> set = new TreeSet<>();
-        final int numValues = scaledRandomIntBetween(0, 10000);
-        List<BytesRef> tmpList = new ArrayList<>();
-        BytesRefArray array = new BytesRefArray(Counter.newCounter());
-        for (int i = 0; i < numValues; i++) {
-            String s = randomRealisticUnicodeOfCodepointLengthBetween(1, 100);
-            set.add(new BytesRef(s));
-            tmpList.add(new BytesRef(s));
-            array.append(new BytesRef(s));
-        }
-        if (randomBoolean()) {
-            Collections.shuffle(tmpList, random());
-            for (BytesRef ref : tmpList) {
-                array.append(ref);
+    private <T> void assertUniquify(List<T> list, Comparator<T> cmp, int size) {
+        for (List<T> listCopy : List.of(new ArrayList<T>(list), new LinkedList<T>(list))) {
+            CollectionUtils.uniquify(listCopy, cmp);
+            for (int i = 0; i < listCopy.size() - 1; ++i) {
+                assertThat(cmp.compare(listCopy.get(i), listCopy.get(i + 1)), lessThan(0));
             }
+            assertThat(listCopy.size(), equalTo(size));
         }
-        int[] indices = new int[array.size()];
-        for (int i = 0; i < indices.length; i++) {
-            indices[i] = i;
-        }
-        int numUnique = CollectionUtils.sortAndDedup(array, indices);
-        assertThat(numUnique, equalTo(set.size()));
-        Iterator<BytesRef> iterator = set.iterator();
-
-        BytesRefBuilder spare = new BytesRefBuilder();
-        for (int i = 0; i < numUnique; i++) {
-            assertThat(iterator.hasNext(), is(true));
-            assertThat(array.get(spare, indices[i]), equalTo(iterator.next()));
-        }
-
     }
 
-    public void testSortByteRefArray() {
-        List<BytesRef> values = new ArrayList<>();
-        final int numValues = scaledRandomIntBetween(0, 10000);
-        BytesRefArray array = new BytesRefArray(Counter.newCounter());
-        for (int i = 0; i < numValues; i++) {
-            String s = randomRealisticUnicodeOfCodepointLengthBetween(1, 100);
-            values.add(new BytesRef(s));
-            array.append(new BytesRef(s));
-        }
-        if (randomBoolean()) {
-            Collections.shuffle(values, random());
-        }
-        int[] indices = new int[array.size()];
-        for (int i = 0; i < indices.length; i++) {
-            indices[i] = i;
-        }
-        CollectionUtils.sort(array, indices);
-        Collections.sort(values);
-        Iterator<BytesRef> iterator = values.iterator();
-
-        BytesRefBuilder spare = new BytesRefBuilder();
-        for (int i = 0; i < values.size(); i++) {
-            assertThat(iterator.hasNext(), is(true));
-            assertThat(array.get(spare, indices[i]), equalTo(iterator.next()));
-        }
-
+    public void testUniquify() {
+        assertUniquify(List.<Integer>of(), Comparator.naturalOrder(), 0);
+        assertUniquify(List.of(1), Comparator.naturalOrder(), 1);
+        assertUniquify(List.of(1, 2, 3), Comparator.naturalOrder(), 3);
+        assertUniquify(List.of(1, 1, 1), Comparator.naturalOrder(), 1);
+        assertUniquify(List.of(1, 2, 2, 3), Comparator.naturalOrder(), 3);
+        assertUniquify(List.of(1, 2, 2, 2), Comparator.naturalOrder(), 2);
     }
 
     public void testEmptyPartition() {
-        assertEquals(
-                Collections.emptyList(),
-                eagerPartition(Collections.emptyList(), 1)
-        );
+        assertEquals(List.of(), eagerPartition(List.of(), 1));
     }
 
     public void testSimplePartition() {
-        assertEquals(
-                Arrays.asList(
-                        Arrays.asList(1, 2),
-                        Arrays.asList(3, 4),
-                        Arrays.asList(5)
-                ),
-                eagerPartition(Arrays.asList(1, 2, 3, 4, 5), 2)
-        );
+        assertEquals(List.of(List.of(1, 2), List.of(3, 4), List.of(5)), eagerPartition(List.of(1, 2, 3, 4, 5), 2));
     }
 
     public void testSingletonPartition() {
-        assertEquals(
-                Arrays.asList(
-                        Arrays.asList(1),
-                        Arrays.asList(2),
-                        Arrays.asList(3),
-                        Arrays.asList(4),
-                        Arrays.asList(5)
-                ),
-                eagerPartition(Arrays.asList(1, 2, 3, 4, 5), 1)
-        );
+        assertEquals(List.of(List.of(1), List.of(2), List.of(3), List.of(4), List.of(5)), eagerPartition(List.of(1, 2, 3, 4, 5), 1));
     }
 
     public void testOversizedPartition() {
-        assertEquals(
-                Arrays.asList(Arrays.asList(1, 2, 3, 4, 5)),
-                eagerPartition(Arrays.asList(1, 2, 3, 4, 5), 15)
-        );
+        assertEquals(List.of(List.of(1, 2, 3, 4, 5)), eagerPartition(List.of(1, 2, 3, 4, 5), 15));
     }
 
     public void testPerfectPartition() {
         assertEquals(
-                Arrays.asList(
-                        Arrays.asList(1, 2, 3, 4, 5, 6),
-                        Arrays.asList(7, 8, 9, 10, 11, 12)
-                ),
-                eagerPartition(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12), 6)
+            List.of(List.of(1, 2, 3, 4, 5, 6), List.of(7, 8, 9, 10, 11, 12)),
+            eagerPartition(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12), 6)
         );
     }
 
     public void testEnsureNoSelfReferences() {
-        CollectionUtils.ensureNoSelfReferences(emptyMap(), "test with empty map");
-        CollectionUtils.ensureNoSelfReferences(null, "test with null");
+        ensureNoSelfReferences("string", "test with a string");
+        ensureNoSelfReferences(2, "test with a number");
+        ensureNoSelfReferences(true, "test with a boolean");
+        ensureNoSelfReferences(Map.of(), "test with an empty map");
+        ensureNoSelfReferences(Set.of(), "test with an empty set");
+        ensureNoSelfReferences(List.of(), "test with an empty list");
+        ensureNoSelfReferences(new Object[0], "test with an empty array");
+        ensureNoSelfReferences((Iterable<?>) Collections::emptyIterator, "test with an empty iterable");
+    }
 
+    public void testEnsureNoSelfReferencesMap() {
+        // map value
         {
             Map<String, Object> map = new HashMap<>();
             map.put("field", map);
 
-            IllegalArgumentException e = expectThrows(IllegalArgumentException.class,
-                () -> CollectionUtils.ensureNoSelfReferences(map, "test with self ref value"));
+            IllegalArgumentException e = expectThrows(
+                IllegalArgumentException.class,
+                () -> ensureNoSelfReferences(map, "test with self ref value")
+            );
             assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref value)"));
         }
+        // map key
         {
             Map<Object, Object> map = new HashMap<>();
             map.put(map, 1);
 
-            IllegalArgumentException e = expectThrows(IllegalArgumentException.class,
-                () -> CollectionUtils.ensureNoSelfReferences(map, "test with self ref key"));
+            IllegalArgumentException e = expectThrows(
+                IllegalArgumentException.class,
+                () -> ensureNoSelfReferences(map, "test with self ref key")
+            );
             assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref key)"));
         }
+        // nested map value
+        {
+            Map<String, Object> map = new HashMap<>();
+            map.put("field", Set.of(List.of((Iterable<?>) () -> Iterators.single(new Object[] { map }))));
 
+            IllegalArgumentException e = expectThrows(
+                IllegalArgumentException.class,
+                () -> ensureNoSelfReferences(map, "test with self ref nested value")
+            );
+            assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref nested value)"));
+        }
+    }
+
+    public void testEnsureNoSelfReferencesSet() {
+        Set<Object> set = new HashSet<>();
+        set.add("foo");
+        set.add(set);
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ensureNoSelfReferences(set, "test with self ref set")
+        );
+        assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref set)"));
+    }
+
+    public void testEnsureNoSelfReferencesList() {
+        List<Object> list = new ArrayList<>();
+        list.add("foo");
+        list.add(list);
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ensureNoSelfReferences(list, "test with self ref list")
+        );
+        assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref list)"));
+    }
+
+    public void testEnsureNoSelfReferencesArray() {
+        Object[] array = new Object[2];
+        array[0] = "foo";
+        array[1] = array;
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ensureNoSelfReferences(array, "test with self ref array")
+        );
+        assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref array)"));
+    }
+
+    public void testLimitSizeOfShortList() {
+        var shortList = randomList(0, 10, () -> "item");
+        assertThat(limitSize(shortList, 10), equalTo(shortList));
+    }
+
+    public void testLimitSizeOfLongList() {
+        var longList = randomList(10, 100, () -> "item");
+        assertThat(limitSize(longList, 10), equalTo(longList.subList(0, 10)));
+    }
+
+    public void testAppendToCopyNoNullElements() {
+        final List<String> oldList = randomList(3, () -> randomAlphaOfLength(10));
+        final String[] extraElements = randomArray(2, 4, String[]::new, () -> randomAlphaOfLength(10));
+        final List<String> newList = appendToCopyNoNullElements(oldList, extraElements);
+        assertThat(newList, equalTo(concatLists(oldList, List.of(extraElements))));
     }
 }
