@@ -1,31 +1,21 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 package fixture.azure;
 
 import com.sun.net.httpserver.Headers;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
-import org.elasticsearch.common.SuppressForbidden;
+
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.io.Streams;
 import org.elasticsearch.common.regex.Regex;
+import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.RestUtils;
 
@@ -37,24 +27,27 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+
+import static org.elasticsearch.repositories.azure.AzureFixtureHelper.assertValidBlockId;
 
 /**
  * Minimal HTTP handler that acts as an Azure compliant server
  */
 @SuppressForbidden(reason = "Uses a HttpServer to emulate an Azure endpoint")
 public class AzureHttpHandler implements HttpHandler {
-
     private final Map<String, BytesReference> blobs;
+    private final String account;
     private final String container;
 
-    public AzureHttpHandler(final String container) {
+    public AzureHttpHandler(final String account, final String container) {
+        this.account = Objects.requireNonNull(account);
         this.container = Objects.requireNonNull(container);
         this.blobs = new ConcurrentHashMap<>();
     }
@@ -67,22 +60,23 @@ public class AzureHttpHandler implements HttpHandler {
             assert read == -1 : "Request body should have been empty but saw [" + read + "]";
         }
         try {
-            if (Regex.simpleMatch("PUT /" + container + "/*blockid=*", request)) {
+            if (Regex.simpleMatch("PUT /" + account + "/" + container + "/*blockid=*", request)) {
                 // Put Block (https://docs.microsoft.com/en-us/rest/api/storageservices/put-block)
                 final Map<String, String> params = new HashMap<>();
-                RestUtils.decodeQueryString(exchange.getRequestURI().getQuery(), 0, params);
+                RestUtils.decodeQueryString(exchange.getRequestURI().getRawQuery(), 0, params);
 
                 final String blockId = params.get("blockid");
+                assert assertValidBlockId(blockId);
                 blobs.put(blockId, Streams.readFully(exchange.getRequestBody()));
                 exchange.sendResponseHeaders(RestStatus.CREATED.getStatus(), -1);
 
-            } else if (Regex.simpleMatch("PUT /" + container + "/*comp=blocklist*", request)) {
+            } else if (Regex.simpleMatch("PUT /" + account + "/" + container + "/*comp=blocklist*", request)) {
                 // Put Block List (https://docs.microsoft.com/en-us/rest/api/storageservices/put-block-list)
                 final String blockList = Streams.copyToString(new InputStreamReader(exchange.getRequestBody(), StandardCharsets.UTF_8));
                 final List<String> blockIds = Arrays.stream(blockList.split("<Latest>"))
                     .filter(line -> line.contains("</Latest>"))
                     .map(line -> line.substring(0, line.indexOf("</Latest>")))
-                    .collect(Collectors.toList());
+                    .toList();
 
                 final ByteArrayOutputStream blob = new ByteArrayOutputStream();
                 for (String blockId : blockIds) {
@@ -91,9 +85,10 @@ public class AzureHttpHandler implements HttpHandler {
                     block.writeTo(blob);
                 }
                 blobs.put(exchange.getRequestURI().getPath(), new BytesArray(blob.toByteArray()));
+                exchange.getResponseHeaders().add("x-ms-request-server-encrypted", "false");
                 exchange.sendResponseHeaders(RestStatus.CREATED.getStatus(), -1);
 
-            } else if (Regex.simpleMatch("PUT /" + container + "/*", request)) {
+            } else if (Regex.simpleMatch("PUT /" + account + "/" + container + "/*", request)) {
                 // PUT Blob (see https://docs.microsoft.com/en-us/rest/api/storageservices/put-blob)
                 final String ifNoneMatch = exchange.getRequestHeaders().getFirst("If-None-Match");
                 if ("*".equals(ifNoneMatch)) {
@@ -104,9 +99,10 @@ public class AzureHttpHandler implements HttpHandler {
                 } else {
                     blobs.put(exchange.getRequestURI().getPath(), Streams.readFully(exchange.getRequestBody()));
                 }
+                exchange.getResponseHeaders().add("x-ms-request-server-encrypted", "false");
                 exchange.sendResponseHeaders(RestStatus.CREATED.getStatus(), -1);
 
-            } else if (Regex.simpleMatch("HEAD /" + container + "/*", request)) {
+            } else if (Regex.simpleMatch("HEAD /" + account + "/" + container + "/*", request)) {
                 // Get Blob Properties (see https://docs.microsoft.com/en-us/rest/api/storageservices/get-blob-properties)
                 final BytesReference blob = blobs.get(exchange.getRequestURI().getPath());
                 if (blob == null) {
@@ -114,10 +110,11 @@ public class AzureHttpHandler implements HttpHandler {
                     return;
                 }
                 exchange.getResponseHeaders().add("x-ms-blob-content-length", String.valueOf(blob.length()));
-                exchange.getResponseHeaders().add("x-ms-blob-type", "blockblob");
+                exchange.getResponseHeaders().add("Content-Length", String.valueOf(blob.length()));
+                exchange.getResponseHeaders().add("x-ms-blob-type", "BlockBlob");
                 exchange.sendResponseHeaders(RestStatus.OK.getStatus(), -1);
 
-            } else if (Regex.simpleMatch("GET /" + container + "/*", request)) {
+            } else if (Regex.simpleMatch("GET /" + account + "/" + container + "/*", request)) {
                 // GET Object (https://docs.aws.amazon.com/AmazonS3/latest/API/RESTObjectGET.html)
                 final BytesReference blob = blobs.get(exchange.getRequestURI().getPath());
                 if (blob == null) {
@@ -132,28 +129,35 @@ public class AzureHttpHandler implements HttpHandler {
                     throw new AssertionError("Range header does not match expected format: " + range);
                 }
 
-                final int start = Integer.parseInt(matcher.group(1));
-                final int length = Integer.parseInt(matcher.group(2)) - start + 1;
+                final long start = Long.parseLong(matcher.group(1));
+                final long end = Long.parseLong(matcher.group(2));
+                var responseBlob = blob.slice(Math.toIntExact(start), Math.toIntExact(Math.min(end - start + 1, blob.length() - start)));
 
                 exchange.getResponseHeaders().add("Content-Type", "application/octet-stream");
-                exchange.getResponseHeaders().add("x-ms-blob-content-length", String.valueOf(length));
+                exchange.getResponseHeaders().add("x-ms-blob-content-length", String.valueOf(responseBlob.length()));
                 exchange.getResponseHeaders().add("x-ms-blob-type", "blockblob");
-                exchange.sendResponseHeaders(RestStatus.OK.getStatus(), length);
-                exchange.getResponseBody().write(blob.toBytesRef().bytes, start, length);
+                exchange.getResponseHeaders().add("ETag", "\"blockblob\"");
+                exchange.sendResponseHeaders(RestStatus.OK.getStatus(), responseBlob.length());
+                responseBlob.writeTo(exchange.getResponseBody());
 
-            } else if (Regex.simpleMatch("DELETE /" + container + "/*", request)) {
+            } else if (Regex.simpleMatch("DELETE /" + account + "/" + container + "/*", request)) {
                 // Delete Blob (https://docs.microsoft.com/en-us/rest/api/storageservices/delete-blob)
-                blobs.entrySet().removeIf(blob -> blob.getKey().startsWith(exchange.getRequestURI().getPath()));
-                exchange.sendResponseHeaders(RestStatus.ACCEPTED.getStatus(), -1);
+                final boolean deleted = blobs.entrySet().removeIf(blob -> blob.getKey().startsWith(exchange.getRequestURI().getPath()));
+                if (deleted) {
+                    exchange.sendResponseHeaders(RestStatus.ACCEPTED.getStatus(), -1);
+                } else {
+                    exchange.sendResponseHeaders(RestStatus.NOT_FOUND.getStatus(), -1);
+                }
 
-            } else if (Regex.simpleMatch("GET /container?restype=container&comp=list*", request)) {
+            } else if (Regex.simpleMatch("GET /" + account + "/" + container + "?*restype=container*comp=list*", request)) {
                 // List Blobs (https://docs.microsoft.com/en-us/rest/api/storageservices/list-blobs)
                 final Map<String, String> params = new HashMap<>();
                 RestUtils.decodeQueryString(exchange.getRequestURI().getQuery(), 0, params);
 
                 final StringBuilder list = new StringBuilder();
-                list.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>");
-                list.append("<EnumerationResults>");
+                list.append("""
+                    <?xml version="1.0" encoding="UTF-8"?>
+                    <EnumerationResults>""");
                 final String prefix = params.get("prefix");
                 final Set<String> blobPrefixes = new HashSet<>();
                 final String delimiter = params.get("delimiter");
@@ -162,10 +166,10 @@ public class AzureHttpHandler implements HttpHandler {
                 }
                 list.append("<Blobs>");
                 for (Map.Entry<String, BytesReference> blob : blobs.entrySet()) {
-                    if (prefix != null && blob.getKey().startsWith("/" + container + "/" + prefix) == false) {
+                    if (prefix != null && blob.getKey().startsWith("/" + account + "/" + container + "/" + prefix) == false) {
                         continue;
                     }
-                    String blobPath = blob.getKey().replace("/" + container + "/", "");
+                    String blobPath = blob.getKey().replace("/" + account + "/" + container + "/", "");
                     if (delimiter != null) {
                         int fromIndex = (prefix != null ? prefix.length() : 0);
                         int delimiterPosition = blobPath.indexOf(delimiter, fromIndex);
@@ -174,16 +178,22 @@ public class AzureHttpHandler implements HttpHandler {
                             continue;
                         }
                     }
-                    list.append("<Blob><Name>").append(blobPath).append("</Name>");
-                    list.append("<Properties><Content-Length>").append(blob.getValue().length()).append("</Content-Length>");
-                    list.append("<BlobType>BlockBlob</BlobType></Properties></Blob>");
+                    list.append(String.format(Locale.ROOT, """
+                        <Blob>
+                           <Name>%s</Name>
+                           <Properties>
+                             <Content-Length>%s</Content-Length>
+                             <BlobType>BlockBlob</BlobType>
+                           </Properties>
+                        </Blob>""", blobPath, blob.getValue().length()));
                 }
                 if (blobPrefixes.isEmpty() == false) {
                     blobPrefixes.forEach(p -> list.append("<BlobPrefix><Name>").append(p).append("</Name></BlobPrefix>"));
-
                 }
-                list.append("</Blobs>");
-                list.append("</EnumerationResults>");
+                list.append("""
+                    </Blobs>
+                    <NextMarker/>
+                    </EnumerationResults>""");
 
                 byte[] response = list.toString().getBytes(StandardCharsets.UTF_8);
                 exchange.getResponseHeaders().add("Content-Type", "application/xml");
@@ -220,8 +230,12 @@ public class AzureHttpHandler implements HttpHandler {
         if ("HEAD".equals(exchange.getRequestMethod())) {
             exchange.sendResponseHeaders(status.getStatus(), -1L);
         } else {
-            final byte[] response = ("<?xml version=\"1.0\" encoding=\"UTF-8\"?><Error><Code>" + errorCode + "</Code><Message>"
-                + status + "</Message></Error>").getBytes(StandardCharsets.UTF_8);
+            final byte[] response = (String.format(Locale.ROOT, """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <Error>
+                    <Code>%s</Code>
+                    <Message>%s</Message>
+                </Error>""", errorCode, status)).getBytes(StandardCharsets.UTF_8);
             exchange.sendResponseHeaders(status.getStatus(), response.length);
             exchange.getResponseBody().write(response);
         }
@@ -230,19 +244,15 @@ public class AzureHttpHandler implements HttpHandler {
     // See https://docs.microsoft.com/en-us/rest/api/storageservices/common-rest-api-error-codes
     private static String toAzureErrorCode(final RestStatus status) {
         assert status.getStatus() >= 400;
-        switch (status) {
-            case BAD_REQUEST:
-                return "InvalidMetadata";
-            case NOT_FOUND:
-                return "BlobNotFound";
-            case INTERNAL_SERVER_ERROR:
-                return "InternalError";
-            case SERVICE_UNAVAILABLE:
-                return "ServerBusy";
-            case CONFLICT:
-                return "BlobAlreadyExists";
-            default:
-                throw new IllegalArgumentException("Error code [" + status.getStatus() + "] is not mapped to an existing Azure code");
-        }
+        return switch (status) {
+            case BAD_REQUEST -> "InvalidMetadata";
+            case NOT_FOUND -> "BlobNotFound";
+            case INTERNAL_SERVER_ERROR -> "InternalError";
+            case SERVICE_UNAVAILABLE -> "ServerBusy";
+            case CONFLICT -> "BlobAlreadyExists";
+            default -> throw new IllegalArgumentException(
+                "Error code [" + status.getStatus() + "] is not mapped to an existing Azure code"
+            );
+        };
     }
 }
