@@ -1,23 +1,25 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
-
 package org.elasticsearch.xpack.ccr;
 
 import org.apache.lucene.util.SetOnce;
+import org.elasticsearch.TransportVersion;
+import org.elasticsearch.TransportVersions;
 import org.elasticsearch.action.ActionRequest;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.action.RequestValidators;
 import org.elasticsearch.action.admin.indices.alias.IndicesAliasesRequest;
 import org.elasticsearch.action.admin.indices.mapping.put.PutMappingRequest;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
-import org.elasticsearch.cluster.metadata.MetaData;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.cluster.routing.allocation.decider.AllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.ParseField;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.IndexScopedSettings;
@@ -25,16 +27,17 @@ import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.settings.SettingsFilter;
 import org.elasticsearch.common.settings.SettingsModule;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.env.Environment;
-import org.elasticsearch.env.NodeEnvironment;
+import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.index.IndexModule;
 import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.engine.EngineFactory;
-import org.elasticsearch.license.XPackLicenseState;
+import org.elasticsearch.indices.recovery.RecoverySettings;
 import org.elasticsearch.persistent.PersistentTaskParams;
 import org.elasticsearch.persistent.PersistentTasksExecutor;
 import org.elasticsearch.plugins.ActionPlugin;
+import org.elasticsearch.plugins.ClusterPlugin;
 import org.elasticsearch.plugins.EnginePlugin;
 import org.elasticsearch.plugins.PersistentTaskPlugin;
 import org.elasticsearch.plugins.Plugin;
@@ -42,25 +45,24 @@ import org.elasticsearch.plugins.RepositoryPlugin;
 import org.elasticsearch.repositories.Repository;
 import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestHandler;
-import org.elasticsearch.script.ScriptService;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ExecutorBuilder;
 import org.elasticsearch.threadpool.FixedExecutorBuilder;
 import org.elasticsearch.threadpool.ThreadPool;
-import org.elasticsearch.watcher.ResourceWatcherService;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
+import org.elasticsearch.xcontent.ParseField;
 import org.elasticsearch.xpack.ccr.action.AutoFollowCoordinator;
 import org.elasticsearch.xpack.ccr.action.CcrRequests;
 import org.elasticsearch.xpack.ccr.action.ShardChangesAction;
-import org.elasticsearch.xpack.ccr.action.ShardFollowTask;
 import org.elasticsearch.xpack.ccr.action.ShardFollowTaskCleaner;
 import org.elasticsearch.xpack.ccr.action.ShardFollowTasksExecutor;
+import org.elasticsearch.xpack.ccr.action.TransportActivateAutoFollowPatternAction;
 import org.elasticsearch.xpack.ccr.action.TransportCcrStatsAction;
 import org.elasticsearch.xpack.ccr.action.TransportDeleteAutoFollowPatternAction;
 import org.elasticsearch.xpack.ccr.action.TransportFollowInfoAction;
 import org.elasticsearch.xpack.ccr.action.TransportFollowStatsAction;
 import org.elasticsearch.xpack.ccr.action.TransportForgetFollowerAction;
 import org.elasticsearch.xpack.ccr.action.TransportGetAutoFollowPatternAction;
-import org.elasticsearch.xpack.ccr.action.TransportActivateAutoFollowPatternAction;
 import org.elasticsearch.xpack.ccr.action.TransportPauseFollowAction;
 import org.elasticsearch.xpack.ccr.action.TransportPutAutoFollowPatternAction;
 import org.elasticsearch.xpack.ccr.action.TransportPutFollowAction;
@@ -73,6 +75,7 @@ import org.elasticsearch.xpack.ccr.action.repositories.DeleteInternalCcrReposito
 import org.elasticsearch.xpack.ccr.action.repositories.GetCcrRestoreFileChunkAction;
 import org.elasticsearch.xpack.ccr.action.repositories.PutCcrRestoreSessionAction;
 import org.elasticsearch.xpack.ccr.action.repositories.PutInternalCcrRepositoryAction;
+import org.elasticsearch.xpack.ccr.allocation.CcrPrimaryFollowerAllocationDecider;
 import org.elasticsearch.xpack.ccr.index.engine.FollowingEngineFactory;
 import org.elasticsearch.xpack.ccr.repository.CcrRepository;
 import org.elasticsearch.xpack.ccr.repository.CcrRestoreSourceService;
@@ -89,22 +92,24 @@ import org.elasticsearch.xpack.ccr.rest.RestPutFollowAction;
 import org.elasticsearch.xpack.ccr.rest.RestResumeAutoFollowPatternAction;
 import org.elasticsearch.xpack.ccr.rest.RestResumeFollowAction;
 import org.elasticsearch.xpack.ccr.rest.RestUnfollowAction;
-import org.elasticsearch.xpack.core.XPackPlugin;
+import org.elasticsearch.xpack.core.XPackFeatureSet;
+import org.elasticsearch.xpack.core.XPackField;
 import org.elasticsearch.xpack.core.action.XPackInfoFeatureAction;
 import org.elasticsearch.xpack.core.action.XPackUsageFeatureAction;
 import org.elasticsearch.xpack.core.ccr.AutoFollowMetadata;
 import org.elasticsearch.xpack.core.ccr.ShardFollowNodeTaskStatus;
+import org.elasticsearch.xpack.core.ccr.action.ActivateAutoFollowPatternAction;
 import org.elasticsearch.xpack.core.ccr.action.CcrStatsAction;
 import org.elasticsearch.xpack.core.ccr.action.DeleteAutoFollowPatternAction;
 import org.elasticsearch.xpack.core.ccr.action.FollowInfoAction;
 import org.elasticsearch.xpack.core.ccr.action.FollowStatsAction;
 import org.elasticsearch.xpack.core.ccr.action.ForgetFollowerAction;
 import org.elasticsearch.xpack.core.ccr.action.GetAutoFollowPatternAction;
-import org.elasticsearch.xpack.core.ccr.action.ActivateAutoFollowPatternAction;
 import org.elasticsearch.xpack.core.ccr.action.PauseFollowAction;
 import org.elasticsearch.xpack.core.ccr.action.PutAutoFollowPatternAction;
 import org.elasticsearch.xpack.core.ccr.action.PutFollowAction;
 import org.elasticsearch.xpack.core.ccr.action.ResumeFollowAction;
+import org.elasticsearch.xpack.core.ccr.action.ShardFollowTask;
 import org.elasticsearch.xpack.core.ccr.action.UnfollowAction;
 
 import java.util.Arrays;
@@ -114,6 +119,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 
 import static java.util.Collections.emptyList;
@@ -123,7 +129,7 @@ import static org.elasticsearch.xpack.core.XPackSettings.CCR_ENABLED_SETTING;
 /**
  * Container class for CCR functionality.
  */
-public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, EnginePlugin, RepositoryPlugin {
+public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, EnginePlugin, RepositoryPlugin, ClusterPlugin {
 
     public static final String CCR_THREAD_POOL_NAME = "ccr";
     public static final String CCR_CUSTOM_METADATA_KEY = "ccr";
@@ -133,6 +139,7 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
     public static final String CCR_CUSTOM_METADATA_REMOTE_CLUSTER_NAME_KEY = "remote_cluster_name";
 
     public static final String REQUESTED_OPS_MISSING_METADATA_KEY = "es.requested_operations_missing";
+    public static final TransportVersion TRANSPORT_VERSION_ACTION_WITH_SHARD_ID = TransportVersions.V_8_9_X;
 
     private final boolean enabled;
     private final Settings settings;
@@ -148,7 +155,7 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
      */
     @SuppressWarnings("unused") // constructed reflectively by the plugin infrastructure
     public Ccr(final Settings settings) {
-        this(settings, new CcrLicenseChecker());
+        this(settings, new CcrLicenseChecker(settings));
     }
 
     /**
@@ -164,45 +171,43 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
     }
 
     @Override
-    public Collection<Object> createComponents(
-            final Client client,
-            final ClusterService clusterService,
-            final ThreadPool threadPool,
-            final ResourceWatcherService resourceWatcherService,
-            final ScriptService scriptService,
-            final NamedXContentRegistry xContentRegistry,
-            final Environment environment,
-            final NodeEnvironment nodeEnvironment,
-            final NamedWriteableRegistry namedWriteableRegistry) {
-        this.client = client;
+    @SuppressWarnings("HiddenField")
+    public Collection<?> createComponents(PluginServices services) {
+        this.client = services.client();
         if (enabled == false) {
             return emptyList();
         }
 
-        CcrSettings ccrSettings = new CcrSettings(settings, clusterService.getClusterSettings());
+        CcrSettings ccrSettings = new CcrSettings(settings, services.clusterService().getClusterSettings());
         this.ccrSettings.set(ccrSettings);
-        CcrRestoreSourceService restoreSourceService = new CcrRestoreSourceService(threadPool, ccrSettings);
+        CcrRestoreSourceService restoreSourceService = new CcrRestoreSourceService(services.threadPool(), ccrSettings);
         this.restoreSourceService.set(restoreSourceService);
-        return Arrays.asList(
+        return List.of(
             ccrLicenseChecker,
             restoreSourceService,
-            new CcrRepositoryManager(settings, clusterService, client),
-            new ShardFollowTaskCleaner(clusterService, threadPool, client),
+            new CcrRepositoryManager(settings, services.clusterService(), client),
+            new ShardFollowTaskCleaner(services.clusterService(), services.threadPool(), client),
             new AutoFollowCoordinator(
                 settings,
                 client,
-                clusterService,
+                services.clusterService(),
                 ccrLicenseChecker,
-                threadPool::relativeTimeInMillis,
-                threadPool::absoluteTimeInMillis,
-                threadPool.executor(Ccr.CCR_THREAD_POOL_NAME)));
+                services.threadPool()::relativeTimeInMillis,
+                services.threadPool()::absoluteTimeInMillis,
+                services.threadPool().executor(Ccr.CCR_THREAD_POOL_NAME)
+            )
+        );
     }
 
     @Override
-    public List<PersistentTasksExecutor<?>> getPersistentTasksExecutor(ClusterService clusterService,
-                                                                       ThreadPool threadPool,
-                                                                       Client client,
-                                                                       SettingsModule settingsModule) {
+    @SuppressWarnings("HiddenField")
+    public List<PersistentTasksExecutor<?>> getPersistentTasksExecutor(
+        ClusterService clusterService,
+        ThreadPool threadPool,
+        Client client,
+        SettingsModule settingsModule,
+        IndexNameExpressionResolver expressionResolver
+    ) {
         return Collections.singletonList(new ShardFollowTasksExecutor(client, threadPool, clusterService, settingsModule));
     }
 
@@ -214,96 +219,118 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
         }
 
         return Arrays.asList(
-                // internal actions
-                new ActionHandler<>(BulkShardOperationsAction.INSTANCE, TransportBulkShardOperationsAction.class),
-                new ActionHandler<>(ShardChangesAction.INSTANCE, ShardChangesAction.TransportAction.class),
-                new ActionHandler<>(PutInternalCcrRepositoryAction.INSTANCE,
-                    PutInternalCcrRepositoryAction.TransportPutInternalRepositoryAction.class),
-                new ActionHandler<>(DeleteInternalCcrRepositoryAction.INSTANCE,
-                    DeleteInternalCcrRepositoryAction.TransportDeleteInternalRepositoryAction.class),
-                new ActionHandler<>(PutCcrRestoreSessionAction.INSTANCE,
-                    PutCcrRestoreSessionAction.TransportPutCcrRestoreSessionAction.class),
-                new ActionHandler<>(ClearCcrRestoreSessionAction.INSTANCE,
-                    ClearCcrRestoreSessionAction.TransportDeleteCcrRestoreSessionAction.class),
-                new ActionHandler<>(GetCcrRestoreFileChunkAction.INSTANCE,
-                    GetCcrRestoreFileChunkAction.TransportGetCcrRestoreFileChunkAction.class),
-                // stats action
-                new ActionHandler<>(FollowStatsAction.INSTANCE, TransportFollowStatsAction.class),
-                new ActionHandler<>(CcrStatsAction.INSTANCE, TransportCcrStatsAction.class),
-                new ActionHandler<>(FollowInfoAction.INSTANCE, TransportFollowInfoAction.class),
-                // follow actions
-                new ActionHandler<>(PutFollowAction.INSTANCE, TransportPutFollowAction.class),
-                new ActionHandler<>(ResumeFollowAction.INSTANCE, TransportResumeFollowAction.class),
-                new ActionHandler<>(PauseFollowAction.INSTANCE, TransportPauseFollowAction.class),
-                new ActionHandler<>(UnfollowAction.INSTANCE, TransportUnfollowAction.class),
-                // auto-follow actions
-                new ActionHandler<>(DeleteAutoFollowPatternAction.INSTANCE, TransportDeleteAutoFollowPatternAction.class),
-                new ActionHandler<>(PutAutoFollowPatternAction.INSTANCE, TransportPutAutoFollowPatternAction.class),
-                new ActionHandler<>(GetAutoFollowPatternAction.INSTANCE, TransportGetAutoFollowPatternAction.class),
-                new ActionHandler<>(ActivateAutoFollowPatternAction.INSTANCE, TransportActivateAutoFollowPatternAction.class),
-                // forget follower action
-                new ActionHandler<>(ForgetFollowerAction.INSTANCE, TransportForgetFollowerAction.class),
-                usageAction,
-                infoAction);
+            // internal actions
+            new ActionHandler<>(BulkShardOperationsAction.INSTANCE, TransportBulkShardOperationsAction.class),
+            new ActionHandler<>(ShardChangesAction.INSTANCE, ShardChangesAction.TransportAction.class),
+            new ActionHandler<>(
+                PutInternalCcrRepositoryAction.INSTANCE,
+                PutInternalCcrRepositoryAction.TransportPutInternalRepositoryAction.class
+            ),
+            new ActionHandler<>(
+                DeleteInternalCcrRepositoryAction.INSTANCE,
+                DeleteInternalCcrRepositoryAction.TransportDeleteInternalRepositoryAction.class
+            ),
+            new ActionHandler<>(PutCcrRestoreSessionAction.INTERNAL_INSTANCE, PutCcrRestoreSessionAction.InternalTransportAction.class),
+            new ActionHandler<>(PutCcrRestoreSessionAction.INSTANCE, PutCcrRestoreSessionAction.TransportAction.class),
+            new ActionHandler<>(ClearCcrRestoreSessionAction.INTERNAL_INSTANCE, ClearCcrRestoreSessionAction.InternalTransportAction.class),
+            new ActionHandler<>(ClearCcrRestoreSessionAction.INSTANCE, ClearCcrRestoreSessionAction.TransportAction.class),
+            new ActionHandler<>(GetCcrRestoreFileChunkAction.INTERNAL_INSTANCE, GetCcrRestoreFileChunkAction.InternalTransportAction.class),
+            new ActionHandler<>(GetCcrRestoreFileChunkAction.INSTANCE, GetCcrRestoreFileChunkAction.TransportAction.class),
+            // stats action
+            new ActionHandler<>(FollowStatsAction.INSTANCE, TransportFollowStatsAction.class),
+            new ActionHandler<>(CcrStatsAction.INSTANCE, TransportCcrStatsAction.class),
+            new ActionHandler<>(FollowInfoAction.INSTANCE, TransportFollowInfoAction.class),
+            // follow actions
+            new ActionHandler<>(PutFollowAction.INSTANCE, TransportPutFollowAction.class),
+            new ActionHandler<>(ResumeFollowAction.INSTANCE, TransportResumeFollowAction.class),
+            new ActionHandler<>(PauseFollowAction.INSTANCE, TransportPauseFollowAction.class),
+            new ActionHandler<>(UnfollowAction.INSTANCE, TransportUnfollowAction.class),
+            // auto-follow actions
+            new ActionHandler<>(DeleteAutoFollowPatternAction.INSTANCE, TransportDeleteAutoFollowPatternAction.class),
+            new ActionHandler<>(PutAutoFollowPatternAction.INSTANCE, TransportPutAutoFollowPatternAction.class),
+            new ActionHandler<>(GetAutoFollowPatternAction.INSTANCE, TransportGetAutoFollowPatternAction.class),
+            new ActionHandler<>(ActivateAutoFollowPatternAction.INSTANCE, TransportActivateAutoFollowPatternAction.class),
+            // forget follower action
+            new ActionHandler<>(ForgetFollowerAction.INSTANCE, TransportForgetFollowerAction.class),
+            usageAction,
+            infoAction
+        );
     }
 
-    public List<RestHandler> getRestHandlers(Settings settings, RestController restController, ClusterSettings clusterSettings,
-                                             IndexScopedSettings indexScopedSettings, SettingsFilter settingsFilter,
-                                             IndexNameExpressionResolver indexNameExpressionResolver,
-                                             Supplier<DiscoveryNodes> nodesInCluster) {
+    public List<RestHandler> getRestHandlers(
+        Settings unused,
+        NamedWriteableRegistry namedWriteableRegistry,
+        RestController restController,
+        ClusterSettings clusterSettings,
+        IndexScopedSettings indexScopedSettings,
+        SettingsFilter settingsFilter,
+        IndexNameExpressionResolver indexNameExpressionResolver,
+        Supplier<DiscoveryNodes> nodesInCluster,
+        Predicate<NodeFeature> clusterSupportsFeature
+    ) {
         if (enabled == false) {
             return emptyList();
         }
 
         return Arrays.asList(
-                // stats API
-                new RestFollowStatsAction(restController),
-                new RestCcrStatsAction(restController),
-                new RestFollowInfoAction(restController),
-                // follow APIs
-                new RestPutFollowAction(restController),
-                new RestResumeFollowAction(restController),
-                new RestPauseFollowAction(restController),
-                new RestUnfollowAction(restController),
-                // auto-follow APIs
-                new RestDeleteAutoFollowPatternAction(restController),
-                new RestPutAutoFollowPatternAction(restController),
-                new RestGetAutoFollowPatternAction(restController),
-                new RestPauseAutoFollowPatternAction(restController),
-                new RestResumeAutoFollowPatternAction(restController),
-                // forget follower API
-                new RestForgetFollowerAction(restController));
+            // stats API
+            new RestFollowStatsAction(),
+            new RestCcrStatsAction(),
+            new RestFollowInfoAction(),
+            // follow APIs
+            new RestPutFollowAction(),
+            new RestResumeFollowAction(),
+            new RestPauseFollowAction(),
+            new RestUnfollowAction(),
+            // auto-follow APIs
+            new RestDeleteAutoFollowPatternAction(),
+            new RestPutAutoFollowPatternAction(),
+            new RestGetAutoFollowPatternAction(),
+            new RestPauseAutoFollowPatternAction(),
+            new RestResumeAutoFollowPatternAction(),
+            // forget follower API
+            new RestForgetFollowerAction()
+        );
     }
 
     public List<NamedWriteableRegistry.Entry> getNamedWriteables() {
         return Arrays.asList(
-                // Persistent action requests
-                new NamedWriteableRegistry.Entry(PersistentTaskParams.class, ShardFollowTask.NAME,
-                        ShardFollowTask::readFrom),
+            // Persistent action requests
+            new NamedWriteableRegistry.Entry(PersistentTaskParams.class, ShardFollowTask.NAME, ShardFollowTask::readFrom),
 
-                // Task statuses
-                new NamedWriteableRegistry.Entry(Task.Status.class, ShardFollowNodeTaskStatus.STATUS_PARSER_NAME,
-                        ShardFollowNodeTaskStatus::new)
+            // Task statuses
+            new NamedWriteableRegistry.Entry(
+                Task.Status.class,
+                ShardFollowNodeTaskStatus.STATUS_PARSER_NAME,
+                ShardFollowNodeTaskStatus::new
+            ),
+
+            // usage api
+            new NamedWriteableRegistry.Entry(XPackFeatureSet.Usage.class, XPackField.CCR, CCRInfoTransportAction.Usage::new)
         );
     }
 
     public List<NamedXContentRegistry.Entry> getNamedXContent() {
         return Arrays.asList(
-                // auto-follow metadata, persisted into the cluster state as XContent
-                new NamedXContentRegistry.Entry(
-                        MetaData.Custom.class,
-                        new ParseField(AutoFollowMetadata.TYPE),
-                        AutoFollowMetadata::fromXContent),
-                // persistent action requests
-                new NamedXContentRegistry.Entry(
-                        PersistentTaskParams.class,
-                        new ParseField(ShardFollowTask.NAME),
-                        ShardFollowTask::fromXContent),
-                // task statuses
-                new NamedXContentRegistry.Entry(
-                        ShardFollowNodeTaskStatus.class,
-                        new ParseField(ShardFollowNodeTaskStatus.STATUS_PARSER_NAME),
-                        ShardFollowNodeTaskStatus::fromXContent));
+            // auto-follow metadata, persisted into the cluster state as XContent
+            new NamedXContentRegistry.Entry(
+                Metadata.Custom.class,
+                new ParseField(AutoFollowMetadata.TYPE),
+                AutoFollowMetadata::fromXContent
+            ),
+            // persistent action requests
+            new NamedXContentRegistry.Entry(
+                PersistentTaskParams.class,
+                new ParseField(ShardFollowTask.NAME),
+                ShardFollowTask::fromXContent
+            ),
+            // task statuses
+            new NamedXContentRegistry.Entry(
+                ShardFollowNodeTaskStatus.class,
+                new ParseField(ShardFollowNodeTaskStatus.STATUS_PARSER_NAME),
+                ShardFollowNodeTaskStatus::fromXContent
+            )
+        );
     }
 
     /**
@@ -329,20 +356,34 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
         }
     }
 
+    @SuppressWarnings("HiddenField")
     public List<ExecutorBuilder<?>> getExecutorBuilders(Settings settings) {
-        if (enabled == false) {
-            return Collections.emptyList();
-        }
-
-        return Collections.singletonList(new FixedExecutorBuilder(settings, CCR_THREAD_POOL_NAME, 32, 100, "xpack.ccr.ccr_thread_pool"));
+        return Collections.singletonList(
+            new FixedExecutorBuilder(
+                settings,
+                CCR_THREAD_POOL_NAME,
+                32,
+                100,
+                "xpack.ccr.ccr_thread_pool",
+                EsExecutors.TaskTrackingConfig.DO_NOT_TRACK
+            )
+        );
     }
 
     @Override
-    public Map<String, Repository.Factory> getInternalRepositories(Environment env, NamedXContentRegistry namedXContentRegistry,
-                                                                   ClusterService clusterService) {
-        Repository.Factory repositoryFactory =
-            (metadata) -> new CcrRepository(metadata, client, ccrLicenseChecker, settings, ccrSettings.get(),
-                clusterService.getClusterApplierService().threadPool());
+    public Map<String, Repository.Factory> getInternalRepositories(
+        Environment env,
+        NamedXContentRegistry namedXContentRegistry,
+        ClusterService clusterService,
+        RecoverySettings recoverySettings
+    ) {
+        Repository.Factory repositoryFactory = (metadata) -> new CcrRepository(
+            metadata,
+            client,
+            settings,
+            ccrSettings.get(),
+            clusterService.getClusterApplierService().threadPool()
+        );
         return Collections.singletonMap(CcrRepository.TYPE, repositoryFactory);
     }
 
@@ -353,8 +394,6 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
         }
     }
 
-    protected XPackLicenseState getLicenseState() { return XPackPlugin.getSharedLicenseState(); }
-
     @Override
     public Collection<RequestValidators.RequestValidator<PutMappingRequest>> mappingRequestValidators() {
         return Collections.singletonList(CcrRequests.CCR_PUT_MAPPING_REQUEST_VALIDATOR);
@@ -363,5 +402,10 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
     @Override
     public Collection<RequestValidators.RequestValidator<IndicesAliasesRequest>> indicesAliasesRequestValidators() {
         return Collections.singletonList(CcrRequests.CCR_INDICES_ALIASES_REQUEST_VALIDATOR);
+    }
+
+    @Override
+    public Collection<AllocationDecider> createAllocationDeciders(Settings unused, ClusterSettings clusterSettings) {
+        return List.of(new CcrPrimaryFollowerAllocationDecider());
     }
 }
