@@ -1,14 +1,20 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.core.ml.datafeed;
 
 import com.carrotsearch.randomizedtesting.generators.CodepointSetGenerator;
+
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.ElasticsearchStatusException;
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
+import org.elasticsearch.action.search.SearchRequest;
+import org.elasticsearch.action.support.IndicesOptions;
+import org.elasticsearch.aggregations.AggregationsPlugin;
+import org.elasticsearch.aggregations.pipeline.DerivativePipelineAggregationBuilder;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.common.io.stream.NamedWriteableAwareStreamInput;
@@ -16,16 +22,9 @@ import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.unit.TimeValue;
-import org.elasticsearch.common.xcontent.DeprecationHandler;
-import org.elasticsearch.common.xcontent.LoggingDeprecationHandler;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentFactory;
+import org.elasticsearch.common.util.CollectionUtils;
 import org.elasticsearch.common.xcontent.XContentHelper;
-import org.elasticsearch.common.xcontent.XContentParseException;
-import org.elasticsearch.common.xcontent.XContentParser;
-import org.elasticsearch.common.xcontent.XContentType;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
 import org.elasticsearch.index.query.TermQueryBuilder;
@@ -33,18 +32,26 @@ import org.elasticsearch.script.Script;
 import org.elasticsearch.search.SearchModule;
 import org.elasticsearch.search.aggregations.AggregationBuilders;
 import org.elasticsearch.search.aggregations.AggregatorFactories;
-import org.elasticsearch.search.aggregations.PipelineAggregatorBuilders;
+import org.elasticsearch.search.aggregations.bucket.composite.CompositeAggregationBuilder;
+import org.elasticsearch.search.aggregations.bucket.composite.DateHistogramValuesSourceBuilder;
+import org.elasticsearch.search.aggregations.bucket.composite.TermsValuesSourceBuilder;
 import org.elasticsearch.search.aggregations.bucket.histogram.DateHistogramAggregationBuilder;
 import org.elasticsearch.search.aggregations.bucket.histogram.DateHistogramInterval;
 import org.elasticsearch.search.aggregations.bucket.terms.TermsAggregationBuilder;
 import org.elasticsearch.search.aggregations.metrics.AvgAggregationBuilder;
 import org.elasticsearch.search.aggregations.metrics.MaxAggregationBuilder;
 import org.elasticsearch.search.aggregations.pipeline.BucketScriptPipelineAggregationBuilder;
-import org.elasticsearch.search.aggregations.pipeline.DerivativePipelineAggregationBuilder;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.builder.SearchSourceBuilder.ScriptField;
-import org.elasticsearch.test.AbstractSerializingTestCase;
+import org.elasticsearch.test.AbstractXContentSerializingTestCase;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentParseException;
+import org.elasticsearch.xcontent.XContentParser;
+import org.elasticsearch.xcontent.XContentParserConfiguration;
+import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xcontent.json.JsonXContent;
 import org.elasticsearch.xpack.core.ml.datafeed.ChunkingConfig.Mode;
 import org.elasticsearch.xpack.core.ml.job.messages.Messages;
 import org.elasticsearch.xpack.core.ml.utils.QueryProvider;
@@ -54,13 +61,15 @@ import java.io.IOException;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static org.elasticsearch.xpack.core.ml.utils.QueryProviderTests.createRandomValidQueryProvider;
+import static org.elasticsearch.xpack.core.ml.datafeed.DatafeedConfigBuilderTests.createRandomizedDatafeedConfigBuilder;
 import static org.elasticsearch.xpack.core.ml.job.messages.Messages.DATAFEED_AGGREGATIONS_INTERVAL_MUST_BE_GREATER_THAN_ZERO;
+import static org.elasticsearch.xpack.core.ml.utils.QueryProviderTests.createTestQueryProvider;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
@@ -71,23 +80,9 @@ import static org.hamcrest.Matchers.lessThan;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
 
-public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedConfig> {
+public class DatafeedConfigTests extends AbstractXContentSerializingTestCase<DatafeedConfig> {
 
-    @AwaitsFix(bugUrl = "Tests need to be updated to use calendar/fixed interval explicitly")
-    public void testIntervalWarnings() {
-        /*
-        Placeholder test for visibility.  Datafeeds use calendar and fixed intervals through the deprecated
-        methods.  The randomized creation + final superclass tests made it impossible to add warning assertions,
-        so warnings have been disabled on this test.
-
-        When fixed, `enableWarningsCheck()` should be removed.
-         */
-    }
-
-    @Override
-    protected boolean enableWarningsCheck() {
-        return false;
-    }
+    private static final String[] EXPAND_WILDCARDS_VALUES = { "open", "closed", "hidden" };
 
     @Override
     protected DatafeedConfig createTestInstance() {
@@ -99,73 +94,22 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
     }
 
     public static DatafeedConfig createRandomizedDatafeedConfig(String jobId, long bucketSpanMillis) {
-        return createRandomizedDatafeedConfigBuilder(jobId, bucketSpanMillis).build();
+        return createRandomizedDatafeedConfig(jobId, randomValidDatafeedId(), bucketSpanMillis);
     }
 
-    private static DatafeedConfig.Builder createRandomizedDatafeedConfigBuilder(String jobId, long bucketSpanMillis) {
-        DatafeedConfig.Builder builder = new DatafeedConfig.Builder(randomValidDatafeedId(), jobId);
-        builder.setIndices(randomStringList(1, 10));
-        if (randomBoolean()) {
-            builder.setQueryProvider(createRandomValidQueryProvider(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10)));
-        }
-        boolean addScriptFields = randomBoolean();
-        if (addScriptFields) {
-            int scriptsSize = randomInt(3);
-            List<SearchSourceBuilder.ScriptField> scriptFields = new ArrayList<>(scriptsSize);
-            for (int scriptIndex = 0; scriptIndex < scriptsSize; scriptIndex++) {
-                scriptFields.add(new SearchSourceBuilder.ScriptField(randomAlphaOfLength(10), mockScript(randomAlphaOfLength(10)),
-                        randomBoolean()));
-            }
-            builder.setScriptFields(scriptFields);
-        }
-        Long aggHistogramInterval = null;
-        if (randomBoolean() && addScriptFields == false) {
-            // can only test with a single agg as the xcontent order gets randomized by test base class and then
-            // the actual xcontent isn't the same and test fail.
-            // Testing with a single agg is ok as we don't have special list writeable / xcontent logic
-            AggregatorFactories.Builder aggs = new AggregatorFactories.Builder();
-            aggHistogramInterval = randomNonNegativeLong();
-            aggHistogramInterval = aggHistogramInterval> bucketSpanMillis ? bucketSpanMillis : aggHistogramInterval;
-            aggHistogramInterval = aggHistogramInterval <= 0 ? 1 : aggHistogramInterval;
-            MaxAggregationBuilder maxTime = AggregationBuilders.max("time").field("time");
-            aggs.addAggregator(AggregationBuilders.dateHistogram("buckets")
-                    .fixedInterval(new DateHistogramInterval(aggHistogramInterval + "ms")).subAggregation(maxTime).field("time"));
-            builder.setParsedAggregations(aggs);
-        }
-        if (randomBoolean()) {
-            builder.setScrollSize(randomIntBetween(0, Integer.MAX_VALUE));
-        }
-        if (randomBoolean()) {
-            if (aggHistogramInterval == null) {
-                builder.setFrequency(TimeValue.timeValueSeconds(randomIntBetween(1, 1_000_000)));
-            } else {
-                builder.setFrequency(TimeValue.timeValueSeconds(randomIntBetween(1, 5) * aggHistogramInterval));
-            }
-        }
-        if (randomBoolean()) {
-            builder.setQueryDelay(TimeValue.timeValueMillis(randomIntBetween(1, 1_000_000)));
-        }
-        if (randomBoolean()) {
-            builder.setChunkingConfig(ChunkingConfigTests.createRandomizedChunk());
-        }
-        if (randomBoolean()) {
-            builder.setDelayedDataCheckConfig(DelayedDataCheckConfigTests.createRandomizedConfig(bucketSpanMillis));
-        }
-        if (randomBoolean()) {
-            builder.setMaxEmptySearches(randomIntBetween(10, 100));
-        }
-        return builder;
+    public static DatafeedConfig createRandomizedDatafeedConfig(String jobId, String datafeedId, long bucketSpanMillis) {
+        return createRandomizedDatafeedConfigBuilder(jobId, datafeedId, bucketSpanMillis).build();
     }
 
     @Override
     protected NamedWriteableRegistry getNamedWriteableRegistry() {
-        SearchModule searchModule = new SearchModule(Settings.EMPTY, Collections.emptyList());
+        SearchModule searchModule = new SearchModule(Settings.EMPTY, List.of(new AggregationsPlugin()));
         return new NamedWriteableRegistry(searchModule.getNamedWriteables());
     }
 
     @Override
     protected NamedXContentRegistry xContentRegistry() {
-        SearchModule searchModule = new SearchModule(Settings.EMPTY, Collections.emptyList());
+        SearchModule searchModule = new SearchModule(Settings.EMPTY, List.of(new AggregationsPlugin()));
         return new NamedXContentRegistry(searchModule.getNamedXContents());
     }
 
@@ -188,151 +132,194 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         return DatafeedConfig.STRICT_PARSER.apply(parser, null).build();
     }
 
-    private static final String FUTURE_DATAFEED = "{\n" +
-            "    \"datafeed_id\": \"farequote-datafeed\",\n" +
-            "    \"job_id\": \"farequote\",\n" +
-            "    \"frequency\": \"1h\",\n" +
-            "    \"indices\": [\"farequote1\", \"farequote2\"],\n" +
-            "    \"tomorrows_technology_today\": \"amazing\",\n" +
-            "    \"scroll_size\": 1234\n" +
-            "}";
+    private static final String FUTURE_DATAFEED = """
+        {
+            "datafeed_id": "farequote-datafeed",
+            "job_id": "farequote",
+            "frequency": "1h",
+            "indices": ["farequote1", "farequote2"],
+            "tomorrows_technology_today": "amazing",
+            "scroll_size": 1234
+        }""";
 
-    private static final String ANACHRONISTIC_QUERY_DATAFEED = "{\n" +
-            "    \"datafeed_id\": \"farequote-datafeed\",\n" +
-            "    \"job_id\": \"farequote\",\n" +
-            "    \"frequency\": \"1h\",\n" +
-            "    \"indices\": [\"farequote1\", \"farequote2\"],\n" +
-                 //query:match:type stopped being supported in 6.x
-            "    \"query\": {\"match\" : {\"query\":\"fieldName\", \"type\": \"phrase\"}},\n" +
-            "    \"scroll_size\": 1234\n" +
-            "}";
+    // query:match:type stopped being supported in 6.x
+    private static final String ANACHRONISTIC_QUERY_DATAFEED = """
+        {
+            "datafeed_id": "farequote-datafeed",
+            "job_id": "farequote",
+            "frequency": "1h",
+            "indices": ["farequote1", "farequote2"],
+            "query": {"match" : {"query":"fieldName", "type": "phrase"}},
+            "scroll_size": 1234
+        }""";
 
-    private static final String ANACHRONISTIC_AGG_DATAFEED = "{\n" +
-        "    \"datafeed_id\": \"farequote-datafeed\",\n" +
-        "    \"job_id\": \"farequote\",\n" +
-        "    \"frequency\": \"1h\",\n" +
-        "    \"indices\": [\"farequote1\", \"farequote2\"],\n" +
-        "    \"aggregations\": {\n" +
-        "    \"buckets\": {\n" +
-        "      \"date_histogram\": {\n" +
-        "        \"field\": \"time\",\n" +
-        "        \"fixed_interval\": \"360s\",\n" +
-        "        \"time_zone\": \"UTC\"\n" +
-        "      },\n" +
-        "      \"aggregations\": {\n" +
-        "        \"time\": {\n" +
-        "          \"max\": {\"field\": \"time\"}\n" +
-        "        },\n" +
-        "        \"airline\": {\n" +
-        "          \"terms\": {\n" +
-        "            \"field\": \"airline\",\n" +
-        "            \"size\": 0\n" + //size: 0 stopped being supported in 6.x
-        "          }\n" +
-        "        }\n" +
-        "      }\n" +
-        "    }\n" +
-        "  }\n" +
-        "}";
+    // size: 0 stopped being supported in 6.x
+    private static final String ANACHRONISTIC_AGG_DATAFEED = """
+        {
+            "datafeed_id": "farequote-datafeed",
+            "job_id": "farequote",
+            "frequency": "1h",
+            "indices": ["farequote1", "farequote2"],
+            "aggregations": {
+            "buckets": {
+              "date_histogram": {
+                "field": "time",
+                "fixed_interval": "360s",
+                "time_zone": "UTC"
+              },
+              "aggregations": {
+                "time": {
+                  "max": {"field": "time"}
+                },
+                "airline": {
+                  "terms": {
+                    "field": "airline",
+                    "size": 0
+                  }
+                }
+              }
+            }
+          }
+        }""";
 
-    private static final String MULTIPLE_AGG_DEF_DATAFEED = "{\n" +
-        "    \"datafeed_id\": \"farequote-datafeed\",\n" +
-        "    \"job_id\": \"farequote\",\n" +
-        "    \"frequency\": \"1h\",\n" +
-        "    \"indices\": [\"farequote1\", \"farequote2\"],\n" +
-        "    \"aggregations\": {\n" +
-        "    \"buckets\": {\n" +
-        "      \"date_histogram\": {\n" +
-        "        \"field\": \"time\",\n" +
-        "        \"interval\": \"360s\",\n" +
-        "        \"time_zone\": \"UTC\"\n" +
-        "      },\n" +
-        "      \"aggregations\": {\n" +
-        "        \"time\": {\n" +
-        "          \"max\": {\"field\": \"time\"}\n" +
-        "        }\n" +
-        "      }\n" +
-        "    }\n" +
-        "  }," +
-        "    \"aggs\": {\n" +
-        "    \"buckets2\": {\n" +
-        "      \"date_histogram\": {\n" +
-        "        \"field\": \"time\",\n" +
-        "        \"interval\": \"360s\",\n" +
-        "        \"time_zone\": \"UTC\"\n" +
-        "      },\n" +
-        "      \"aggregations\": {\n" +
-        "        \"time\": {\n" +
-        "          \"max\": {\"field\": \"time\"}\n" +
-        "        }\n" +
-        "      }\n" +
-        "    }\n" +
-        "  }\n" +
-        "}";
+    private static final String AGG_WITH_OLD_DATE_HISTOGRAM_INTERVAL = """
+        {
+            "datafeed_id": "farequote-datafeed",
+            "job_id": "farequote",
+            "frequency": "1h",
+            "indices": ["farequote1", "farequote2"],
+            "aggregations": {
+            "buckets": {
+              "date_histogram": {
+                "field": "time",
+                "interval": "360s",
+                "time_zone": "UTC"
+              },
+              "aggregations": {
+                "time": {
+                  "max": {"field": "time"}
+                }
+              }
+            }
+          }
+        }""";
+
+    private static final String MULTIPLE_AGG_DEF_DATAFEED = """
+        {
+            "datafeed_id": "farequote-datafeed",
+            "job_id": "farequote",
+            "frequency": "1h",
+            "indices": ["farequote1", "farequote2"],
+            "aggregations": {
+            "buckets": {
+              "date_histogram": {
+                "field": "time",
+                "fixed_interval": "360s",
+                "time_zone": "UTC"
+              },
+              "aggregations": {
+                "time": {
+                  "max": {"field": "time"}
+                }
+              }
+            }
+          },    "aggs": {
+            "buckets2": {
+              "date_histogram": {
+                "field": "time",
+                "fixed_interval": "360s",
+                "time_zone": "UTC"
+              },
+              "aggregations": {
+                "time": {
+                  "max": {"field": "time"}
+                }
+              }
+            }
+          }
+        }""";
 
     public void testFutureConfigParse() throws IOException {
-        XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-                .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, FUTURE_DATAFEED);
-        XContentParseException e = expectThrows(XContentParseException.class,
-                () -> DatafeedConfig.STRICT_PARSER.apply(parser, null).build());
+        XContentParser parser = parser(FUTURE_DATAFEED);
+        XContentParseException e = expectThrows(
+            XContentParseException.class,
+            () -> DatafeedConfig.STRICT_PARSER.apply(parser, null).build()
+        );
         assertEquals("[6:5] [datafeed_config] unknown field [tomorrows_technology_today]", e.getMessage());
     }
 
     public void testPastQueryConfigParse() throws IOException {
-        try(XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-            .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, ANACHRONISTIC_QUERY_DATAFEED)) {
+        try (XContentParser parser = parser(ANACHRONISTIC_QUERY_DATAFEED)) {
 
             DatafeedConfig config = DatafeedConfig.LENIENT_PARSER.apply(parser, null).build();
-            assertThat(config.getQueryParsingException().getMessage(),
-                equalTo("[match] query doesn't support multiple fields, found [query] and [type]"));
+            assertThat(
+                config.getQueryParsingException().getMessage(),
+                equalTo("[match] query doesn't support multiple fields, found [query] and [type]")
+            );
         }
 
-        try(XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-            .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, ANACHRONISTIC_QUERY_DATAFEED)) {
+        try (XContentParser parser = parser(ANACHRONISTIC_QUERY_DATAFEED)) {
 
-            XContentParseException e = expectThrows(XContentParseException.class,
-                () -> DatafeedConfig.STRICT_PARSER.apply(parser, null).build());
+            XContentParseException e = expectThrows(
+                XContentParseException.class,
+                () -> DatafeedConfig.STRICT_PARSER.apply(parser, null).build()
+            );
             assertEquals("[6:64] [datafeed_config] failed to parse field [query]", e.getMessage());
         }
     }
 
     public void testPastAggConfigParse() throws IOException {
-        try(XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-            .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, ANACHRONISTIC_AGG_DATAFEED)) {
+        try (XContentParser parser = parser(ANACHRONISTIC_AGG_DATAFEED)) {
 
             DatafeedConfig datafeedConfig = DatafeedConfig.LENIENT_PARSER.apply(parser, null).build();
-            assertThat(datafeedConfig.getAggParsingException().getMessage(),
-                equalTo("[size] must be greater than 0. Found [0] in [airline]"));
+            assertThat(
+                datafeedConfig.getAggParsingException().getMessage(),
+                equalTo("[size] must be greater than 0. Found [0] in [airline]")
+            );
         }
 
-        try(XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-            .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, ANACHRONISTIC_AGG_DATAFEED)) {
+        try (XContentParser parser = parser(ANACHRONISTIC_AGG_DATAFEED)) {
 
-            XContentParseException e = expectThrows(XContentParseException.class,
-                () -> DatafeedConfig.STRICT_PARSER.apply(parser, null).build());
+            XContentParseException e = expectThrows(
+                XContentParseException.class,
+                () -> DatafeedConfig.STRICT_PARSER.apply(parser, null).build()
+            );
+            assertEquals("[25:3] [datafeed_config] failed to parse field [aggregations]", e.getMessage());
+        }
+    }
+
+    public void testPastAggConfigOldDateHistogramParse() throws IOException {
+        try (XContentParser parser = parser(AGG_WITH_OLD_DATE_HISTOGRAM_INTERVAL)) {
+
+            DatafeedConfig datafeedConfig = DatafeedConfig.LENIENT_PARSER.apply(parser, null).build();
+            assertThat(datafeedConfig.getParsedAggregations(xContentRegistry()), is(not(nullValue())));
+        }
+
+        try (XContentParser parser = parser(ANACHRONISTIC_AGG_DATAFEED)) {
+
+            XContentParseException e = expectThrows(
+                XContentParseException.class,
+                () -> DatafeedConfig.STRICT_PARSER.apply(parser, null).build()
+            );
             assertEquals("[25:3] [datafeed_config] failed to parse field [aggregations]", e.getMessage());
         }
     }
 
     public void testFutureMetadataParse() throws IOException {
-        XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-                .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, FUTURE_DATAFEED);
+        XContentParser parser = parser(FUTURE_DATAFEED);
         // Unlike the config version of this test, the metadata parser should tolerate the unknown future field
         assertNotNull(DatafeedConfig.LENIENT_PARSER.apply(parser, null).build());
     }
 
     public void testMultipleDefinedAggParse() throws IOException {
-        try(XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-            .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, MULTIPLE_AGG_DEF_DATAFEED)) {
-            XContentParseException ex = expectThrows(XContentParseException.class,
-                () -> DatafeedConfig.LENIENT_PARSER.apply(parser, null));
+        try (XContentParser parser = parser(MULTIPLE_AGG_DEF_DATAFEED)) {
+            XContentParseException ex = expectThrows(XContentParseException.class, () -> DatafeedConfig.LENIENT_PARSER.apply(parser, null));
             assertThat(ex.getMessage(), equalTo("[32:3] [datafeed_config] failed to parse field [aggs]"));
             assertNotNull(ex.getCause());
             assertThat(ex.getCause().getMessage(), equalTo("Found two aggregation definitions: [aggs] and [aggregations]"));
         }
-        try(XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-            .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, MULTIPLE_AGG_DEF_DATAFEED)) {
-            XContentParseException ex = expectThrows(XContentParseException.class,
-                () -> DatafeedConfig.STRICT_PARSER.apply(parser, null));
+        try (XContentParser parser = parser(MULTIPLE_AGG_DEF_DATAFEED)) {
+            XContentParseException ex = expectThrows(XContentParseException.class, () -> DatafeedConfig.STRICT_PARSER.apply(parser, null));
             assertThat(ex.getMessage(), equalTo("[32:3] [datafeed_config] failed to parse field [aggs]"));
             assertNotNull(ex.getCause());
             assertThat(ex.getCause().getMessage(), equalTo("Found two aggregation definitions: [aggs] and [aggregations]"));
@@ -340,7 +327,7 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
     }
 
     public void testToXContentForInternalStorage() throws IOException {
-        DatafeedConfig.Builder builder = createRandomizedDatafeedConfigBuilder("foo", 300);
+        DatafeedConfig.Builder builder = createRandomizedDatafeedConfigBuilder("foo", randomValidDatafeedId(), 300);
 
         // headers are only persisted to cluster state
         Map<String, String> headers = new HashMap<>();
@@ -351,16 +338,14 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         ToXContent.MapParams params = new ToXContent.MapParams(Collections.singletonMap(ToXContentParams.FOR_INTERNAL_STORAGE, "true"));
 
         BytesReference forClusterstateXContent = XContentHelper.toXContent(config, XContentType.JSON, params, false);
-        XContentParser parser = XContentFactory.xContent(XContentType.JSON)
-                .createParser(xContentRegistry(), LoggingDeprecationHandler.INSTANCE, forClusterstateXContent.streamInput());
+        XContentParser parser = parser(forClusterstateXContent);
 
         DatafeedConfig parsedConfig = DatafeedConfig.LENIENT_PARSER.apply(parser, null).build();
         assertThat(parsedConfig.getHeaders(), hasEntry("header-name", "header-value"));
 
         // headers are not written without the FOR_INTERNAL_STORAGE param
         BytesReference nonClusterstateXContent = XContentHelper.toXContent(config, XContentType.JSON, ToXContent.EMPTY_PARAMS, false);
-        parser = XContentFactory.xContent(XContentType.JSON)
-                .createParser(xContentRegistry(), LoggingDeprecationHandler.INSTANCE, nonClusterstateXContent.streamInput());
+        parser = parser(nonClusterstateXContent);
 
         parsedConfig = DatafeedConfig.LENIENT_PARSER.apply(parser, null).build();
         assertThat(parsedConfig.getHeaders().entrySet(), hasSize(0));
@@ -413,8 +398,10 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
 
     public void testCheckValid_GivenInvalidMaxEmptySearches() {
         DatafeedConfig.Builder conf = new DatafeedConfig.Builder("datafeed1", "job1");
-        ElasticsearchStatusException e =
-            expectThrows(ElasticsearchStatusException.class, () -> conf.setMaxEmptySearches(randomFrom(-2, 0)));
+        ElasticsearchStatusException e = expectThrows(
+            ElasticsearchStatusException.class,
+            () -> conf.setMaxEmptySearches(randomFrom(-2, 0))
+        );
         assertThat(e.getMessage(), containsString("Invalid max_empty_searches value"));
     }
 
@@ -432,16 +419,6 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         assertEquals(Messages.getMessage(Messages.DATAFEED_CONFIG_INVALID_OPTION_VALUE, "indices", "[]"), e.getMessage());
     }
 
-    public void testCheckValid_GivenIndicesContainsOnlyNulls() {
-        List<String> indices = new ArrayList<>();
-        indices.add(null);
-        indices.add(null);
-        DatafeedConfig.Builder conf = new DatafeedConfig.Builder("datafeed1", "job1");
-        conf.setIndices(indices);
-        ElasticsearchException e = ESTestCase.expectThrows(ElasticsearchException.class, conf::build);
-        assertEquals(Messages.getMessage(Messages.DATAFEED_CONFIG_INVALID_OPTION_VALUE, "indices", "[null, null]"), e.getMessage());
-    }
-
     public void testCheckValid_GivenIndicesContainsOnlyEmptyStrings() {
         List<String> indices = new ArrayList<>();
         indices.add("");
@@ -454,9 +431,11 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
 
     public void testCheckValid_GivenNegativeQueryDelay() {
         DatafeedConfig.Builder conf = new DatafeedConfig.Builder("datafeed1", "job1");
-        IllegalArgumentException e = ESTestCase.expectThrows(IllegalArgumentException.class,
-                () -> conf.setQueryDelay(TimeValue.timeValueMillis(-10)));
-        assertEquals("query_delay cannot be less than 0. Value = -10", e.getMessage());
+        IllegalArgumentException e = ESTestCase.expectThrows(
+            IllegalArgumentException.class,
+            () -> conf.setQueryDelay(TimeValue.timeValueMillis(-1))
+        );
+        assertEquals("query_delay cannot be less than 0. Value = -1", e.getMessage());
     }
 
     public void testCheckValid_GivenZeroFrequency() {
@@ -467,8 +446,10 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
 
     public void testCheckValid_GivenNegativeFrequency() {
         DatafeedConfig.Builder conf = new DatafeedConfig.Builder("datafeed1", "job1");
-        IllegalArgumentException e = ESTestCase.expectThrows(IllegalArgumentException.class,
-                () -> conf.setFrequency(TimeValue.timeValueMinutes(-1)));
+        IllegalArgumentException e = ESTestCase.expectThrows(
+            IllegalArgumentException.class,
+            () -> conf.setFrequency(TimeValue.timeValueMinutes(-1))
+        );
         assertEquals("frequency cannot be less or equal than 0. Value = -1", e.getMessage());
     }
 
@@ -481,13 +462,39 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
     public void testBuild_GivenScriptFieldsAndAggregations() {
         DatafeedConfig.Builder datafeed = new DatafeedConfig.Builder("datafeed1", "job1");
         datafeed.setIndices(Collections.singletonList("my_index"));
-        datafeed.setScriptFields(Collections.singletonList(new SearchSourceBuilder.ScriptField(randomAlphaOfLength(10),
-                mockScript(randomAlphaOfLength(10)), randomBoolean())));
+        datafeed.setScriptFields(
+            Collections.singletonList(
+                new SearchSourceBuilder.ScriptField(randomAlphaOfLength(10), mockScript(randomAlphaOfLength(10)), randomBoolean())
+            )
+        );
         datafeed.setParsedAggregations(new AggregatorFactories.Builder().addAggregator(AggregationBuilders.avg("foo")));
 
         ElasticsearchException e = expectThrows(ElasticsearchException.class, datafeed::build);
 
         assertThat(e.getMessage(), equalTo("script_fields cannot be used in combination with aggregations"));
+    }
+
+    public void testBuild_GivenRuntimeMappingMissingType() {
+        DatafeedConfig.Builder builder = new DatafeedConfig.Builder("datafeed1", "job1");
+        builder.setIndices(Collections.singletonList("my_index"));
+        Map<String, Object> properties = new HashMap<>();
+        properties.put("type_field_is_missing", "");
+        Map<String, Object> fields = new HashMap<>();
+        fields.put("runtime_field_foo", properties);
+        builder.setRuntimeMappings(fields);
+
+        ElasticsearchException e = expectThrows(ElasticsearchException.class, builder::build);
+        assertThat(e.getMessage(), equalTo("No type specified for runtime field [runtime_field_foo]"));
+    }
+
+    public void testBuild_GivenInvalidRuntimeMapping() {
+        DatafeedConfig.Builder builder = new DatafeedConfig.Builder("datafeed1", "job1");
+        builder.setIndices(Collections.singletonList("my_index"));
+        Map<String, Object> fields = new HashMap<>();
+        fields.put("field_is_not_an_object", "");
+        builder.setRuntimeMappings(fields);
+        ElasticsearchException e = expectThrows(ElasticsearchException.class, builder::build);
+        assertThat(e.getMessage(), equalTo("Expected map for runtime field [field_is_not_an_object] definition but got a String"));
     }
 
     public void testHasAggregations_GivenNull() {
@@ -502,8 +509,14 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         DatafeedConfig.Builder builder = new DatafeedConfig.Builder("datafeed1", "job1");
         builder.setIndices(Collections.singletonList("myIndex"));
         MaxAggregationBuilder maxTime = AggregationBuilders.max("time").field("time");
-        builder.setParsedAggregations(new AggregatorFactories.Builder().addAggregator(
-                AggregationBuilders.dateHistogram("time").interval(300000).subAggregation(maxTime).field("time")));
+        builder.setParsedAggregations(
+            new AggregatorFactories.Builder().addAggregator(
+                AggregationBuilders.dateHistogram("time")
+                    .fixedInterval(new DateHistogramInterval(300000 + "ms"))
+                    .subAggregation(maxTime)
+                    .field("time")
+            )
+        );
         DatafeedConfig datafeedConfig = builder.build();
 
         assertThat(datafeedConfig.hasAggregations(), is(true));
@@ -523,8 +536,8 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         DatafeedConfig.Builder builder = new DatafeedConfig.Builder("datafeed1", "job1");
         builder.setIndices(Collections.singletonList("myIndex"));
         MaxAggregationBuilder maxTime = AggregationBuilders.max("time").field("time");
-        builder.setParsedAggregations(new AggregatorFactories.Builder().addAggregator(
-                AggregationBuilders.histogram("time").subAggregation(maxTime).field("time"))
+        builder.setParsedAggregations(
+            new AggregatorFactories.Builder().addAggregator(AggregationBuilders.histogram("time").subAggregation(maxTime).field("time"))
         );
 
         ElasticsearchException e = expectThrows(ElasticsearchException.class, builder::build);
@@ -534,20 +547,14 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
 
     public void testBuild_GivenDateHistogramWithInvalidTimeZone() {
         MaxAggregationBuilder maxTime = AggregationBuilders.max("time").field("time");
-        DateHistogramAggregationBuilder dateHistogram = AggregationBuilders.dateHistogram("bucket").field("time")
-                .interval(300000L).timeZone(ZoneId.of("CET")).subAggregation(maxTime);
-        ElasticsearchException e = expectThrows(ElasticsearchException.class,
-                () -> createDatafeedWithDateHistogram(dateHistogram));
+        DateHistogramAggregationBuilder dateHistogram = AggregationBuilders.dateHistogram("bucket")
+            .field("time")
+            .fixedInterval(new DateHistogramInterval("30000ms"))
+            .timeZone(ZoneId.of("CET"))
+            .subAggregation(maxTime);
+        ElasticsearchException e = expectThrows(ElasticsearchException.class, () -> createDatafeedWithDateHistogram(dateHistogram));
 
         assertThat(e.getMessage(), equalTo("ML requires date_histogram.time_zone to be UTC"));
-    }
-
-    @AwaitsFix(bugUrl = "Needs ML to look at and fix.  Unclear how this should be handled, interval is not an optional param")
-    public void testBuild_GivenDateHistogramWithDefaultInterval() {
-        ElasticsearchException e = expectThrows(ElasticsearchException.class,
-                () -> createDatafeedWithDateHistogram((String) null));
-
-        assertThat(e.getMessage(), containsString("Aggregation interval must be greater than 0"));
     }
 
     public void testBuild_GivenValidDateHistogram() {
@@ -562,22 +569,27 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         assertThat(createDatafeedWithDateHistogram("1d").getHistogramIntervalMillis(xContentRegistry()), equalTo(millisInDay));
         assertThat(createDatafeedWithDateHistogram("7d").getHistogramIntervalMillis(xContentRegistry()), equalTo(7 * millisInDay));
 
-        assertThat(createDatafeedWithDateHistogram(7 * millisInDay + 1).getHistogramIntervalMillis(xContentRegistry()),
-                equalTo(7 * millisInDay + 1));
+        assertThat(
+            createDatafeedWithDateHistogram(7 * millisInDay + 1).getHistogramIntervalMillis(xContentRegistry()),
+            equalTo(7 * millisInDay + 1)
+        );
     }
 
     public void testBuild_GivenDateHistogramWithMoreThanCalendarWeek() {
-        ElasticsearchException e = expectThrows(ElasticsearchException.class,
-                () -> createDatafeedWithDateHistogram("8d"));
+        ElasticsearchException e = expectThrows(ElasticsearchException.class, () -> createDatafeedWithDateHistogram("month"));
 
-        assertThat(e.getMessage(), containsString("When specifying a date_histogram calendar interval [8d]"));
+        assertThat(e.getMessage(), containsString("When specifying a date_histogram calendar interval [month]"));
     }
 
     public void testDefaultChunkingConfig_GivenAggregations() {
-        assertThat(createDatafeedWithDateHistogram("1s").getChunkingConfig(),
-                equalTo(ChunkingConfig.newManual(TimeValue.timeValueSeconds(1000))));
-        assertThat(createDatafeedWithDateHistogram("2h").getChunkingConfig(),
-                equalTo(ChunkingConfig.newManual(TimeValue.timeValueHours(2000))));
+        assertThat(
+            createDatafeedWithDateHistogram("1s").getChunkingConfig(),
+            equalTo(ChunkingConfig.newManual(TimeValue.timeValueSeconds(1000)))
+        );
+        assertThat(
+            createDatafeedWithDateHistogram("2h").getChunkingConfig(),
+            equalTo(ChunkingConfig.newManual(TimeValue.timeValueHours(2000)))
+        );
     }
 
     public void testChunkingConfig_GivenExplicitSetting() {
@@ -589,10 +601,68 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
     public void testCheckHistogramAggregationHasChildMaxTimeAgg() {
         DateHistogramAggregationBuilder dateHistogram = AggregationBuilders.dateHistogram("time_agg").field("max_time");
 
-        ElasticsearchException e = expectThrows(ElasticsearchException.class,
-                () -> DatafeedConfig.Builder.checkHistogramAggregationHasChildMaxTimeAgg(dateHistogram));
+        ElasticsearchException e = expectThrows(
+            ElasticsearchException.class,
+            () -> DatafeedConfig.Builder.checkHistogramAggregationHasChildMaxTimeAgg(dateHistogram)
+        );
 
         assertThat(e.getMessage(), containsString("Date histogram must have nested max aggregation for time_field [max_time]"));
+    }
+
+    public void testValidateCompositeAggValueSources_MustHaveExactlyOneDateValue() {
+        CompositeAggregationBuilder aggregationBuilder = AggregationBuilders.composite(
+            "buckets",
+            Arrays.asList(new TermsValuesSourceBuilder("foo").field("bar"))
+        );
+        ElasticsearchStatusException ex = expectThrows(
+            ElasticsearchStatusException.class,
+            () -> DatafeedConfig.Builder.validateCompositeAggregationSources(aggregationBuilder)
+        );
+        assertThat(ex.getMessage(), containsString("must have exactly one date_histogram source"));
+
+        CompositeAggregationBuilder aggregationBuilderWithMoreDateHisto = AggregationBuilders.composite(
+            "buckets",
+            Arrays.asList(
+                new TermsValuesSourceBuilder("foo").field("bar"),
+                new DateHistogramValuesSourceBuilder("date1").field("time").fixedInterval(DateHistogramInterval.days(1)),
+                new DateHistogramValuesSourceBuilder("date2").field("time").fixedInterval(DateHistogramInterval.days(1))
+            )
+        );
+        ex = expectThrows(
+            ElasticsearchStatusException.class,
+            () -> DatafeedConfig.Builder.validateCompositeAggregationSources(aggregationBuilderWithMoreDateHisto)
+        );
+        assertThat(ex.getMessage(), containsString("must have exactly one date_histogram source"));
+    }
+
+    public void testValidateCompositeAggValueSources_DateHistoWithMissingBucket() {
+        CompositeAggregationBuilder aggregationBuilder = AggregationBuilders.composite(
+            "buckets",
+            Arrays.asList(
+                new TermsValuesSourceBuilder("foo").field("bar"),
+                new DateHistogramValuesSourceBuilder("date1").field("time").fixedInterval(DateHistogramInterval.days(1)).missingBucket(true)
+            )
+        );
+        ElasticsearchStatusException ex = expectThrows(
+            ElasticsearchStatusException.class,
+            () -> DatafeedConfig.Builder.validateCompositeAggregationSources(aggregationBuilder)
+        );
+        assertThat(ex.getMessage(), containsString("does not support missing_buckets"));
+    }
+
+    public void testValidateCompositeAggValueSources_DateHistoBadOrder() {
+        CompositeAggregationBuilder aggregationBuilder = AggregationBuilders.composite(
+            "buckets",
+            Arrays.asList(
+                new TermsValuesSourceBuilder("foo").field("bar"),
+                new DateHistogramValuesSourceBuilder("date1").field("time").fixedInterval(DateHistogramInterval.days(1)).order("desc")
+            )
+        );
+        ElasticsearchStatusException ex = expectThrows(
+            ElasticsearchStatusException.class,
+            () -> DatafeedConfig.Builder.validateCompositeAggregationSources(aggregationBuilder)
+        );
+        assertThat(ex.getMessage(), containsString("must be sorted in ascending order"));
     }
 
     public void testValidateAggregations_GivenMulitpleHistogramAggs() {
@@ -608,16 +678,20 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         TermsAggregationBuilder toplevelTerms = AggregationBuilders.terms("top_level");
         toplevelTerms.subAggregation(dateHistogram);
 
-        ElasticsearchException e = expectThrows(ElasticsearchException.class,
-            () -> DatafeedConfig.validateAggregations(new AggregatorFactories.Builder().addAggregator(toplevelTerms)));
+        ElasticsearchException e = expectThrows(
+            ElasticsearchException.class,
+            () -> DatafeedConfig.validateAggregations(new AggregatorFactories.Builder().addAggregator(toplevelTerms))
+        );
 
         assertEquals("Aggregations can only have 1 date_histogram or histogram aggregation", e.getMessage());
     }
 
     public void testDefaultFrequency_GivenNegative() {
         DatafeedConfig datafeed = createTestInstance();
-        ESTestCase.expectThrows(IllegalArgumentException.class,
-            () -> datafeed.defaultFrequency(TimeValue.timeValueSeconds(-1), xContentRegistry()));
+        ESTestCase.expectThrows(
+            IllegalArgumentException.class,
+            () -> datafeed.defaultFrequency(TimeValue.timeValueSeconds(-1), xContentRegistry())
+        );
     }
 
     public void testDefaultFrequency_GivenNoAggregations() {
@@ -649,8 +723,8 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         assertEquals(TimeValue.timeValueHours(1), datafeed.defaultFrequency(TimeValue.timeValueHours(48), xContentRegistry()));
     }
 
-    public void testDefaultFrequency_GivenAggregationsWithHistogramInterval_1_Second() {
-        DatafeedConfig datafeed = createDatafeedWithDateHistogram("1s");
+    public void testDefaultFrequency_GivenAggregationsWithHistogramOrCompositeInterval_1_Second() {
+        DatafeedConfig datafeed = randomBoolean() ? createDatafeedWithDateHistogram("1s") : createDatafeedWithCompositeAgg("1s");
 
         assertEquals(TimeValue.timeValueMinutes(1), datafeed.defaultFrequency(TimeValue.timeValueSeconds(60), xContentRegistry()));
         assertEquals(TimeValue.timeValueMinutes(1), datafeed.defaultFrequency(TimeValue.timeValueSeconds(90), xContentRegistry()));
@@ -662,8 +736,8 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         assertEquals(TimeValue.timeValueHours(1), datafeed.defaultFrequency(TimeValue.timeValueHours(13), xContentRegistry()));
     }
 
-    public void testDefaultFrequency_GivenAggregationsWithHistogramInterval_1_Minute() {
-        DatafeedConfig datafeed = createDatafeedWithDateHistogram("1m");
+    public void testDefaultFrequency_GivenAggregationsWithHistogramOrCompositeInterval_1_Minute() {
+        DatafeedConfig datafeed = randomBoolean() ? createDatafeedWithDateHistogram("1m") : createDatafeedWithCompositeAgg("1m");
 
         assertEquals(TimeValue.timeValueMinutes(1), datafeed.defaultFrequency(TimeValue.timeValueSeconds(60), xContentRegistry()));
         assertEquals(TimeValue.timeValueMinutes(1), datafeed.defaultFrequency(TimeValue.timeValueSeconds(90), xContentRegistry()));
@@ -672,8 +746,10 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         assertEquals(TimeValue.timeValueMinutes(2), datafeed.defaultFrequency(TimeValue.timeValueSeconds(240), xContentRegistry()));
         assertEquals(TimeValue.timeValueMinutes(10), datafeed.defaultFrequency(TimeValue.timeValueMinutes(20), xContentRegistry()));
 
-        assertEquals(TimeValue.timeValueMinutes(10),
-            datafeed.defaultFrequency(TimeValue.timeValueSeconds(20 * 60 + 1), xContentRegistry()));
+        assertEquals(
+            TimeValue.timeValueMinutes(10),
+            datafeed.defaultFrequency(TimeValue.timeValueSeconds(20 * 60 + 1), xContentRegistry())
+        );
         assertEquals(TimeValue.timeValueMinutes(10), datafeed.defaultFrequency(TimeValue.timeValueHours(6), xContentRegistry()));
         assertEquals(TimeValue.timeValueMinutes(10), datafeed.defaultFrequency(TimeValue.timeValueHours(12), xContentRegistry()));
 
@@ -681,9 +757,8 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         assertEquals(TimeValue.timeValueHours(1), datafeed.defaultFrequency(TimeValue.timeValueHours(72), xContentRegistry()));
     }
 
-    public void testDefaultFrequency_GivenAggregationsWithHistogramInterval_10_Minutes() {
-        DatafeedConfig datafeed = createDatafeedWithDateHistogram("10m");
-
+    public void testDefaultFrequency_GivenAggregationsWithHistogramOrCompositeInterval_10_Minutes() {
+        DatafeedConfig datafeed = randomBoolean() ? createDatafeedWithDateHistogram("10m") : createDatafeedWithCompositeAgg("10m");
         assertEquals(TimeValue.timeValueMinutes(10), datafeed.defaultFrequency(TimeValue.timeValueMinutes(10), xContentRegistry()));
         assertEquals(TimeValue.timeValueMinutes(10), datafeed.defaultFrequency(TimeValue.timeValueMinutes(20), xContentRegistry()));
         assertEquals(TimeValue.timeValueMinutes(10), datafeed.defaultFrequency(TimeValue.timeValueMinutes(30), xContentRegistry()));
@@ -691,9 +766,8 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         assertEquals(TimeValue.timeValueHours(1), datafeed.defaultFrequency(TimeValue.timeValueMinutes(13 * 60), xContentRegistry()));
     }
 
-    public void testDefaultFrequency_GivenAggregationsWithHistogramInterval_1_Hour() {
-        DatafeedConfig datafeed = createDatafeedWithDateHistogram("1h");
-
+    public void testDefaultFrequency_GivenAggregationsWithHistogramOrCompositeInterval_1_Hour() {
+        DatafeedConfig datafeed = randomBoolean() ? createDatafeedWithDateHistogram("1h") : createDatafeedWithCompositeAgg("1h");
         assertEquals(TimeValue.timeValueHours(1), datafeed.defaultFrequency(TimeValue.timeValueHours(1), xContentRegistry()));
         assertEquals(TimeValue.timeValueHours(1), datafeed.defaultFrequency(TimeValue.timeValueSeconds(3601), xContentRegistry()));
         assertEquals(TimeValue.timeValueHours(1), datafeed.defaultFrequency(TimeValue.timeValueHours(2), xContentRegistry()));
@@ -701,34 +775,38 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
     }
 
     public void testSerializationOfComplexAggs() throws IOException {
-        MaxAggregationBuilder maxTime = AggregationBuilders.max("timestamp").field("timestamp");
-        AvgAggregationBuilder avgAggregationBuilder = AggregationBuilders.avg("bytes_in_avg").field("system.network.in.bytes");
-        DerivativePipelineAggregationBuilder derivativePipelineAggregationBuilder =
-            PipelineAggregatorBuilders.derivative("bytes_in_derivative", "bytes_in_avg");
-        BucketScriptPipelineAggregationBuilder bucketScriptPipelineAggregationBuilder =
-            PipelineAggregatorBuilders.bucketScript("non_negative_bytes",
-                Collections.singletonMap("bytes", "bytes_in_derivative"),
-                new Script("params.bytes > 0 ? params.bytes : null"));
-        DateHistogramAggregationBuilder dateHistogram =
-            AggregationBuilders.dateHistogram("histogram_buckets")
-                .field("timestamp").interval(300000).timeZone(ZoneOffset.UTC)
-                .subAggregation(maxTime)
-                .subAggregation(avgAggregationBuilder)
-                .subAggregation(derivativePipelineAggregationBuilder)
-                .subAggregation(bucketScriptPipelineAggregationBuilder);
+        MaxAggregationBuilder maxTime = new MaxAggregationBuilder("timestamp").field("timestamp");
+        AvgAggregationBuilder avgAggregationBuilder = new AvgAggregationBuilder("bytes_in_avg").field("system.network.in.bytes");
+        DerivativePipelineAggregationBuilder derivativePipelineAggregationBuilder = new DerivativePipelineAggregationBuilder(
+            "bytes_in_derivative",
+            "bytes_in_avg"
+        );
+        BucketScriptPipelineAggregationBuilder bucketScriptPipelineAggregationBuilder = new BucketScriptPipelineAggregationBuilder(
+            "non_negative_bytes",
+            Collections.singletonMap("bytes", "bytes_in_derivative"),
+            new Script("params.bytes > 0 ? params.bytes : null")
+        );
+        DateHistogramAggregationBuilder dateHistogram = new DateHistogramAggregationBuilder("histogram_buckets").field("timestamp")
+            .fixedInterval(new DateHistogramInterval("300000ms"))
+            .timeZone(ZoneOffset.UTC)
+            .subAggregation(maxTime)
+            .subAggregation(avgAggregationBuilder)
+            .subAggregation(derivativePipelineAggregationBuilder)
+            .subAggregation(bucketScriptPipelineAggregationBuilder);
         DatafeedConfig.Builder datafeedConfigBuilder = createDatafeedBuilderWithDateHistogram(dateHistogram);
         datafeedConfigBuilder.setQueryProvider(
-            createRandomValidQueryProvider(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10)));
+            createTestQueryProvider(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10))
+        );
         DatafeedConfig datafeedConfig = datafeedConfigBuilder.build();
         AggregatorFactories.Builder aggBuilder = new AggregatorFactories.Builder().addAggregator(dateHistogram);
 
-
         XContentType xContentType = XContentType.JSON;
         BytesReference bytes = XContentHelper.toXContent(datafeedConfig, xContentType, false);
-        XContentParser parser = XContentHelper.createParser(xContentRegistry(),
-            DeprecationHandler.THROW_UNSUPPORTED_OPERATION,
+        XContentParser parser = XContentHelper.createParser(
+            XContentParserConfiguration.EMPTY.withRegistry(xContentRegistry()),
             bytes,
-            xContentType);
+            xContentType
+        );
 
         DatafeedConfig parsedDatafeedConfig = doParseInstance(parser);
         assertEquals(datafeedConfig, parsedDatafeedConfig);
@@ -737,11 +815,9 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         assertEquals(aggBuilder, parsedDatafeedConfig.getParsedAggregations(xContentRegistry()));
         assertEquals(datafeedConfig.getQuery(), parsedDatafeedConfig.getQuery());
 
-        SearchModule searchModule = new SearchModule(Settings.EMPTY, Collections.emptyList());
-        NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(searchModule.getNamedWriteables());
-        try(BytesStreamOutput output = new BytesStreamOutput()) {
+        try (BytesStreamOutput output = new BytesStreamOutput()) {
             datafeedConfig.writeTo(output);
-            try(StreamInput streamInput = new NamedWriteableAwareStreamInput(output.bytes().streamInput(), namedWriteableRegistry)) {
+            try (StreamInput streamInput = new NamedWriteableAwareStreamInput(output.bytes().streamInput(), getNamedWriteableRegistry())) {
                 DatafeedConfig streamedDatafeedConfig = new DatafeedConfig(streamInput);
                 assertEquals(datafeedConfig, streamedDatafeedConfig);
 
@@ -753,45 +829,49 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
     }
 
     public void testSerializationOfComplexAggsBetweenVersions() throws IOException {
-        MaxAggregationBuilder maxTime = AggregationBuilders.max("timestamp").field("timestamp");
-        AvgAggregationBuilder avgAggregationBuilder = AggregationBuilders.avg("bytes_in_avg").field("system.network.in.bytes");
-        DerivativePipelineAggregationBuilder derivativePipelineAggregationBuilder =
-            PipelineAggregatorBuilders.derivative("bytes_in_derivative", "bytes_in_avg");
-        BucketScriptPipelineAggregationBuilder bucketScriptPipelineAggregationBuilder =
-            PipelineAggregatorBuilders.bucketScript("non_negative_bytes",
-                Collections.singletonMap("bytes", "bytes_in_derivative"),
-                new Script("params.bytes > 0 ? params.bytes : null"));
-        DateHistogramAggregationBuilder dateHistogram =
-            AggregationBuilders.dateHistogram("histogram_buckets")
-                .field("timestamp").interval(300000).timeZone(ZoneOffset.UTC)
-                .subAggregation(maxTime)
-                .subAggregation(avgAggregationBuilder)
-                .subAggregation(derivativePipelineAggregationBuilder)
-                .subAggregation(bucketScriptPipelineAggregationBuilder);
+        MaxAggregationBuilder maxTime = new MaxAggregationBuilder("timestamp").field("timestamp");
+        AvgAggregationBuilder avgAggregationBuilder = new AvgAggregationBuilder("bytes_in_avg").field("system.network.in.bytes");
+        DerivativePipelineAggregationBuilder derivativePipelineAggregationBuilder = new DerivativePipelineAggregationBuilder(
+            "bytes_in_derivative",
+            "bytes_in_avg"
+        );
+        BucketScriptPipelineAggregationBuilder bucketScriptPipelineAggregationBuilder = new BucketScriptPipelineAggregationBuilder(
+            "non_negative_bytes",
+            Collections.singletonMap("bytes", "bytes_in_derivative"),
+            new Script("params.bytes > 0 ? params.bytes : null")
+        );
+        DateHistogramAggregationBuilder dateHistogram = new DateHistogramAggregationBuilder("histogram_buckets").field("timestamp")
+            .fixedInterval(new DateHistogramInterval("30000ms"))
+            .timeZone(ZoneOffset.UTC)
+            .subAggregation(maxTime)
+            .subAggregation(avgAggregationBuilder)
+            .subAggregation(derivativePipelineAggregationBuilder)
+            .subAggregation(bucketScriptPipelineAggregationBuilder);
         DatafeedConfig.Builder datafeedConfigBuilder = createDatafeedBuilderWithDateHistogram(dateHistogram);
         // So equality check between the streamed and current passes
         // Streamed DatafeedConfigs when they are before 6.6.0 require a parsed object for aggs and queries, consequently all the default
         // values are added between them
         datafeedConfigBuilder.setQueryProvider(
-            QueryProvider
-                .fromParsedQuery(QueryBuilders.boolQuery()
-                    .filter(QueryBuilders.termQuery(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10)))));
+            QueryProvider.fromParsedQuery(
+                QueryBuilders.boolQuery()
+                    .filter(QueryBuilders.termQuery(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10)))
+            )
+        );
         DatafeedConfig datafeedConfig = datafeedConfigBuilder.build();
 
-        SearchModule searchModule = new SearchModule(Settings.EMPTY, Collections.emptyList());
-        NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(searchModule.getNamedWriteables());
-
         try (BytesStreamOutput output = new BytesStreamOutput()) {
-            output.setVersion(Version.CURRENT);
+            output.setTransportVersion(TransportVersion.current());
             datafeedConfig.writeTo(output);
-            try (StreamInput in = new NamedWriteableAwareStreamInput(output.bytes().streamInput(), namedWriteableRegistry)) {
-                in.setVersion(Version.CURRENT);
+            try (StreamInput in = new NamedWriteableAwareStreamInput(output.bytes().streamInput(), getNamedWriteableRegistry())) {
+                in.setTransportVersion(TransportVersion.current());
                 DatafeedConfig streamedDatafeedConfig = new DatafeedConfig(in);
                 assertEquals(datafeedConfig, streamedDatafeedConfig);
 
                 // Assert that the parsed versions of our aggs and queries work as well
-                assertEquals(new AggregatorFactories.Builder().addAggregator(dateHistogram),
-                    streamedDatafeedConfig.getParsedAggregations(xContentRegistry()));
+                assertEquals(
+                    new AggregatorFactories.Builder().addAggregator(dateHistogram),
+                    streamedDatafeedConfig.getParsedAggregations(xContentRegistry())
+                );
                 assertEquals(datafeedConfig.getParsedQuery(xContentRegistry()), streamedDatafeedConfig.getParsedQuery(xContentRegistry()));
             }
         }
@@ -805,15 +885,35 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
     }
 
     public static String randomValidDatafeedId() {
-        CodepointSetGenerator generator =  new CodepointSetGenerator("abcdefghijklmnopqrstuvwxyz".toCharArray());
+        CodepointSetGenerator generator = new CodepointSetGenerator("abcdefghijklmnopqrstuvwxyz".toCharArray());
         return generator.ofCodePointsLength(random(), 10, 10);
+    }
+
+    private static DatafeedConfig createDatafeedWithCompositeAgg(String interval) {
+        MaxAggregationBuilder maxTime = AggregationBuilders.max("time").field("time");
+        DateHistogramValuesSourceBuilder sourceBuilder = new DateHistogramValuesSourceBuilder("time");
+        sourceBuilder.field("time");
+        if (interval != null) {
+            if (DateHistogramAggregationBuilder.DATE_FIELD_UNITS.get(interval) != null) {
+                sourceBuilder.calendarInterval(new DateHistogramInterval(interval));
+            } else {
+                sourceBuilder.fixedInterval(new DateHistogramInterval(interval));
+            }
+        }
+        CompositeAggregationBuilder composite = AggregationBuilders.composite("buckets", Arrays.asList(sourceBuilder))
+            .subAggregation(maxTime);
+        return createDatafeedWithComposite(composite);
     }
 
     private static DatafeedConfig createDatafeedWithDateHistogram(String interval) {
         MaxAggregationBuilder maxTime = AggregationBuilders.max("time").field("time");
         DateHistogramAggregationBuilder dateHistogram = AggregationBuilders.dateHistogram("buckets").subAggregation(maxTime).field("time");
         if (interval != null) {
-            dateHistogram.dateHistogramInterval(new DateHistogramInterval(interval));
+            if (DateHistogramAggregationBuilder.DATE_FIELD_UNITS.get(interval) != null) {
+                dateHistogram.calendarInterval(new DateHistogramInterval(interval));
+            } else {
+                dateHistogram.fixedInterval(new DateHistogramInterval(interval));
+            }
         }
         return createDatafeedWithDateHistogram(dateHistogram);
     }
@@ -822,7 +922,7 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         MaxAggregationBuilder maxTime = AggregationBuilders.max("time").field("time");
         DateHistogramAggregationBuilder dateHistogram = AggregationBuilders.dateHistogram("buckets").subAggregation(maxTime).field("time");
         if (interval != null) {
-            dateHistogram.interval(interval);
+            dateHistogram.fixedInterval(new DateHistogramInterval(interval + "ms"));
         }
         return createDatafeedWithDateHistogram(dateHistogram);
     }
@@ -840,81 +940,135 @@ public class DatafeedConfigTests extends AbstractSerializingTestCase<DatafeedCon
         return createDatafeedBuilderWithDateHistogram(dateHistogram).build();
     }
 
+    private static DatafeedConfig.Builder createDatafeedBuilderWithComposite(CompositeAggregationBuilder compositeAggregationBuilder) {
+        DatafeedConfig.Builder builder = new DatafeedConfig.Builder("datafeed1", "job1");
+        builder.setIndices(Collections.singletonList("myIndex"));
+        AggregatorFactories.Builder aggs = new AggregatorFactories.Builder().addAggregator(compositeAggregationBuilder);
+        DatafeedConfig.validateAggregations(aggs);
+        builder.setParsedAggregations(aggs);
+        return builder;
+    }
+
+    private static DatafeedConfig createDatafeedWithComposite(CompositeAggregationBuilder dateHistogram) {
+        return createDatafeedBuilderWithComposite(dateHistogram).build();
+    }
+
     @Override
-    protected DatafeedConfig mutateInstance(DatafeedConfig instance) throws IOException {
+    protected DatafeedConfig mutateInstance(DatafeedConfig instance) {
         DatafeedConfig.Builder builder = new DatafeedConfig.Builder(instance);
-        switch (between(0, 10)) {
-        case 0:
-            builder.setId(instance.getId() + randomValidDatafeedId());
-            break;
-        case 1:
-            builder.setJobId(instance.getJobId() + randomAlphaOfLength(5));
-            break;
-        case 2:
-            builder.setQueryDelay(new TimeValue(instance.getQueryDelay().millis() + between(100, 100000)));
-            break;
-        case 3:
-            if (instance.getFrequency() == null) {
-                builder.setFrequency(new TimeValue(between(1, 10) * 1000));
-            } else {
-                builder.setFrequency(new TimeValue(instance.getFrequency().millis() + between(1, 10) * 1000));
-            }
-            break;
-        case 4:
-            List<String> indices = new ArrayList<>(instance.getIndices());
-            indices.add(randomAlphaOfLengthBetween(1, 20));
-            builder.setIndices(indices);
-            break;
-        case 5:
-            BoolQueryBuilder query = new BoolQueryBuilder();
-            if (instance.getParsedQuery(xContentRegistry()) != null) {
-                query.must(instance.getParsedQuery(xContentRegistry()));
-            }
-            query.filter(new TermQueryBuilder(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10)));
-            builder.setParsedQuery(query);
-            break;
-        case 6:
-            if (instance.hasAggregations()) {
-                builder.setAggProvider(null);
-            } else {
-                AggregatorFactories.Builder aggBuilder = new AggregatorFactories.Builder();
-                String timeField = randomAlphaOfLength(10);
-                aggBuilder
-                        .addAggregator(new DateHistogramAggregationBuilder(timeField).field(timeField).interval(between(10000, 3600000))
-                                .subAggregation(new MaxAggregationBuilder(timeField).field(timeField)));
-                builder.setParsedAggregations(aggBuilder);
-                if (instance.getScriptFields().isEmpty() == false) {
-                    builder.setScriptFields(Collections.emptyList());
+        switch (between(0, 12)) {
+            case 0:
+                builder.setId(instance.getId() + randomValidDatafeedId());
+                break;
+            case 1:
+                builder.setJobId(instance.getJobId() + randomAlphaOfLength(5));
+                break;
+            case 2:
+                builder.setQueryDelay(new TimeValue(instance.getQueryDelay().millis() + between(100, 100000)));
+                break;
+            case 3:
+                if (instance.getFrequency() == null) {
+                    builder.setFrequency(new TimeValue(between(1, 10) * 1000));
+                } else {
+                    builder.setFrequency(new TimeValue(instance.getFrequency().millis() + between(1, 10) * 1000));
                 }
-            }
-            break;
-        case 7:
-            ArrayList<ScriptField> scriptFields = new ArrayList<>(instance.getScriptFields());
-            scriptFields.add(new ScriptField(randomAlphaOfLengthBetween(1, 10), new Script("foo"), true));
-            builder.setScriptFields(scriptFields);
-            builder.setAggProvider(null);
-            break;
-        case 8:
-            builder.setScrollSize(instance.getScrollSize() + between(1, 100));
-            break;
-        case 9:
-            if (instance.getChunkingConfig() == null || instance.getChunkingConfig().getMode() == Mode.AUTO) {
-                ChunkingConfig newChunkingConfig = ChunkingConfig.newManual(new TimeValue(randomNonNegativeLong()));
-                builder.setChunkingConfig(newChunkingConfig);
-            } else {
-                builder.setChunkingConfig(ChunkingConfig.newAuto());
-            }
-            break;
-        case 10:
-            if (instance.getMaxEmptySearches() == null) {
-                builder.setMaxEmptySearches(randomIntBetween(10, 100));
-            } else {
-                builder.setMaxEmptySearches(instance.getMaxEmptySearches() + 1);
-            }
-            break;
-        default:
-            throw new AssertionError("Illegal randomisation branch");
+                break;
+            case 4:
+                List<String> indices = new ArrayList<>(instance.getIndices());
+                indices.add(randomAlphaOfLengthBetween(1, 20));
+                builder.setIndices(indices);
+                break;
+            case 5:
+                BoolQueryBuilder query = new BoolQueryBuilder();
+                if (instance.getParsedQuery(xContentRegistry()) != null) {
+                    query.must(instance.getParsedQuery(xContentRegistry()));
+                }
+                query.filter(new TermQueryBuilder(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10)));
+                builder.setParsedQuery(query);
+                break;
+            case 6:
+                if (instance.hasAggregations()) {
+                    builder.setAggProvider(null);
+                } else {
+                    AggregatorFactories.Builder aggBuilder = new AggregatorFactories.Builder();
+                    String timeField = randomAlphaOfLength(10);
+                    long fixedInterval = between(10000, 3600000);
+
+                    aggBuilder.addAggregator(
+                        new DateHistogramAggregationBuilder(timeField).field(timeField)
+                            .fixedInterval(new DateHistogramInterval(fixedInterval + "ms"))
+                            .subAggregation(new MaxAggregationBuilder(timeField).field(timeField))
+                    );
+                    builder.setParsedAggregations(aggBuilder);
+                    if (instance.getScriptFields().isEmpty() == false) {
+                        builder.setScriptFields(Collections.emptyList());
+                    }
+                }
+                break;
+            case 7:
+                builder.setScriptFields(
+                    CollectionUtils.appendToCopy(
+                        instance.getScriptFields(),
+                        new ScriptField(randomAlphaOfLengthBetween(1, 10), new Script("foo"), true)
+                    )
+                );
+                builder.setAggProvider(null);
+                break;
+            case 8:
+                builder.setScrollSize(instance.getScrollSize() + between(1, 100));
+                break;
+            case 9:
+                if (instance.getChunkingConfig() == null || instance.getChunkingConfig().getMode() == Mode.AUTO) {
+                    ChunkingConfig newChunkingConfig = ChunkingConfig.newManual(new TimeValue(randomNonNegativeLong()));
+                    builder.setChunkingConfig(newChunkingConfig);
+                } else {
+                    builder.setChunkingConfig(ChunkingConfig.newAuto());
+                }
+                break;
+            case 10:
+                if (instance.getMaxEmptySearches() == null) {
+                    builder.setMaxEmptySearches(randomIntBetween(10, 100));
+                } else {
+                    builder.setMaxEmptySearches(instance.getMaxEmptySearches() + 1);
+                }
+                break;
+            case 11:
+                builder.setIndicesOptions(
+                    IndicesOptions.fromParameters(
+                        randomFrom(EXPAND_WILDCARDS_VALUES),
+                        Boolean.toString(instance.getIndicesOptions().ignoreUnavailable() == false),
+                        Boolean.toString(instance.getIndicesOptions().allowNoIndices() == false),
+                        Boolean.toString(instance.getIndicesOptions().ignoreThrottled() == false),
+                        SearchRequest.DEFAULT_INDICES_OPTIONS
+                    )
+                );
+                break;
+            case 12:
+                if (instance.getRuntimeMappings() != null && instance.getRuntimeMappings().isEmpty() == false) {
+                    builder.setRuntimeMappings(Collections.emptyMap());
+                } else {
+                    Map<String, Object> settings = new HashMap<>();
+                    settings.put("type", "keyword");
+                    settings.put("script", "");
+                    Map<String, Object> field = new HashMap<>();
+                    field.put("runtime_field_foo", settings);
+                    builder.setRuntimeMappings(field);
+                }
+                break;
+            default:
+                throw new AssertionError("Illegal randomisation branch");
         }
         return builder.build();
+    }
+
+    private XContentParser parser(String json) throws IOException {
+        return JsonXContent.jsonXContent.createParser(XContentParserConfiguration.EMPTY.withRegistry(xContentRegistry()), json);
+    }
+
+    private XContentParser parser(BytesReference json) throws IOException {
+        return JsonXContent.jsonXContent.createParser(
+            XContentParserConfiguration.EMPTY.withRegistry(xContentRegistry()),
+            json.streamInput()
+        );
     }
 }
