@@ -1,24 +1,30 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 
 package org.elasticsearch.xpack.ilm.history;
 
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
+import org.elasticsearch.cluster.ClusterChangedEvent;
+import org.elasticsearch.cluster.metadata.ComposableIndexTemplate;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
+import org.elasticsearch.features.FeatureService;
+import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xpack.core.ClientHelper;
+import org.elasticsearch.xpack.core.ilm.LifecyclePolicy;
 import org.elasticsearch.xpack.core.ilm.LifecycleSettings;
 import org.elasticsearch.xpack.core.template.IndexTemplateConfig;
 import org.elasticsearch.xpack.core.template.IndexTemplateRegistry;
 import org.elasticsearch.xpack.core.template.LifecyclePolicyConfig;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 /**
  * The {@link ILMHistoryTemplateRegistry} class sets up and configures an ILM policy and index
@@ -27,54 +33,80 @@ import java.util.List;
 public class ILMHistoryTemplateRegistry extends IndexTemplateRegistry {
     // history (please add a comment why you increased the version here)
     // version 1: initial
-    public static final String INDEX_TEMPLATE_VERSION = "1";
+    // version 2: convert to hidden index
+    // version 3: templates moved to composable templates
+    // version 4: add `allow_auto_create` setting
+    // version 5: convert to data stream
+    // version 6: manage by data stream lifecycle
+    // version 7: version the index template name so we can upgrade existing deployments
+    public static final int INDEX_TEMPLATE_VERSION = 7;
+    public static final NodeFeature MANAGED_BY_DATA_STREAM_LIFECYCLE = new NodeFeature("ilm-history-managed-by-dsl");
 
     public static final String ILM_TEMPLATE_VERSION_VARIABLE = "xpack.ilm_history.template.version";
-    public static final String ILM_TEMPLATE_NAME = "ilm-history";
+    public static final String ILM_TEMPLATE_NAME = "ilm-history-" + INDEX_TEMPLATE_VERSION;
 
     public static final String ILM_POLICY_NAME = "ilm-history-ilm-policy";
+    private final FeatureService featureService;
 
-    public static final IndexTemplateConfig TEMPLATE_ILM_HISTORY = new IndexTemplateConfig(
-        ILM_TEMPLATE_NAME,
-        "/ilm-history.json",
-        INDEX_TEMPLATE_VERSION,
-        ILM_TEMPLATE_VERSION_VARIABLE
+    @Override
+    protected boolean requiresMasterNode() {
+        return true;
+    }
+
+    private final boolean ilmHistoryEnabled;
+
+    public ILMHistoryTemplateRegistry(
+        Settings nodeSettings,
+        ClusterService clusterService,
+        FeatureService featureService,
+        ThreadPool threadPool,
+        Client client,
+        NamedXContentRegistry xContentRegistry
+    ) {
+        super(nodeSettings, clusterService, threadPool, client, xContentRegistry);
+        this.featureService = featureService;
+        this.ilmHistoryEnabled = LifecycleSettings.LIFECYCLE_HISTORY_INDEX_ENABLED_SETTING.get(nodeSettings);
+    }
+
+    private static final Map<String, ComposableIndexTemplate> COMPOSABLE_INDEX_TEMPLATE_CONFIGS = parseComposableTemplates(
+        new IndexTemplateConfig(ILM_TEMPLATE_NAME, "/ilm-history.json", INDEX_TEMPLATE_VERSION, ILM_TEMPLATE_VERSION_VARIABLE)
     );
 
-    public static final LifecyclePolicyConfig ILM_HISTORY_POLICY = new LifecyclePolicyConfig(
+    @Override
+    protected Map<String, ComposableIndexTemplate> getComposableTemplateConfigs() {
+        if (this.ilmHistoryEnabled) {
+            return COMPOSABLE_INDEX_TEMPLATE_CONFIGS;
+        } else {
+            return Map.of();
+        }
+    }
+
+    private static final LifecyclePolicyConfig LIFECYCLE_POLICY_CONFIG = new LifecyclePolicyConfig(
         ILM_POLICY_NAME,
         "/ilm-history-ilm-policy.json"
     );
 
-    private final boolean ilmHistoryEnabled;
-
-    public ILMHistoryTemplateRegistry(Settings nodeSettings, ClusterService clusterService,
-                                      ThreadPool threadPool, Client client,
-                                      NamedXContentRegistry xContentRegistry) {
-        super(nodeSettings, clusterService, threadPool, client, xContentRegistry);
-        this.ilmHistoryEnabled = LifecycleSettings.LIFECYCLE_HISTORY_INDEX_ENABLED_SETTING.get(nodeSettings);
+    @Override
+    protected List<LifecyclePolicyConfig> getLifecycleConfigs() {
+        return List.of(LIFECYCLE_POLICY_CONFIG);
     }
 
     @Override
-    protected List<IndexTemplateConfig> getTemplateConfigs() {
-        if (this.ilmHistoryEnabled) {
-            return Collections.singletonList(TEMPLATE_ILM_HISTORY);
+    protected List<LifecyclePolicy> getLifecyclePolicies() {
+        if (ilmHistoryEnabled) {
+            return lifecyclePolicies;
         } else {
-            return Collections.emptyList();
-        }
-    }
-
-    @Override
-    protected List<LifecyclePolicyConfig> getPolicyConfigs() {
-        if (this.ilmHistoryEnabled) {
-            return Collections.singletonList(ILM_HISTORY_POLICY);
-        } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
     @Override
     protected String getOrigin() {
         return ClientHelper.INDEX_LIFECYCLE_ORIGIN;
+    }
+
+    @Override
+    protected boolean isClusterReady(ClusterChangedEvent event) {
+        return featureService.clusterHasFeature(event.state(), MANAGED_BY_DATA_STREAM_LIFECYCLE);
     }
 }
