@@ -1,16 +1,18 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.ql.tree;
 
 import com.carrotsearch.randomizedtesting.annotations.ParametersFactory;
 
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.SuppressForbidden;
-import org.elasticsearch.common.io.PathUtils;
+import org.elasticsearch.core.PathUtils;
+import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.xpack.core.enrich.EnrichPolicy;
 import org.elasticsearch.xpack.ql.expression.Expression;
 import org.elasticsearch.xpack.ql.expression.FieldAttribute;
 import org.elasticsearch.xpack.ql.expression.UnresolvedAttributeTests;
@@ -24,6 +26,8 @@ import org.elasticsearch.xpack.ql.expression.gen.pipeline.Pipe;
 import org.elasticsearch.xpack.ql.expression.gen.processor.ConstantProcessor;
 import org.elasticsearch.xpack.ql.expression.gen.processor.Processor;
 import org.elasticsearch.xpack.ql.expression.predicate.fulltext.FullTextPredicate;
+import org.elasticsearch.xpack.ql.expression.predicate.operator.comparison.In;
+import org.elasticsearch.xpack.ql.expression.predicate.operator.comparison.InPipe;
 import org.elasticsearch.xpack.ql.expression.predicate.regex.Like;
 import org.elasticsearch.xpack.ql.expression.predicate.regex.LikePattern;
 import org.elasticsearch.xpack.ql.tree.NodeTests.ChildrenAreAProperty;
@@ -43,21 +47,24 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.EnumSet;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.jar.JarEntry;
 import java.util.jar.JarInputStream;
 
+import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static org.mockito.Mockito.mock;
 
 /**
@@ -86,6 +93,8 @@ import static org.mockito.Mockito.mock;
  */
 public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCase {
 
+    private static final List<Class<?>> CLASSES_WITH_MIN_TWO_CHILDREN = asList(In.class, InPipe.class);
+
     private final Class<T> subclass;
 
     public NodeSubclassTests(Class<T> subclass) {
@@ -110,7 +119,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
     }
 
     /**
-     * Test {@link Node#transformPropertiesOnly(java.util.function.Function, Class)}
+     * Test {@link Node#transformPropertiesOnly(Class, java.util.function.Function)}
      * implementation on {@link #subclass} which tests the implementation of
      * {@link Node#info()}. And tests the actual {@link NodeInfo} subclass
      * implementations in the process.
@@ -128,7 +137,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
             Type changedArgType = argTypes[changedArgOffset];
             Object changedArgValue = randomValueOtherThan(nodeCtorArgs[changedArgOffset], () -> makeArg(changedArgType));
 
-            B transformed = node.transformNodeProps(prop -> Objects.equals(prop, originalArgValue) ? changedArgValue : prop, Object.class);
+            B transformed = node.transformNodeProps(Object.class, prop -> Objects.equals(prop, originalArgValue) ? changedArgValue : prop);
 
             if (node.children().contains(originalArgValue) || node.children().equals(originalArgValue)) {
                 if (node.children().equals(emptyList()) && originalArgValue.equals(emptyList())) {
@@ -151,7 +160,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
     }
 
     /**
-     * Test {@link Node#replaceChildren} implementation on {@link #subclass}.
+     * Test {@link Node#replaceChildren(List)} implementation on {@link #subclass}.
      */
     public void testReplaceChildren() throws Exception {
         Constructor<T> ctor = longestCtor(subclass);
@@ -164,8 +173,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
             Object originalArgValue = nodeCtorArgs[changedArgOffset];
             Type changedArgType = argTypes[changedArgOffset];
 
-            if (originalArgValue instanceof Collection) {
-                Collection<?> col = (Collection<?>) originalArgValue;
+            if (originalArgValue instanceof Collection<?> col) {
 
                 if (col.isEmpty() || col instanceof EnumSet) {
                     /*
@@ -180,22 +188,21 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
                     continue;
                 }
 
-                List<?> originalList = (List<?>) originalArgValue;
-
-                if (node.children().equals(originalList)) {
+                if (col instanceof List<?> originalList && node.children().equals(originalList)) {
                     // The arg we're looking at *is* the children
                     @SuppressWarnings("unchecked") // we pass a reasonable type so get reasonable results
                     List<B> newChildren = (List<B>) makeListOfSameSizeOtherThan(changedArgType, originalList);
                     B transformed = node.replaceChildren(newChildren);
                     assertTransformedOrReplacedChildren(node, transformed, ctor, nodeCtorArgs, changedArgOffset, newChildren);
-                } else if (false == originalList.isEmpty() && node.children().containsAll(originalList)) {
+                } else if (false == col.isEmpty() && node.children().containsAll(col)) {
                     // The arg we're looking at is a collection contained within the children
+                    List<?> originalList = (List<?>) originalArgValue;
 
                     // First make the new children
                     @SuppressWarnings("unchecked") // we pass a reasonable type so get reasonable results
                     List<B> newCollection = (List<B>) makeListOfSameSizeOtherThan(changedArgType, originalList);
 
-                    // Now merge that list of thildren into the original list of children
+                    // Now merge that list of children into the original list of children
                     List<B> originalChildren = node.children();
                     List<B> newChildren = new ArrayList<>(originalChildren.size());
                     int originalOffset = 0;
@@ -230,8 +237,14 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
         }
     }
 
-    private void assertTransformedOrReplacedChildren(T node, B transformed, Constructor<T> ctor,
-            Object[] nodeCtorArgs, int changedArgOffset, Object changedArgValue) throws Exception {
+    private void assertTransformedOrReplacedChildren(
+        T node,
+        B transformed,
+        Constructor<T> ctor,
+        Object[] nodeCtorArgs,
+        int changedArgOffset,
+        Object changedArgValue
+    ) throws Exception {
         if (node instanceof Function) {
             /*
              * Functions have a weaker definition of transform then other
@@ -277,7 +290,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
      */
     static <T> Constructor<T> longestCtor(Class<T> clazz) {
         Constructor<T> longest = null;
-        for (Constructor<?> ctor: clazz.getConstructors()) {
+        for (Constructor<?> ctor : clazz.getConstructors()) {
             if (longest == null || longest.getParameterCount() < ctor.getParameterCount()) {
                 @SuppressWarnings("unchecked") // Safe because the ctor has to be a ctor for T
                 Constructor<T> castCtor = (Constructor<T>) ctor;
@@ -297,10 +310,10 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
     @ParametersFactory
     @SuppressWarnings("rawtypes")
     public static List<Object[]> nodeSubclasses() throws IOException {
-        return subclassesOf(Node.class).stream()
+        return subclassesOf(Node.class, CLASSNAME_FILTER).stream()
             .filter(c -> testClassFor(c) == null)
-            .map(c -> new Object[] {c})
-            .collect(toList());
+            .map(c -> new Object[] { c })
+            .toList();
     }
 
     /**
@@ -314,19 +327,19 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
         for (int i = 0; i < argTypes.length; i++) {
             final int currentArgIndex = i;
             args[i] = randomValueOtherThanMany(candidate -> {
-                    for (int a = 0; a < currentArgIndex; a++) {
-                        if (Objects.equals(args[a], candidate)) {
-                            return true;
-                        }
+                for (int a = 0; a < currentArgIndex; a++) {
+                    if (Objects.equals(args[a], candidate)) {
+                        return true;
                     }
-                    return false;
-                }, () -> {
-                    try {
-                        return makeArg(ctor.getDeclaringClass(), argTypes[currentArgIndex]);
-                    } catch (Exception e) {
-                        throw new RuntimeException(e);
-                    }
-                });
+                }
+                return false;
+            }, () -> {
+                try {
+                    return makeArg(ctor.getDeclaringClass(), argTypes[currentArgIndex]);
+                } catch (Exception e) {
+                    throw new RuntimeException(e);
+                }
+            });
         }
         return args;
     }
@@ -349,13 +362,15 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
     @SuppressWarnings("unchecked")
     private Object makeArg(Class<? extends Node<?>> toBuildClass, Type argType) throws Exception {
 
-        if (argType instanceof ParameterizedType) {
-            ParameterizedType pt = (ParameterizedType) argType;
+        if (argType instanceof ParameterizedType pt) {
             if (pt.getRawType() == Map.class) {
                 return makeMap(toBuildClass, pt);
             }
             if (pt.getRawType() == List.class) {
                 return makeList(toBuildClass, pt);
+            }
+            if (pt.getRawType() == Set.class) {
+                return makeSet(toBuildClass, pt);
             }
             if (pt.getRawType() == EnumSet.class) {
                 @SuppressWarnings("rawtypes")
@@ -388,12 +403,14 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
                         }
                     };
                 }
-
             }
-            throw new IllegalArgumentException("Unsupported parameterized type [" + pt + "]");
+            Object obj = pluggableMakeParameterizedArg(toBuildClass, pt);
+            if (obj != null) {
+                return obj;
+            }
+            throw new IllegalArgumentException("Unsupported parameterized type [" + pt + "], for " + toBuildClass.getSimpleName());
         }
-        if (argType instanceof WildcardType) {
-            WildcardType wt = (WildcardType) argType;
+        if (argType instanceof WildcardType wt) {
             if (wt.getLowerBounds().length > 0 || wt.getUpperBounds().length > 1) {
                 throw new IllegalArgumentException("Unsupported wildcard type [" + wt + "]");
             }
@@ -409,12 +426,10 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
             // InnerAggregate's AggregateFunction must be an EnclosedAgg.
             if (argClass == AggregateFunction.class) {
                 return makeEnclosedAgg();
-            }
-            else if (argClass == CompoundAggregate.class) {
+            } else if (argClass == CompoundAggregate.class) {
                 return makeCompoundAgg();
             }
-        }
-        else if (toBuildClass == FieldAttribute.class) {
+        } else if (toBuildClass == FieldAttribute.class) {
             // `parent` is nullable.
             if (argClass == FieldAttribute.class && randomBoolean()) {
                 return null;
@@ -463,6 +478,10 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
              */
             return UnresolvedAttributeTests.randomUnresolvedAttribute();
         }
+        if (EnrichPolicy.class == argClass) {
+            List<String> enrichFields = randomSubsetOf(List.of("e1", "e2", "e3"));
+            return new EnrichPolicy(randomFrom("match", "range"), null, List.of(), randomFrom("m1", "m2"), enrichFields);
+        }
 
         if (Pipe.class == argClass) {
             /*
@@ -510,6 +529,10 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
             // Location is final and can't be mocked but we have a handy method to generate ones.
             return SourceTests.randomSource();
         }
+        if (argClass == ZoneId.class) {
+            // ZoneId is a sealed class (cannot be mocked) starting with Java 19
+            return randomZone();
+        }
         try {
             return mock(argClass);
         } catch (MockitoException e) {
@@ -525,7 +548,11 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
         return makeArg(TestEnclosedAgg.class);
     }
 
-    protected Object pluggableMakeArg(Class<? extends Node<?>> toBuildClass, Class<?> argClass) {
+    protected Object pluggableMakeArg(Class<? extends Node<?>> toBuildClass, Class<?> argClass) throws Exception {
+        return null;
+    }
+
+    protected Object pluggableMakeParameterizedArg(Class<? extends Node<?>> toBuildClass, ParameterizedType pt) {
         return null;
     }
 
@@ -535,6 +562,18 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
 
     private List<?> makeList(Class<? extends Node<?>> toBuildClass, ParameterizedType listType, int size) throws Exception {
         List<Object> list = new ArrayList<>();
+        for (int i = 0; i < size; i++) {
+            list.add(makeArg(toBuildClass, listType.getActualTypeArguments()[0]));
+        }
+        return list;
+    }
+
+    private Set<?> makeSet(Class<? extends Node<?>> toBuildClass, ParameterizedType listType) throws Exception {
+        return makeSet(toBuildClass, listType, randomSizeForCollection(toBuildClass));
+    }
+
+    private Set<?> makeSet(Class<? extends Node<?>> toBuildClass, ParameterizedType listType, int size) throws Exception {
+        Set<Object> list = new HashSet<>();
         for (int i = 0; i < size; i++) {
             list.add(makeArg(toBuildClass, listType.getActualTypeArguments()[0]));
         }
@@ -563,7 +602,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
     }
 
     protected boolean hasAtLeastTwoChildren(Class<? extends Node<?>> toBuildClass) {
-        return false;
+        return CLASSES_WITH_MIN_TWO_CHILDREN.stream().anyMatch(toBuildClass::equals);
     }
 
     private List<?> makeListOfSameSizeOtherThan(Type listType, List<?> original) throws Exception {
@@ -582,12 +621,13 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
 
     public <T extends Node<?>> T makeNode(Class<? extends T> nodeClass) throws Exception {
         if (Modifier.isAbstract(nodeClass.getModifiers())) {
-            nodeClass = randomFrom(subclassesOf(nodeClass));
+            nodeClass = randomFrom(innerSubclassesOf(nodeClass));
         }
         Class<?> testSubclassFor = testClassFor(nodeClass);
         if (testSubclassFor != null) {
             // Delegate to the test class for a node if there is one
             Method m = testSubclassFor.getMethod("random" + Strings.capitalize(nodeClass.getSimpleName()));
+            assert Modifier.isStatic(m.getModifiers()) : "Expected static method, got:" + m;
             return nodeClass.cast(m.invoke(null));
         }
         Constructor<? extends T> ctor = longestCtor(nodeClass);
@@ -601,10 +641,33 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
      */
     private static final Map<Class<?>, Set<?>> subclassCache = new HashMap<>();
 
+    private static final Predicate<String> CLASSNAME_FILTER = className -> {
+        // filter the class that are not interested
+        // (and IDE folders like eclipse)
+        if (className.startsWith("org.elasticsearch.xpack.ql") == false
+            && className.startsWith("org.elasticsearch.xpack.sql") == false
+            && className.startsWith("org.elasticsearch.xpack.eql") == false) {
+            return false;
+        }
+        return true;
+    };
+
+    protected Predicate<String> pluggableClassNameFilter() {
+        return CLASSNAME_FILTER;
+    }
+
+    private <T> Set<Class<? extends T>> innerSubclassesOf(Class<T> clazz) throws IOException {
+        return subclassesOf(clazz, pluggableClassNameFilter());
+    }
+
+    public static <T> Set<Class<? extends T>> subclassesOf(Class<T> clazz) throws IOException {
+        return subclassesOf(clazz, CLASSNAME_FILTER);
+    }
+
     /**
      * Find all subclasses of a particular class.
      */
-    public static <T> Set<Class<? extends T>> subclassesOf(Class<T> clazz) throws IOException {
+    public static <T> Set<Class<? extends T>> subclassesOf(Class<T> clazz, Predicate<String> classNameFilter) throws IOException {
         @SuppressWarnings("unchecked") // The map is built this way
         Set<Class<? extends T>> lookup = (Set<Class<? extends T>>) subclassCache.get(clazz);
         if (lookup != null) {
@@ -612,7 +675,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
         }
         Set<Class<? extends T>> results = new LinkedHashSet<>();
         String[] paths = System.getProperty("java.class.path").split(System.getProperty("path.separator"));
-        for (String path: paths) {
+        for (String path : paths) {
             Path root = PathUtils.get(path);
             int rootLength = root.toString().length() + 1;
 
@@ -627,14 +690,14 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
                         String name = je.getName();
                         if (name.endsWith(".class")) {
                             String className = name.substring(0, name.length() - ".class".length()).replace("/", ".");
-                            maybeLoadClass(clazz, className, root + "!/" + name, results);
+                            maybeLoadClass(clazz, className, root + "!/" + name, classNameFilter, results);
                         }
                     }
                 }
             }
             // for folders, just use the FileSystems API
             else {
-                Files.walkFileTree(root, new SimpleFileVisitor<Path>() {
+                Files.walkFileTree(root, new SimpleFileVisitor<>() {
                     @Override
                     public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
                         if (Files.isRegularFile(file) && file.getFileName().toString().endsWith(".class")) {
@@ -643,7 +706,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
                             String className = fileName.substring(rootLength, fileName.length() - ".class".length());
                             // Go from "path" style to class style
                             className = className.replace(PathUtils.getDefaultFileSystem().getSeparator(), ".");
-                            maybeLoadClass(clazz, className, fileName, results);
+                            maybeLoadClass(clazz, className, fileName, classNameFilter, results);
                         }
                         return FileVisitResult.CONTINUE;
                     }
@@ -662,12 +725,14 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
     /**
      * Load classes from predefined packages (hack to limit the scope) and if they match the hierarchy, add them to the cache
      */
-    private static <T> void maybeLoadClass(Class<T> clazz, String className, String location, Set<Class<? extends T>> results)
-            throws IOException {
-
-        // filter the class that are not interested
-        // (and IDE folders like eclipse)
-        if (className.startsWith("org.elasticsearch.xpack.ql") == false && className.startsWith("org.elasticsearch.xpack.sql") == false) {
+    private static <T> void maybeLoadClass(
+        Class<T> clazz,
+        String className,
+        String location,
+        Predicate<String> classNameFilter,
+        Set<Class<? extends T>> results
+    ) throws IOException {
+        if (classNameFilter.test(className) == false) {
             return;
         }
 
@@ -678,9 +743,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
             throw new IOException("Couldn't load " + location, e);
         }
 
-        if (false == Modifier.isAbstract(c.getModifiers())
-                && false == c.isAnonymousClass()
-                && clazz.isAssignableFrom(c)) {
+        if (false == Modifier.isAbstract(c.getModifiers()) && false == c.isAnonymousClass() && clazz.isAssignableFrom(c)) {
             Class<? extends T> s = c.asSubclass(clazz);
             results.add(s);
         }
@@ -691,7 +754,7 @@ public class NodeSubclassTests<T extends B, B extends Node<B>> extends ESTestCas
      * if there isn't such a class or it doesn't extend
      * {@link AbstractNodeTestCase}.
      */
-    private static Class<?> testClassFor(Class<?> nodeSubclass) {
+    protected static Class<?> testClassFor(Class<?> nodeSubclass) {
         String testClassName = nodeSubclass.getName() + "Tests";
         try {
             Class<?> c = Class.forName(testClassName);
