@@ -1,23 +1,26 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security;
 
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.ActionFilters;
+import org.elasticsearch.action.support.RefCountingListener;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.util.concurrent.CountDown;
+import org.elasticsearch.common.util.Maps;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.protocol.xpack.XPackUsageRequest;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.transport.RemoteClusterPortSettings;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xpack.core.XPackSettings;
 import org.elasticsearch.xpack.core.action.XPackUsageFeatureAction;
@@ -26,14 +29,16 @@ import org.elasticsearch.xpack.core.action.XPackUsageFeatureTransportAction;
 import org.elasticsearch.xpack.core.security.SecurityFeatureSetUsage;
 import org.elasticsearch.xpack.core.security.user.AnonymousUser;
 import org.elasticsearch.xpack.security.audit.logfile.LoggingAuditTrail;
+import org.elasticsearch.xpack.security.authc.ApiKeyService;
 import org.elasticsearch.xpack.security.authc.Realms;
 import org.elasticsearch.xpack.security.authc.support.mapper.NativeRoleMappingStore;
 import org.elasticsearch.xpack.security.authz.store.CompositeRolesStore;
+import org.elasticsearch.xpack.security.operator.OperatorPrivileges;
+import org.elasticsearch.xpack.security.profile.ProfileService;
 import org.elasticsearch.xpack.security.transport.filter.IPFilter;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
 
@@ -41,37 +46,59 @@ import static java.util.Collections.singletonMap;
 import static org.elasticsearch.xpack.core.XPackSettings.API_KEY_SERVICE_ENABLED_SETTING;
 import static org.elasticsearch.xpack.core.XPackSettings.FIPS_MODE_ENABLED;
 import static org.elasticsearch.xpack.core.XPackSettings.HTTP_SSL_ENABLED;
+import static org.elasticsearch.xpack.core.XPackSettings.REMOTE_CLUSTER_CLIENT_SSL_ENABLED;
+import static org.elasticsearch.xpack.core.XPackSettings.REMOTE_CLUSTER_SERVER_SSL_ENABLED;
 import static org.elasticsearch.xpack.core.XPackSettings.TOKEN_SERVICE_ENABLED_SETTING;
 import static org.elasticsearch.xpack.core.XPackSettings.TRANSPORT_SSL_ENABLED;
+import static org.elasticsearch.xpack.security.Security.ADVANCED_REMOTE_CLUSTER_SECURITY_FEATURE;
 
 public class SecurityUsageTransportAction extends XPackUsageFeatureTransportAction {
 
-    private final boolean enabledInSettings;
     private final Settings settings;
     private final XPackLicenseState licenseState;
     private final Realms realms;
     private final CompositeRolesStore rolesStore;
     private final NativeRoleMappingStore roleMappingStore;
     private final IPFilter ipFilter;
+    private final ProfileService profileService;
+    private final ApiKeyService apiKeyService;
 
     @Inject
-    public SecurityUsageTransportAction(TransportService transportService, ClusterService clusterService, ThreadPool threadPool,
-                                        ActionFilters actionFilters, IndexNameExpressionResolver indexNameExpressionResolver,
-                                        Settings settings, XPackLicenseState licenseState, SecurityUsageServices securityServices) {
-        super(XPackUsageFeatureAction.SECURITY.name(), transportService, clusterService, threadPool,
-              actionFilters, indexNameExpressionResolver);
-        this.enabledInSettings = XPackSettings.SECURITY_ENABLED.get(settings);
+    public SecurityUsageTransportAction(
+        TransportService transportService,
+        ClusterService clusterService,
+        ThreadPool threadPool,
+        ActionFilters actionFilters,
+        IndexNameExpressionResolver indexNameExpressionResolver,
+        Settings settings,
+        XPackLicenseState licenseState,
+        SecurityUsageServices securityServices
+    ) {
+        super(
+            XPackUsageFeatureAction.SECURITY.name(),
+            transportService,
+            clusterService,
+            threadPool,
+            actionFilters,
+            indexNameExpressionResolver
+        );
         this.settings = settings;
         this.licenseState = licenseState;
         this.realms = securityServices.realms;
         this.rolesStore = securityServices.rolesStore;
         this.roleMappingStore = securityServices.roleMappingStore;
         this.ipFilter = securityServices.ipFilter;
+        this.profileService = securityServices.profileService;
+        this.apiKeyService = securityServices.apiKeyService;
     }
 
     @Override
-    protected void masterOperation(Task task, XPackUsageRequest request, ClusterState state,
-                                   ActionListener<XPackUsageFeatureResponse> listener) {
+    protected void masterOperation(
+        Task task,
+        XPackUsageRequest request,
+        ClusterState state,
+        ActionListener<XPackUsageFeatureResponse> listener
+    ) {
         Map<String, Object> sslUsage = sslUsage(settings);
         Map<String, Object> tokenServiceUsage = tokenServiceUsage(settings);
         Map<String, Object> apiKeyServiceUsage = apiKeyServiceUsage(settings);
@@ -79,67 +106,95 @@ public class SecurityUsageTransportAction extends XPackUsageFeatureTransportActi
         Map<String, Object> ipFilterUsage = ipFilterUsage(ipFilter);
         Map<String, Object> anonymousUsage = singletonMap("enabled", AnonymousUser.isAnonymousEnabled(settings));
         Map<String, Object> fips140Usage = fips140Usage(settings);
+        Map<String, Object> operatorPrivilegesUsage = Map.of(
+            "available",
+            Security.OPERATOR_PRIVILEGES_FEATURE.checkWithoutTracking(licenseState),
+            "enabled",
+            OperatorPrivileges.OPERATOR_PRIVILEGES_ENABLED.get(settings)
+        );
 
-        final AtomicReference<Map<String, Object>> rolesUsageRef = new AtomicReference<>();
-        final AtomicReference<Map<String, Object>> roleMappingUsageRef = new AtomicReference<>();
-        final AtomicReference<Map<String, Object>> realmsUsageRef = new AtomicReference<>();
-        final CountDown countDown = new CountDown(3);
-        final Runnable doCountDown = () -> {
-            if (countDown.countDown()) {
-                boolean enabled = enabledInSettings && licenseState.isSecurityDisabledByLicenseDefaults() == false;
-                var usage = new SecurityFeatureSetUsage(licenseState.isSecurityAvailable(), enabled,
-                        realmsUsageRef.get(), rolesUsageRef.get(), roleMappingUsageRef.get(), sslUsage, auditUsage,
-                        ipFilterUsage, anonymousUsage, tokenServiceUsage, apiKeyServiceUsage, fips140Usage);
-                listener.onResponse(new XPackUsageFeatureResponse(usage));
+        final AtomicReference<Map<String, Object>> rolesUsageRef = new AtomicReference<>(Map.of());
+        final AtomicReference<Map<String, Object>> roleMappingUsageRef = new AtomicReference<>(Map.of());
+        final AtomicReference<Map<String, Object>> realmsUsageRef = new AtomicReference<>(Map.of());
+        final AtomicReference<Map<String, Object>> domainsUsageRef = new AtomicReference<>(Map.of());
+        final AtomicReference<Map<String, Object>> userProfileUsageRef = new AtomicReference<>(Map.of());
+        final AtomicReference<Map<String, Object>> remoteClusterServerUsageRef = new AtomicReference<>(Map.of());
+
+        final boolean enabled = XPackSettings.SECURITY_ENABLED.get(settings);
+
+        try (
+            var listeners = new RefCountingListener(
+                listener.map(
+                    ignored -> new XPackUsageFeatureResponse(
+                        new SecurityFeatureSetUsage(
+                            enabled,
+                            realmsUsageRef.get(),
+                            rolesUsageRef.get(),
+                            roleMappingUsageRef.get(),
+                            sslUsage,
+                            auditUsage,
+                            ipFilterUsage,
+                            anonymousUsage,
+                            tokenServiceUsage,
+                            apiKeyServiceUsage,
+                            fips140Usage,
+                            operatorPrivilegesUsage,
+                            domainsUsageRef.get(),
+                            userProfileUsageRef.get(),
+                            remoteClusterServerUsageRef.get()
+                        )
+                    )
+                )
+            )
+        ) {
+            if (enabled == false) {
+                return;
             }
-        };
-
-        final ActionListener<Map<String, Object>> rolesStoreUsageListener =
-                ActionListener.wrap(rolesStoreUsage -> {
-                    rolesUsageRef.set(rolesStoreUsage);
-                    doCountDown.run();
-                }, listener::onFailure);
-
-        final ActionListener<Map<String, Object>> roleMappingStoreUsageListener =
-                ActionListener.wrap(nativeRoleMappingStoreUsage -> {
-                    Map<String, Object> usage = singletonMap("native", nativeRoleMappingStoreUsage);
-                    roleMappingUsageRef.set(usage);
-                    doCountDown.run();
-                }, listener::onFailure);
-
-        final ActionListener<Map<String, Object>> realmsUsageListener =
-            ActionListener.wrap(realmsUsage -> {
-                realmsUsageRef.set(realmsUsage);
-                doCountDown.run();
-            }, listener::onFailure);
-
-        if (rolesStore == null) {
-            rolesStoreUsageListener.onResponse(Collections.emptyMap());
-        } else {
-            rolesStore.usageStats(rolesStoreUsageListener);
+            if (rolesStore != null) {
+                rolesStore.usageStats(listeners.acquire(rolesUsageRef::set));
+            }
+            if (roleMappingStore != null) {
+                roleMappingStore.usageStats(
+                    listeners.acquire(nativeRoleMappingStoreUsage -> roleMappingUsageRef.set(Map.of("native", nativeRoleMappingStoreUsage)))
+                );
+            }
+            if (realms != null) {
+                domainsUsageRef.set(realms.domainUsageStats());
+                realms.usageStats(listeners.acquire(realmsUsageRef::set));
+            }
+            if (profileService != null) {
+                profileService.usageStats(listeners.acquire(userProfileUsageRef::set));
+            }
+            if (apiKeyService != null) {
+                apiKeyService.crossClusterApiKeyUsageStats(
+                    listeners.acquire(
+                        usage -> remoteClusterServerUsageRef.set(
+                            Map.of(
+                                "available",
+                                ADVANCED_REMOTE_CLUSTER_SECURITY_FEATURE.checkWithoutTracking(licenseState),
+                                "enabled",
+                                RemoteClusterPortSettings.REMOTE_CLUSTER_SERVER_ENABLED.get(settings),
+                                "api_keys",
+                                usage
+                            )
+                        )
+                    )
+                );
+            }
         }
-        if (roleMappingStore == null) {
-            roleMappingStoreUsageListener.onResponse(Collections.emptyMap());
-        } else {
-            roleMappingStore.usageStats(roleMappingStoreUsageListener);
-        }
-        if (realms == null) {
-            realmsUsageListener.onResponse(Collections.emptyMap());
-        } else {
-            realms.usageStats(realmsUsageListener);
-        }
-
     }
 
     static Map<String, Object> sslUsage(Settings settings) {
         // If security has been explicitly disabled in the settings, then SSL is also explicitly disabled, and we don't want to report
-        //  these http/transport settings as they would be misleading (they could report `true` even though they were ignored)
-        // But, if security has not been explicitly configured, but has defaulted to off due to the current license type,
-        // then these SSL settings are still respected (that is SSL might be enabled, while the rest of security is disabled).
+        // these http/transport settings as they would be misleading (they could report `true` even though they were ignored)
         if (XPackSettings.SECURITY_ENABLED.get(settings)) {
-            Map<String, Object> map = new HashMap<>(2);
+            Map<String, Object> map = Maps.newMapWithExpectedSize(2);
             map.put("http", singletonMap("enabled", HTTP_SSL_ENABLED.get(settings)));
             map.put("transport", singletonMap("enabled", TRANSPORT_SSL_ENABLED.get(settings)));
+            if (RemoteClusterPortSettings.REMOTE_CLUSTER_SERVER_ENABLED.get(settings)) {
+                map.put("remote_cluster_server", singletonMap("enabled", REMOTE_CLUSTER_SERVER_SSL_ENABLED.get(settings)));
+            }
+            map.put("remote_cluster_client", singletonMap("enabled", REMOTE_CLUSTER_CLIENT_SSL_ENABLED.get(settings)));
             return map;
         } else {
             return Collections.emptyMap();
@@ -155,7 +210,7 @@ public class SecurityUsageTransportAction extends XPackUsageFeatureTransportActi
     }
 
     static Map<String, Object> auditUsage(Settings settings) {
-        Map<String, Object> map = new HashMap<>(2);
+        Map<String, Object> map = Maps.newMapWithExpectedSize(2);
         map.put("enabled", XPackSettings.AUDIT_ENABLED.get(settings));
         if (XPackSettings.AUDIT_ENABLED.get(settings)) {
             // the only available output type is "logfile", but the optputs=<list> is to keep compatibility with previous reporting format
