@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 
 package org.elasticsearch.xpack.security.rest.action.apikey;
@@ -13,51 +14,55 @@ import org.elasticsearch.action.ActionRequest;
 import org.elasticsearch.action.ActionRequestValidationException;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.action.ActionType;
-import org.elasticsearch.client.node.NodeClient;
-import org.elasticsearch.common.collect.MapBuilder;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
-import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.AbstractRestChannel;
 import org.elasticsearch.rest.RestChannel;
-import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
+import org.elasticsearch.telemetry.metric.MeterRegistry;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.rest.FakeRestRequest;
 import org.elasticsearch.threadpool.ThreadPool;
-import org.elasticsearch.xpack.core.security.action.ApiKey;
-import org.elasticsearch.xpack.core.security.action.GetApiKeyRequest;
-import org.elasticsearch.xpack.core.security.action.GetApiKeyResponse;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
+import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xpack.core.security.action.apikey.ApiKey;
+import org.elasticsearch.xpack.core.security.action.apikey.ApiKeyTests;
+import org.elasticsearch.xpack.core.security.action.apikey.GetApiKeyRequest;
+import org.elasticsearch.xpack.core.security.action.apikey.GetApiKeyResponse;
+import org.elasticsearch.xpack.core.security.authz.RoleDescriptor;
 
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static org.hamcrest.Matchers.arrayContaining;
+import static org.elasticsearch.xpack.core.security.authz.RoleDescriptorTestHelper.randomCrossClusterAccessRoleDescriptor;
+import static org.elasticsearch.xpack.core.security.authz.RoleDescriptorTestHelper.randomUniquelyNamedRoleDescriptors;
+import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.emptyIterable;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 public class RestGetApiKeyActionTests extends ESTestCase {
     private final XPackLicenseState mockLicenseState = mock(XPackLicenseState.class);
-    private final RestController mockRestController = mock(RestController.class);
     private Settings settings = null;
     private ThreadPool threadPool = null;
 
     @Override
     public void setUp() throws Exception {
         super.setUp();
-        settings = Settings.builder().put("path.home", createTempDir().toString()).put("node.name", "test-" + getTestName())
-                .put(Environment.PATH_HOME_SETTING.getKey(), createTempDir().toString()).build();
-        threadPool = new ThreadPool(settings);
-        when(mockLicenseState.isSecurityAvailable()).thenReturn(true);
-        when(mockLicenseState.isApiKeyServiceAllowed()).thenReturn(true);
+        settings = Settings.builder()
+            .put("path.home", createTempDir().toString())
+            .put("node.name", "test-" + getTestName())
+            .put(Environment.PATH_HOME_SETTING.getKey(), createTempDir().toString())
+            .build();
+        threadPool = new ThreadPool(settings, MeterRegistry.NOOP);
     }
 
     @Override
@@ -67,15 +72,22 @@ public class RestGetApiKeyActionTests extends ESTestCase {
     }
 
     public void testGetApiKey() throws Exception {
-        final Map<String, String> param1 = mapBuilder().put("realm_name", "realm-1").put("username","user-x").map();
-        final Map<String, String> param2 = mapBuilder().put("realm_name", "realm-1").map();
-        final Map<String, String> param3 = mapBuilder().put("username", "user-x").map();
-        final Map<String, String> param4 = mapBuilder().put("id", "api-key-id-1").map();
-        final Map<String, String> param5 = mapBuilder().put("name", "api-key-name-1").map();
-        final Map<String, String> params = randomFrom(param1, param2, param3, param4, param5);
+        final Map<String, String> param1 = Map.of("realm_name", "realm-1", "username", "user-x");
+        final Map<String, String> param2 = Map.of("realm_name", "realm-1");
+        final Map<String, String> param3 = Map.of("username", "user-x");
+        final Map<String, String> param4 = Map.of("id", "api-key-id-1");
+        final Map<String, String> param5 = Map.of("name", "api-key-name-1");
+        final Map<String, String> params = new HashMap<>(randomFrom(param1, param2, param3, param4, param5));
+        final boolean withLimitedBy = randomBoolean();
+        if (withLimitedBy) {
+            params.put("with_limited_by", "true");
+        } else {
+            if (randomBoolean()) {
+                params.put("with_limited_by", "false");
+            }
+        }
         final boolean replyEmptyResponse = rarely();
-        final FakeRestRequest restRequest = new FakeRestRequest.Builder(NamedXContentRegistry.EMPTY)
-                .withParams(params).build();
+        final FakeRestRequest restRequest = new FakeRestRequest.Builder(NamedXContentRegistry.EMPTY).withParams(params).build();
 
         final SetOnce<RestResponse> responseSetOnce = new SetOnce<>();
         final RestChannel restChannel = new AbstractRestChannel(restRequest, randomBoolean()) {
@@ -84,16 +96,18 @@ public class RestGetApiKeyActionTests extends ESTestCase {
                 responseSetOnce.set(restResponse);
             }
         };
-        final Instant creation = Instant.now();
-        final Instant expiration = randomFrom(Arrays.asList(null, Instant.now().plus(10, ChronoUnit.DAYS)));
-        final GetApiKeyResponse getApiKeyResponseExpected = new GetApiKeyResponse(
-                Collections.singletonList(new ApiKey("api-key-name-1", "api-key-id-1", creation, expiration, false, "user-x", "realm-1")));
+        final List<String> profileUids = randomSize1ProfileUidsList();
+        final ApiKey apiKey = randomApiKeyInfo(withLimitedBy);
+        final GetApiKeyResponse getApiKeyResponseExpected = new GetApiKeyResponse(List.of(apiKey), profileUids);
 
-        try (NodeClient client = new NodeClient(Settings.EMPTY, threadPool) {
+        final var client = new NodeClient(Settings.EMPTY, threadPool) {
             @SuppressWarnings("unchecked")
             @Override
-            public <Request extends ActionRequest, Response extends ActionResponse>
-            void doExecute(ActionType<Response> action, Request request, ActionListener<Response> listener) {
+            public <Request extends ActionRequest, Response extends ActionResponse> void doExecute(
+                ActionType<Response> action,
+                Request request,
+                ActionListener<Response> listener
+            ) {
                 GetApiKeyRequest getApiKeyRequest = (GetApiKeyRequest) request;
                 ActionRequestValidationException validationException = getApiKeyRequest.validate();
                 if (validationException != null) {
@@ -101,11 +115,11 @@ public class RestGetApiKeyActionTests extends ESTestCase {
                     return;
                 }
                 if (getApiKeyRequest.getApiKeyName() != null && getApiKeyRequest.getApiKeyName().equals("api-key-name-1")
-                        || getApiKeyRequest.getApiKeyId() != null && getApiKeyRequest.getApiKeyId().equals("api-key-id-1")
-                        || getApiKeyRequest.getRealmName() != null && getApiKeyRequest.getRealmName().equals("realm-1")
-                        || getApiKeyRequest.getUserName() != null && getApiKeyRequest.getUserName().equals("user-x")) {
+                    || getApiKeyRequest.getApiKeyId() != null && getApiKeyRequest.getApiKeyId().equals("api-key-id-1")
+                    || getApiKeyRequest.getRealmName() != null && getApiKeyRequest.getRealmName().equals("realm-1")
+                    || getApiKeyRequest.getUserName() != null && getApiKeyRequest.getUserName().equals("user-x")) {
                     if (replyEmptyResponse) {
-                        listener.onResponse((Response) GetApiKeyResponse.emptyResponse());
+                        listener.onResponse((Response) GetApiKeyResponse.EMPTY);
                     } else {
                         listener.onResponse((Response) getApiKeyResponseExpected);
                     }
@@ -113,38 +127,100 @@ public class RestGetApiKeyActionTests extends ESTestCase {
                     listener.onFailure(new ElasticsearchSecurityException("encountered an error while creating API key"));
                 }
             }
-        }) {
-            final RestGetApiKeyAction restGetApiKeyAction = new RestGetApiKeyAction(Settings.EMPTY, mockRestController, mockLicenseState);
+        };
+        final RestGetApiKeyAction restGetApiKeyAction = new RestGetApiKeyAction(Settings.EMPTY, mockLicenseState);
 
-            restGetApiKeyAction.handleRequest(restRequest, restChannel, client);
+        restGetApiKeyAction.handleRequest(restRequest, restChannel, client);
 
-            final RestResponse restResponse = responseSetOnce.get();
-            assertNotNull(restResponse);
-            assertThat(restResponse.status(),
-                    (replyEmptyResponse && params.get("id") != null) ? is(RestStatus.NOT_FOUND) : is(RestStatus.OK));
-            final GetApiKeyResponse actual = GetApiKeyResponse
-                    .fromXContent(createParser(XContentType.JSON.xContent(), restResponse.content()));
-            if (replyEmptyResponse) {
-                assertThat(actual.getApiKeyInfos().length, is(0));
-            } else {
-                assertThat(actual.getApiKeyInfos(),
-                        arrayContaining(new ApiKey("api-key-name-1", "api-key-id-1", creation, expiration, false, "user-x", "realm-1")));
+        final RestResponse restResponse = responseSetOnce.get();
+        assertNotNull(restResponse);
+        assertThat(restResponse.status(), (replyEmptyResponse && params.get("id") != null) ? is(RestStatus.NOT_FOUND) : is(RestStatus.OK));
+        final GetApiKeyResponse actual = GetApiKeyResponse.fromXContent(createParser(XContentType.JSON.xContent(), restResponse.content()));
+        if (replyEmptyResponse) {
+            assertThat(actual.getApiKeyInfoList(), emptyIterable());
+        } else {
+            assertThat(
+                actual.getApiKeyInfoList(),
+                contains(new GetApiKeyResponse.Item(apiKey, profileUids == null ? null : profileUids.get(0)))
+            );
+        }
+    }
+
+    public void testGetApiKeyWithProfileUid() throws Exception {
+        final boolean isGetRequestWithProfileUid = randomBoolean();
+        final Map<String, String> param = new HashMap<>();
+        if (isGetRequestWithProfileUid) {
+            param.put("with_profile_uid", Boolean.TRUE.toString());
+        } else {
+            if (randomBoolean()) {
+                param.put("with_profile_uid", Boolean.FALSE.toString());
             }
         }
+        final FakeRestRequest restRequest = new FakeRestRequest.Builder(NamedXContentRegistry.EMPTY).withParams(param).build();
+        final SetOnce<RestResponse> responseSetOnce = new SetOnce<>();
+        final RestChannel restChannel = new AbstractRestChannel(restRequest, randomBoolean()) {
+            @Override
+            public void sendResponse(RestResponse restResponse) {
+                responseSetOnce.set(restResponse);
+            }
+        };
+        final ApiKey apiKey1 = randomApiKeyInfo(randomBoolean());
+        final List<String> profileUids1 = randomSize1ProfileUidsList();
+        final var client = new NodeClient(Settings.EMPTY, threadPool) {
+            @SuppressWarnings("unchecked")
+            @Override
+            public <Request extends ActionRequest, Response extends ActionResponse> void doExecute(
+                ActionType<Response> action,
+                Request request,
+                ActionListener<Response> listener
+            ) {
+                GetApiKeyRequest getApiKeyRequest = (GetApiKeyRequest) request;
+                ActionRequestValidationException validationException = getApiKeyRequest.validate();
+                if (validationException != null) {
+                    listener.onFailure(validationException);
+                    return;
+                }
 
+                if (getApiKeyRequest.withProfileUid()) {
+                    listener.onResponse((Response) new GetApiKeyResponse(List.of(apiKey1), profileUids1));
+                } else {
+                    listener.onResponse((Response) new GetApiKeyResponse(List.of(apiKey1), null));
+                }
+            }
+        };
+        final RestGetApiKeyAction restGetApiKeyAction = new RestGetApiKeyAction(Settings.EMPTY, mockLicenseState);
+        restGetApiKeyAction.handleRequest(restRequest, restChannel, client);
+        final RestResponse restResponse = responseSetOnce.get();
+        assertNotNull(restResponse);
+        assertThat(restResponse.status(), is(RestStatus.OK));
+        final GetApiKeyResponse actual = GetApiKeyResponse.fromXContent(createParser(XContentType.JSON.xContent(), restResponse.content()));
+        boolean responseHasProfile = isGetRequestWithProfileUid && profileUids1 != null && profileUids1.get(0) != null;
+        if (responseHasProfile) {
+            assertThat(actual.getApiKeyInfoList(), contains(new GetApiKeyResponse.Item(apiKey1, profileUids1.get(0))));
+        } else {
+            assertThat(actual.getApiKeyInfoList(), contains(new GetApiKeyResponse.Item(apiKey1, null)));
+        }
     }
 
     public void testGetApiKeyOwnedByCurrentAuthenticatedUser() throws Exception {
         final boolean isGetRequestForOwnedKeysOnly = randomBoolean();
-        final Map<String, String> param;
+        final Map<String, String> param = new HashMap<>();
         if (isGetRequestForOwnedKeysOnly) {
-            param = mapBuilder().put("owner", Boolean.TRUE.toString()).map();
+            param.put("owner", Boolean.TRUE.toString());
         } else {
-            param = mapBuilder().put("owner", Boolean.FALSE.toString()).put("realm_name", "realm-1").map();
+            param.put("owner", Boolean.FALSE.toString());
+            param.put("realm_name", "realm-1");
+        }
+        final boolean withLimitedBy = randomBoolean();
+        if (withLimitedBy) {
+            param.put("with_limited_by", "true");
+        } else {
+            if (randomBoolean()) {
+                param.put("with_limited_by", "false");
+            }
         }
 
-        final FakeRestRequest restRequest = new FakeRestRequest.Builder(NamedXContentRegistry.EMPTY)
-            .withParams(param).build();
+        final FakeRestRequest restRequest = new FakeRestRequest.Builder(NamedXContentRegistry.EMPTY).withParams(param).build();
 
         final SetOnce<RestResponse> responseSetOnce = new SetOnce<>();
         final RestChannel restChannel = new AbstractRestChannel(restRequest, randomBoolean()) {
@@ -154,20 +230,24 @@ public class RestGetApiKeyActionTests extends ESTestCase {
             }
         };
 
-        final Instant creation = Instant.now();
-        final Instant expiration = randomFrom(Arrays.asList(null, Instant.now().plus(10, ChronoUnit.DAYS)));
-        final ApiKey apiKey1 = new ApiKey("api-key-name-1", "api-key-id-1", creation, expiration, false,
-            "user-x", "realm-1");
-        final ApiKey apiKey2 = new ApiKey("api-key-name-2", "api-key-id-2", creation, expiration, false,
-            "user-y", "realm-1");
-        final GetApiKeyResponse getApiKeyResponseExpectedWhenOwnerFlagIsTrue = new GetApiKeyResponse(Collections.singletonList(apiKey1));
-        final GetApiKeyResponse getApiKeyResponseExpectedWhenOwnerFlagIsFalse = new GetApiKeyResponse(List.of(apiKey1, apiKey2));
+        final ApiKey apiKey1 = randomApiKeyInfo(withLimitedBy);
+        final List<String> profileUids1 = randomSize1ProfileUidsList();
+        final ApiKey apiKey2 = randomApiKeyInfo(withLimitedBy);
+        final List<String> profileUids2 = randomSize2ProfileUidsList();
+        final GetApiKeyResponse getApiKeyResponseExpectedWhenOwnerFlagIsTrue = new GetApiKeyResponse(List.of(apiKey1), profileUids1);
+        final GetApiKeyResponse getApiKeyResponseExpectedWhenOwnerFlagIsFalse = new GetApiKeyResponse(
+            List.of(apiKey1, apiKey2),
+            profileUids2
+        );
 
-        try (NodeClient client = new NodeClient(Settings.EMPTY, threadPool) {
+        final var client = new NodeClient(Settings.EMPTY, threadPool) {
             @SuppressWarnings("unchecked")
             @Override
-            public <Request extends ActionRequest, Response extends ActionResponse>
-            void doExecute(ActionType<Response> action, Request request, ActionListener<Response> listener) {
+            public <Request extends ActionRequest, Response extends ActionResponse> void doExecute(
+                ActionType<Response> action,
+                Request request,
+                ActionListener<Response> listener
+            ) {
                 GetApiKeyRequest getApiKeyRequest = (GetApiKeyRequest) request;
                 ActionRequestValidationException validationException = getApiKeyRequest.validate();
                 if (validationException != null) {
@@ -181,30 +261,100 @@ public class RestGetApiKeyActionTests extends ESTestCase {
                     listener.onResponse((Response) getApiKeyResponseExpectedWhenOwnerFlagIsFalse);
                 }
             }
-        }) {
-            final RestGetApiKeyAction restGetApiKeyAction = new RestGetApiKeyAction(Settings.EMPTY, mockRestController, mockLicenseState);
+        };
+        final RestGetApiKeyAction restGetApiKeyAction = new RestGetApiKeyAction(Settings.EMPTY, mockLicenseState);
 
-            restGetApiKeyAction.handleRequest(restRequest, restChannel, client);
+        restGetApiKeyAction.handleRequest(restRequest, restChannel, client);
 
-            final RestResponse restResponse = responseSetOnce.get();
-            assertNotNull(restResponse);
-            assertThat(restResponse.status(), is(RestStatus.OK));
-            final GetApiKeyResponse actual = GetApiKeyResponse
-                .fromXContent(createParser(XContentType.JSON.xContent(), restResponse.content()));
-            if (isGetRequestForOwnedKeysOnly) {
-                assertThat(actual.getApiKeyInfos().length, is(1));
-                assertThat(actual.getApiKeyInfos(),
-                    arrayContaining(apiKey1));
-            } else {
-                assertThat(actual.getApiKeyInfos().length, is(2));
-                assertThat(actual.getApiKeyInfos(),
-                    arrayContaining(apiKey1, apiKey2));
-            }
+        final RestResponse restResponse = responseSetOnce.get();
+        assertNotNull(restResponse);
+        assertThat(restResponse.status(), is(RestStatus.OK));
+        final GetApiKeyResponse actual = GetApiKeyResponse.fromXContent(createParser(XContentType.JSON.xContent(), restResponse.content()));
+        if (isGetRequestForOwnedKeysOnly) {
+            assertThat(
+                actual.getApiKeyInfoList(),
+                contains(new GetApiKeyResponse.Item(apiKey1, profileUids1 == null ? null : profileUids1.get(0)))
+            );
+        } else {
+            assertThat(
+                actual.getApiKeyInfoList(),
+                contains(
+                    new GetApiKeyResponse.Item(apiKey1, profileUids2 == null ? null : profileUids2.get(0)),
+                    new GetApiKeyResponse.Item(apiKey2, profileUids2 == null ? null : profileUids2.get(1))
+                )
+            );
         }
-
     }
 
-    private static MapBuilder<String, String> mapBuilder() {
-        return MapBuilder.newMapBuilder();
+    private static List<String> randomSize1ProfileUidsList() {
+        final List<String> profileUids;
+        if (randomBoolean()) {
+            if (randomBoolean()) {
+                profileUids = null;
+            } else {
+                profileUids = new ArrayList<>(1);
+                profileUids.add(null);
+            }
+        } else {
+            profileUids = new ArrayList<>(1);
+            profileUids.add(randomAlphaOfLength(8));
+        }
+        return profileUids;
+    }
+
+    private static List<String> randomSize2ProfileUidsList() {
+        final List<String> profileUids2;
+        if (randomBoolean()) {
+            if (randomBoolean()) {
+                profileUids2 = null;
+            } else {
+                profileUids2 = new ArrayList<>(2);
+                profileUids2.add(null);
+                profileUids2.add(null);
+            }
+        } else {
+            profileUids2 = new ArrayList<>(2);
+            if (randomBoolean()) {
+                if (randomBoolean()) {
+                    profileUids2.add(randomAlphaOfLength(8));
+                    profileUids2.add(null);
+                } else {
+                    profileUids2.add(null);
+                    profileUids2.add(randomAlphaOfLength(8));
+                }
+            } else {
+                profileUids2.add(randomAlphaOfLength(8));
+                profileUids2.add(randomAlphaOfLength(8));
+            }
+        }
+        return profileUids2;
+    }
+
+    private ApiKey randomApiKeyInfo(boolean withLimitedBy) {
+        final ApiKey.Type type = randomFrom(ApiKey.Type.values());
+        final Instant creation = Instant.now();
+        final Instant expiration = randomFrom(Arrays.asList(null, Instant.now().plus(10, ChronoUnit.DAYS)));
+        final Map<String, Object> metadata = ApiKeyTests.randomMetadata();
+        final List<RoleDescriptor> roleDescriptors = type == ApiKey.Type.CROSS_CLUSTER
+            ? List.of(randomCrossClusterAccessRoleDescriptor())
+            : randomUniquelyNamedRoleDescriptors(0, 3);
+        final List<RoleDescriptor> limitedByRoleDescriptors = withLimitedBy && type != ApiKey.Type.CROSS_CLUSTER
+            ? randomUniquelyNamedRoleDescriptors(1, 3)
+            : null;
+        return new ApiKey(
+            "api-key-name-" + randomAlphaOfLength(4),
+            "api-key-id-" + randomAlphaOfLength(4),
+            type,
+            creation,
+            expiration,
+            false,
+            null,
+            "user-x",
+            "realm-1",
+            "realm-type-1",
+            metadata,
+            roleDescriptors,
+            limitedByRoleDescriptors
+        );
     }
 }
