@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.transport.filter;
 
@@ -13,14 +14,19 @@ import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.BoundTransportAddress;
 import org.elasticsearch.common.transport.TransportAddress;
+import org.elasticsearch.core.Strings;
 import org.elasticsearch.http.HttpServerTransport;
-import org.elasticsearch.license.XPackLicenseState;
+import org.elasticsearch.license.MockLicenseState;
+import org.elasticsearch.license.TestUtils;
 import org.elasticsearch.node.MockNode;
 import org.elasticsearch.node.Node;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.junit.annotations.Network;
+import org.elasticsearch.transport.RemoteClusterPortSettings;
 import org.elasticsearch.transport.Transport;
 import org.elasticsearch.xpack.security.LocalStateSecurity;
+import org.elasticsearch.xpack.security.Security;
+import org.elasticsearch.xpack.security.audit.AuditTrail;
 import org.elasticsearch.xpack.security.audit.AuditTrailService;
 import org.junit.Before;
 import org.mockito.ArgumentCaptor;
@@ -32,42 +38,55 @@ import java.net.SocketException;
 import java.net.UnknownHostException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.HashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 
+import static org.elasticsearch.transport.RemoteClusterPortSettings.REMOTE_CLUSTER_PROFILE;
+import static org.elasticsearch.transport.RemoteClusterPortSettings.REMOTE_CLUSTER_SERVER_ENABLED;
+import static org.elasticsearch.xpack.security.transport.filter.IPFilter.REMOTE_CLUSTER_FILTER_ALLOW_SETTING;
+import static org.elasticsearch.xpack.security.transport.filter.IPFilter.REMOTE_CLUSTER_FILTER_DENY_SETTING;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
-import static org.mockito.Matchers.eq;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyZeroInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 public class IPFilterTests extends ESTestCase {
     private IPFilter ipFilter;
-    private XPackLicenseState licenseState;
-    private AuditTrailService auditTrail;
+    private MockLicenseState licenseState;
+    private AuditTrail auditTrail;
+    private AuditTrailService auditTrailService;
     private Transport transport;
     private HttpServerTransport httpTransport;
     private ClusterSettings clusterSettings;
 
     @Before
     public void init() {
-        licenseState = mock(XPackLicenseState.class);
-        when(licenseState.isIpFilteringAllowed()).thenReturn(true);
-        auditTrail = mock(AuditTrailService.class);
-        clusterSettings = new ClusterSettings(Settings.EMPTY, new HashSet<>(Arrays.asList(
+        licenseState = TestUtils.newMockLicenceState();
+        when(licenseState.isAllowed(Security.IP_FILTERING_FEATURE)).thenReturn(true);
+        when(licenseState.isAllowed(Security.AUDITING_FEATURE)).thenReturn(true);
+        auditTrail = mock(AuditTrail.class);
+        auditTrailService = new AuditTrailService(auditTrail, licenseState);
+        clusterSettings = new ClusterSettings(
+            Settings.EMPTY,
+            Set.of(
                 IPFilter.HTTP_FILTER_ALLOW_SETTING,
                 IPFilter.HTTP_FILTER_DENY_SETTING,
                 IPFilter.IP_FILTER_ENABLED_HTTP_SETTING,
                 IPFilter.IP_FILTER_ENABLED_SETTING,
                 IPFilter.TRANSPORT_FILTER_ALLOW_SETTING,
                 IPFilter.TRANSPORT_FILTER_DENY_SETTING,
+                IPFilter.REMOTE_CLUSTER_FILTER_ALLOW_SETTING,
+                IPFilter.REMOTE_CLUSTER_FILTER_DENY_SETTING,
                 IPFilter.PROFILE_FILTER_ALLOW_SETTING,
-                IPFilter.PROFILE_FILTER_DENY_SETTING)));
+                IPFilter.PROFILE_FILTER_DENY_SETTING,
+                RemoteClusterPortSettings.REMOTE_CLUSTER_SERVER_ENABLED
+            )
+        );
 
         httpTransport = mock(HttpServerTransport.class);
         TransportAddress httpAddress = new TransportAddress(InetAddress.getLoopbackAddress(), 9200);
@@ -76,21 +95,28 @@ public class IPFilterTests extends ESTestCase {
 
         transport = mock(Transport.class);
         TransportAddress address = new TransportAddress(InetAddress.getLoopbackAddress(), 9300);
-        when(transport.boundAddress()).thenReturn(new BoundTransportAddress(new TransportAddress[]{ address }, address));
+        when(transport.boundAddress()).thenReturn(new BoundTransportAddress(new TransportAddress[] { address }, address));
         when(transport.lifecycleState()).thenReturn(Lifecycle.State.STARTED);
 
-        Map<String, BoundTransportAddress> profileBoundAddresses = Collections.singletonMap("client",
-                new BoundTransportAddress(new TransportAddress[]{ new TransportAddress(InetAddress.getLoopbackAddress(), 9500) },
-                        address));
+        Map<String, BoundTransportAddress> profileBoundAddresses = new HashMap<>();
+        profileBoundAddresses.put(
+            "client",
+            new BoundTransportAddress(new TransportAddress[] { new TransportAddress(InetAddress.getLoopbackAddress(), 9500) }, address)
+        );
+
+        profileBoundAddresses.put(
+            REMOTE_CLUSTER_PROFILE,
+            new BoundTransportAddress(new TransportAddress[] { new TransportAddress(InetAddress.getLoopbackAddress(), 9600) }, address)
+        );
         when(transport.profileBoundAddresses()).thenReturn(profileBoundAddresses);
     }
 
     public void testThatIpV4AddressesCanBeProcessed() throws Exception {
         Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.allow", "127.0.0.1")
-                .put("xpack.security.transport.filter.deny", "10.0.0.0/8")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+            .put("xpack.security.transport.filter.allow", "127.0.0.1")
+            .put("xpack.security.transport.filter.deny", "10.0.0.0/8")
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
         assertAddressIsAllowed("127.0.0.1");
         assertAddressIsDenied("10.2.3.4");
@@ -100,10 +126,10 @@ public class IPFilterTests extends ESTestCase {
         // you have to use the shortest possible notation in order to match, so
         // 1234:0db8:85a3:0000:0000:8a2e:0370:7334 becomes 1234:db8:85a3:0:0:8a2e:370:7334
         Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.allow", "2001:0db8:1234::/48")
-                .putList("xpack.security.transport.filter.deny", "1234:db8:85a3:0:0:8a2e:370:7334", "4321:db8:1234::/48")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+            .put("xpack.security.transport.filter.allow", "2001:0db8:1234::/48")
+            .putList("xpack.security.transport.filter.deny", "1234:db8:85a3:0:0:8a2e:370:7334", "4321:db8:1234::/48")
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
 
         assertAddressIsAllowed("2001:0db8:1234:0000:0000:8a2e:0370:7334");
@@ -114,11 +140,11 @@ public class IPFilterTests extends ESTestCase {
     @Network // requires network for name resolution
     public void testThatHostnamesCanBeProcessed() throws Exception {
         Settings settings = Settings.builder()
-                .put("xpack.ml.autodetect_process", false)
-                .put("xpack.security.transport.filter.allow", "127.0.0.1")
-                .put("xpack.security.transport.filter.deny", "*.google.com")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+            .put("xpack.ml.autodetect_process", false)
+            .put("xpack.security.transport.filter.allow", "127.0.0.1")
+            .put("xpack.security.transport.filter.deny", "*.google.com")
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
 
         assertAddressIsAllowed("127.0.0.1");
@@ -126,10 +152,8 @@ public class IPFilterTests extends ESTestCase {
     }
 
     public void testThatAnAllowAllAuthenticatorWorks() throws Exception {
-        Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.allow", "_all")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+        Settings settings = Settings.builder().put("xpack.security.transport.filter.allow", "_all").build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
         assertAddressIsAllowed("127.0.0.1");
         assertAddressIsAllowed("173.194.70.100");
@@ -137,12 +161,12 @@ public class IPFilterTests extends ESTestCase {
 
     public void testThatProfilesAreSupported() throws Exception {
         Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.allow", "localhost")
-                .put("xpack.security.transport.filter.deny", "_all")
-                .put("transport.profiles.client.xpack.security.filter.allow", "192.168.0.1")
-                .put("transport.profiles.client.xpack.security.filter.deny", "_all")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+            .put("xpack.security.transport.filter.allow", "localhost")
+            .put("xpack.security.transport.filter.deny", "_all")
+            .put("transport.profiles.client.xpack.security.filter.allow", "192.168.0.1")
+            .put("transport.profiles.client.xpack.security.filter.deny", "_all")
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
         assertAddressIsAllowed("127.0.0.1");
         // when "localhost" is used, ES considers all local addresses see PatternRule#isLocalhost()
@@ -153,16 +177,17 @@ public class IPFilterTests extends ESTestCase {
 
     public void testThatProfilesAreUpdateable() throws Exception {
         Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.allow", "localhost")
-                .put("xpack.security.transport.filter.deny", "_all")
-                .put("transport.profiles.client.xpack.security.filter.allow", "192.168.0.1")
-                .put("transport.profiles.client.xpack.security.filter.deny", "_all")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+            .put("xpack.security.transport.filter.allow", "localhost")
+            .put("xpack.security.transport.filter.deny", "_all")
+            .put("transport.profiles.client.xpack.security.filter.allow", "192.168.0.1")
+            .put("transport.profiles.client.xpack.security.filter.deny", "_all")
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
-        Settings newSettings = Settings.builder().putList("transport.profiles.client.xpack.security.filter.allow", "192.168.0.1",
-                "192.168.0.2")
-                .put("transport.profiles.client.xpack.security.filter.deny", "192.168.0.3").build();
+        Settings newSettings = Settings.builder()
+            .putList("transport.profiles.client.xpack.security.filter.allow", "192.168.0.1", "192.168.0.2")
+            .put("transport.profiles.client.xpack.security.filter.deny", "192.168.0.3")
+            .build();
         Settings.Builder updatedSettingsBuilder = Settings.builder();
         clusterSettings.updateDynamicSettings(newSettings, updatedSettingsBuilder, Settings.builder(), "test");
         clusterSettings.applySettings(updatedSettingsBuilder.build());
@@ -175,10 +200,10 @@ public class IPFilterTests extends ESTestCase {
 
     public void testThatAllowWinsOverDeny() throws Exception {
         Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.allow", "10.0.0.1")
-                .put("xpack.security.transport.filter.deny", "10.0.0.0/8")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+            .put("xpack.security.transport.filter.allow", "10.0.0.1")
+            .put("xpack.security.transport.filter.deny", "10.0.0.0/8")
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
         assertAddressIsAllowed("10.0.0.1");
         assertAddressIsDenied("10.0.0.2");
@@ -186,7 +211,7 @@ public class IPFilterTests extends ESTestCase {
 
     public void testDefaultAllow() throws Exception {
         Settings settings = Settings.builder().build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
         assertAddressIsAllowed("10.0.0.1");
         assertAddressIsAllowed("10.0.0.2");
@@ -194,12 +219,12 @@ public class IPFilterTests extends ESTestCase {
 
     public void testThatHttpWorks() throws Exception {
         Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.allow", "127.0.0.1")
-                .put("xpack.security.transport.filter.deny", "10.0.0.0/8")
-                .put("xpack.security.http.filter.allow", "10.0.0.0/8")
-                .put("xpack.security.http.filter.deny", "192.168.0.1")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+            .put("xpack.security.transport.filter.allow", "127.0.0.1")
+            .put("xpack.security.transport.filter.deny", "10.0.0.0/8")
+            .put("xpack.security.http.filter.allow", "10.0.0.0/8")
+            .put("xpack.security.http.filter.deny", "192.168.0.1")
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundHttpTransportAddress(httpTransport.boundAddress());
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
         assertAddressIsAllowedForProfile(IPFilter.HTTP_PROFILE_NAME, "10.2.3.4");
@@ -208,10 +233,10 @@ public class IPFilterTests extends ESTestCase {
 
     public void testThatHttpFallsbackToDefault() throws Exception {
         Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.allow", "127.0.0.1")
-                .put("xpack.security.transport.filter.deny", "10.0.0.0/8")
-                .build();
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+            .put("xpack.security.transport.filter.allow", "127.0.0.1")
+            .put("xpack.security.transport.filter.deny", "10.0.0.0/8")
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundHttpTransportAddress(httpTransport.boundAddress());
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
 
@@ -227,12 +252,13 @@ public class IPFilterTests extends ESTestCase {
 
         Settings settings;
         if (randomBoolean()) {
-            settings = Settings.builder().putList("xpack.security.transport.filter.deny",
-                    addressStrings.toArray(new String[addressStrings.size()])).build();
+            settings = Settings.builder()
+                .putList("xpack.security.transport.filter.deny", addressStrings.toArray(new String[addressStrings.size()]))
+                .build();
         } else {
             settings = Settings.builder().put("xpack.security.transport.filter.deny", "_all").build();
         }
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
         ipFilter.setBoundHttpTransportAddress(httpTransport.boundAddress());
 
@@ -243,65 +269,124 @@ public class IPFilterTests extends ESTestCase {
     }
 
     public void testThatAllAddressesAreAllowedWhenLicenseDisablesSecurity() {
-        Settings settings = Settings.builder()
-                .put("xpack.security.transport.filter.deny", "_all")
-                .build();
-        when(licenseState.isIpFilteringAllowed()).thenReturn(false);
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+        Settings settings = Settings.builder().put("xpack.security.transport.filter.deny", "_all").build();
+        when(licenseState.isAllowed(Security.IP_FILTERING_FEATURE)).thenReturn(false);
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
 
         // don't use the assert helper because we don't want the audit trail to be invoked here
-        String message = String.format(Locale.ROOT, "Expected address %s to be allowed", "8.8.8.8");
+        String message = Strings.format("Expected address %s to be allowed", "8.8.8.8");
         InetAddress address = InetAddresses.forString("8.8.8.8");
         assertThat(message, ipFilter.accept("default", new InetSocketAddress(address, 0)), is(true));
-        verifyZeroInteractions(auditTrail);
+        verifyNoMoreInteractions(auditTrail);
 
         // for sanity enable license and check that it is denied
-        when(licenseState.isIpFilteringAllowed()).thenReturn(true);
-        ipFilter = new IPFilter(settings, auditTrail, clusterSettings, licenseState);
+        when(licenseState.isAllowed(Security.IP_FILTERING_FEATURE)).thenReturn(true);
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
         ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
 
         assertAddressIsDeniedForProfile("default", "8.8.8.8");
     }
 
+    @AwaitsFix(bugUrl = "https://github.com/elastic/elasticsearch/issues/62298")
     public void testThatNodeStartsWithIPFilterDisabled() throws Exception {
         Settings settings = Settings.builder()
-                .put("path.home", createTempDir())
-                .put("xpack.security.transport.filter.enabled", randomBoolean())
-                .put("xpack.security.http.filter.enabled", randomBoolean())
-                .build();
+            .put("path.home", createTempDir())
+            .put("xpack.security.transport.filter.enabled", randomBoolean())
+            .put("xpack.security.http.filter.enabled", randomBoolean())
+            .build();
         try (Node node = new MockNode(settings, Arrays.asList(LocalStateSecurity.class))) {
             assertNotNull(node);
         }
     }
 
-    private void assertAddressIsAllowedForProfile(String profile, String ... inetAddresses) {
+    public void testRemoteAccessCanBeFilteredSeparately() throws Exception {
+        Settings settings = Settings.builder()
+            .put("xpack.security.transport.filter.allow", "192.168.0.2")
+            .put("xpack.security.transport.filter.deny", "192.168.0.1")
+            .put("xpack.security.remote_cluster.filter.allow", "192.168.0.1")
+            .put("xpack.security.remote_cluster.filter.deny", "_all")
+            .put(REMOTE_CLUSTER_SERVER_ENABLED.getKey(), true)
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
+        ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
+        assertAddressIsAllowed("192.168.0.2");
+        assertAddressIsDenied("192.168.0.1");
+        assertAddressIsAllowedForProfile(REMOTE_CLUSTER_PROFILE, "192.168.0.1");
+        assertAddressIsDeniedForProfile(REMOTE_CLUSTER_PROFILE, randomNonLocalIPv4Address());
+    }
+
+    /**
+     * Checks that if the Remote Cluster port is enabled, it uses the IP filters configured for transport in general if the specific
+     * remote_cluster filters are not set.
+     */
+    public void testThatRemoteAccessFallsBackToDefault() throws Exception {
+        Settings settings = Settings.builder()
+            .put("xpack.security.transport.filter.allow", "192.168.0.1")
+            .put("xpack.security.transport.filter.deny", "_all")
+            .put(REMOTE_CLUSTER_SERVER_ENABLED.getKey(), true)
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
+        ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
+        assertAddressIsDenied(randomNonLocalIPv4Address());
+        assertAddressIsAllowedForProfile(REMOTE_CLUSTER_PROFILE, "192.168.0.1");
+        assertAddressIsDeniedForProfile(REMOTE_CLUSTER_PROFILE, randomNonLocalIPv4Address());
+    }
+
+    /**
+     * This test is very similar to {@link #testThatProfilesAreUpdateable()}, but specifically checks the remote cluster port settings.
+     */
+    public void testThatRemoteAccessIsUpdateable() throws Exception {
+        Settings settings = Settings.builder()
+            .put("xpack.security.transport.filter.allow", "localhost")
+            .put("xpack.security.transport.filter.deny", "_all")
+            .put(REMOTE_CLUSTER_FILTER_ALLOW_SETTING.getKey(), "192.168.0.1")
+            .put(REMOTE_CLUSTER_FILTER_DENY_SETTING.getKey(), "_all")
+            .put(REMOTE_CLUSTER_SERVER_ENABLED.getKey(), true)
+            .build();
+        ipFilter = new IPFilter(settings, auditTrailService, clusterSettings, licenseState);
+        ipFilter.setBoundTransportAddress(transport.boundAddress(), transport.profileBoundAddresses());
+        Settings newSettings = Settings.builder()
+            .putList(REMOTE_CLUSTER_FILTER_ALLOW_SETTING.getKey(), "192.168.0.1", "192.168.0.2")
+            .put(REMOTE_CLUSTER_FILTER_DENY_SETTING.getKey(), "192.168.0.3")
+            .build();
+        Settings.Builder updatedSettingsBuilder = Settings.builder();
+        clusterSettings.updateDynamicSettings(newSettings, updatedSettingsBuilder, Settings.builder(), "test");
+        clusterSettings.applySettings(updatedSettingsBuilder.build());
+        assertAddressIsAllowed("127.0.0.1");
+        // when "localhost" is used, ES considers all local addresses see PatternRule#isLocalhost()
+        assertAddressIsDenied(randomNonLocalIPv4Address());
+        assertAddressIsAllowedForProfile(REMOTE_CLUSTER_PROFILE, "192.168.0.1", "192.168.0.2");
+        assertAddressIsDeniedForProfile(REMOTE_CLUSTER_PROFILE, "192.168.0.3");
+    }
+
+    private void assertAddressIsAllowedForProfile(String profile, String... inetAddresses) {
         for (String inetAddress : inetAddresses) {
-            String message = String.format(Locale.ROOT, "Expected address %s to be allowed", inetAddress);
-            InetAddress address = InetAddresses.forString(inetAddress);
-            assertTrue(message, ipFilter.accept(profile, new InetSocketAddress(address, 0)));
+            String message = Strings.format("Expected address %s to be allowed", inetAddress);
+            InetSocketAddress address = new InetSocketAddress(InetAddresses.forString(inetAddress), 0);
+            assertTrue(message, ipFilter.accept(profile, address));
             ArgumentCaptor<SecurityIpFilterRule> ruleCaptor = ArgumentCaptor.forClass(SecurityIpFilterRule.class);
             verify(auditTrail).connectionGranted(eq(address), eq(profile), ruleCaptor.capture());
             assertNotNull(ruleCaptor.getValue());
         }
     }
 
-    private void assertAddressIsAllowed(String ... inetAddresses) {
+    private void assertAddressIsAllowed(String... inetAddresses) {
         assertAddressIsAllowedForProfile("default", inetAddresses);
     }
 
-    private void assertAddressIsDeniedForProfile(String profile, String ... inetAddresses) {
+    private void assertAddressIsDeniedForProfile(String profile, String... inetAddresses) {
         for (String inetAddress : inetAddresses) {
-            String message = String.format(Locale.ROOT, "Expected address %s to be denied", inetAddress);
-            InetAddress address = InetAddresses.forString(inetAddress);
-            assertFalse(message, ipFilter.accept(profile, new InetSocketAddress(address, 0)));
+            String message = Strings.format("Expected address %s to be denied", inetAddress);
+            InetSocketAddress address = new InetSocketAddress(InetAddresses.forString(inetAddress), 0);
+            assertFalse(message, ipFilter.accept(profile, address));
             ArgumentCaptor<SecurityIpFilterRule> ruleCaptor = ArgumentCaptor.forClass(SecurityIpFilterRule.class);
             verify(auditTrail).connectionDenied(eq(address), eq(profile), ruleCaptor.capture());
             assertNotNull(ruleCaptor.getValue());
         }
     }
 
-    private void assertAddressIsDenied(String ... inetAddresses) {
+    private void assertAddressIsDenied(String... inetAddresses) {
         assertAddressIsDeniedForProfile("default", inetAddresses);
     }
 
